--- a/_columns/Stock_Of_the_Day/zh-cn/2024-09-19.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-09-19.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Boeing Supplier, IBD Stock Of The Day, Breaks Out As Profit Margins Ratchet Up	波音供应商 IBD 今日最佳股票，随着利润率上升而暴涨
+  Boeing Supplier, IBD Stock Of The Day, Breaks Out As Profit Margins Ratchet Up
 image: /assets/img/stock-of-the-day/2024-09-19.jpg
 date: 2024-09-19 14:38 -0700
 author: JED GRAHAM
@@ -12,109 +12,88 @@ author: JED GRAHAM
 
 
 
-**Moog** ([MOGA](https://research.investors.com/quote.aspx?symbol=MOGA)) — a supplier to **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)), **Airbus** ([EADSY](https://research.investors.com/quote.aspx?symbol=EADSY)) and **Lockheed Martin** ([LMT](https://research.investors.com/quote.aspx?symbol=LMT)) — is Thursday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the aerospace and defense stock that long flew under the radar has turned into a first-class ticket. Moog's ascent, after five years of going nowhere, really began after management unveiled a plan to elevate margins at a June 2023 investor day.  
-**穆格** （[MOGA）](https://research.investors.com/quote.aspx?symbol=MOGA) — **波音** （[BA）、](https://research.investors.com/quote.aspx?symbol=BA)**空客** （[EADSY](https://research.investors.com/quote.aspx?symbol=EADSY)） 和**洛克希德马丁** （[LMT](https://research.investors.com/quote.aspx?symbol=LMT)） 的供应商 — 是周四的 [IBD 今日 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为长期以来一直低调飞行的航空航天和国防股票已经变成了头等舱机票。在五年一无所获之后，穆格的崛起真正开始于管理层在 2023 年 6 月的投资者日上公布了一项提高利润率的计划。
+**Moog** ([MOGA](https://research.investors.com/quote.aspx?symbol=MOGA)) — a supplier to **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)), **Airbus** ([EADSY](https://research.investors.com/quote.aspx?symbol=EADSY)) and **Lockheed Martin** ([LMT](https://research.investors.com/quote.aspx?symbol=LMT)) — is Thursday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the aerospace and defense stock that long flew under the radar has turned into a first-class ticket. Moog's ascent, after five years of going nowhere, really began after management unveiled a plan to elevate margins at a June 2023 investor day.
 
 
 
 
-Moog Business 穆格商业
-------------------
+Moog Business
+-------------
 
 
-In reporting fiscal third-quarter results on Aug. 2, Moog bumped up its full-year outlook. It forecast 8% sales growth to $3.575 billion and a 20% EPS gain to $7.40. Its outlook for adjusted operating margin expanded by 150 basis points to 12.4%.  
-在 8 月 2 日公布的第三财季业绩中，穆格上调了全年展望。它预测销售额增长 8% 至 35.75 亿美元，每股收益增长 20% 至 7.40 美元。其调整后营业利润率的预期扩大了 150 个基点至 12.4%。
+In reporting fiscal third-quarter results on Aug. 2, Moog bumped up its full-year outlook. It forecast 8% sales growth to $3.575 billion and a 20% EPS gain to $7.40. Its outlook for adjusted operating margin expanded by 150 basis points to 12.4%.
 
 
-About 50% of sales come from space and defense, including military aircraft, with 20% coming from supplying commercial aircraft. The final 30% of sales come from industrial and medical industries.  
-大约 50% 的销售额来自太空和国防，包括军用飞机，其中 20% 来自商用飞机的供应。最后 30% 的销售额来自工业和医疗行业。
+About 50% of sales come from space and defense, including military aircraft, with 20% coming from supplying commercial aircraft. The final 30% of sales come from industrial and medical industries.
 
 
-Moog supplies advanced primary flight controls on the most modern military aircraft. That includes the Lockheed Martin F-35 Lightning II and the Future Long Range Assault Aircraft program, or FLRAA.  
-穆格为最现代化的军用飞机提供先进的初级飞行控制。这包括洛克希德马丁 F-35 闪电 II 和未来远程攻击机计划 （FLRAA）。
+Moog supplies advanced primary flight controls on the most modern military aircraft. That includes the Lockheed Martin F-35 Lightning II and the Future Long Range Assault Aircraft program, or FLRAA.
 
 
-Speaking at a recent Gabelli investors conference, CEO Patrick Roche explained, "FLRAA is an aircraft that can take off as a helicopter and then fly as a plane. So it has actuation that allows it to tilt the rotors." He added: "So it's got a pretty complex set of systems in there. And we're involved in all of those control systems."  
-在最近的 Gabelli 投资者会议上，首席执行官 Patrick Roche 解释说：“FLRAA 是一种可以作为直升机起飞，然后作为飞机飞行的飞机。因此，它具有驱动功能，可以倾斜转子。他补充说：“所以它有一套相当复杂的系统。我们参与了所有这些控制系统。
+Speaking at a recent Gabelli investors conference, CEO Patrick Roche explained, "FLRAA is an aircraft that can take off as a helicopter and then fly as a plane. So it has actuation that allows it to tilt the rotors." He added: "So it's got a pretty complex set of systems in there. And we're involved in all of those control systems."
 
 
-Moog also supplies primary flight controls for the Boeing 787 and Airbus A350 widebody aircraft, as well as business and regional jets from **Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) and Gulfstream, owned by **General Dynamics** ([GD](https://research.investors.com/quote.aspx?symbol=GD)).  
-穆格还为波音 787 和空客 A350 宽体飞机以及**通用动力** （[GD）](https://research.investors.com/quote.aspx?symbol=GD) 旗下的**巴西航空工业**公司 （[ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)） 和湾流的公务机和支线喷气式飞机提供主要飞行控制。
+Moog also supplies primary flight controls for the Boeing 787 and Airbus A350 widebody aircraft, as well as business and regional jets from **Embraer** ([ERJ](https://research.investors.com/quote.aspx?symbol=ERJ)) and Gulfstream, owned by **General Dynamics** ([GD](https://research.investors.com/quote.aspx?symbol=GD)).
 
 
-Boeing Supplier Levels Up Margins波音供应商提高利润率
--------------------------------------------
+Boeing Supplier Levels Up Margins
+---------------------------------
 
 
-Moog laid out a plan at the June 2023 investor day to improve operating margins by 100 basis points a year, from 10% to 13%. The strategy combined pricing — a new focus on exacting price increases from customers where possible — and simplification. The latter includes a focus on the 80/20 rule that 20% of actions produce 80% of results.  
-穆格在 2023 年 6 月的投资者日上制定了一项计划，将营业利润率每年提高 100 个基点，从 10% 提高到 13%。该策略结合了定价（在可能的情况下向客户严格提高价格的新重点）和简化。后者包括对 80/20 规则的关注，即 20% 的操作产生 80% 的结果。
+Moog laid out a plan at the June 2023 investor day to improve operating margins by 100 basis points a year, from 10% to 13%. The strategy combined pricing — a new focus on exacting price increases from customers where possible — and simplification. The latter includes a focus on the 80/20 rule that 20% of actions produce 80% of results.
 
 
-Roche explained at a Morgan Stanley Aerospace and Defense conference on Sept. 12 that his firm is reshaping its portfolio and "pruning" businesses that don't yield synergies and fit its strategic alignment.  
-罗氏在 9 月 12 日的摩根士丹利航空航天和国防会议上解释说，他的公司正在重塑其投资组合，并“修剪”那些不能产生协同效应且不符合其战略调整的业务。
+Roche explained at a Morgan Stanley Aerospace and Defense conference on Sept. 12 that his firm is reshaping its portfolio and "pruning" businesses that don't yield synergies and fit its strategic alignment.
 
 
-Once-In-A-Generation Opportunities千载难逢的机会
------------------------------------------
+Once-In-A-Generation Opportunities
+----------------------------------
 
 
-Roche said at the Morgan Stanley conference that Moog also is selectively investing in "once in a generation" opportunities.  
-罗氏在摩根士丹利会议上表示，穆格也在选择性地投资于“一代人一次”的机会。
+Roche said at the Morgan Stanley conference that Moog also is selectively investing in "once in a generation" opportunities.
 
 
-The company's four major platforms are the 787, A350, Joint Strike Fighter (F-35 Lightning II) and Reconfigurable Integrated-weapons Platform for ground-combat vehicles, Roche said. "I look forward positively to maybe in the late 2020s, early 2030s, where we would have another handful of such significant programs for us because we have that type of activity going on today within the organization."  
-罗奇表示，该公司的四个主要平台是 787、A350、联合攻击战斗机 （F-35 Lightning II） 和用于地面作战车辆的可重构集成武器平台。“我非常期待在 2020 年代末、2030 年代初，届时我们将再有少数如此重要的计划，因为我们今天在组织内正在进行这种类型的活动。”
+The company's four major platforms are the 787, A350, Joint Strike Fighter (F-35 Lightning II) and Reconfigurable Integrated-weapons Platform for ground-combat vehicles, Roche said. "I look forward positively to maybe in the late 2020s, early 2030s, where we would have another handful of such significant programs for us because we have that type of activity going on today within the organization."
 
 
-MOGA Stock MOGA 股票
-------------------
+MOGA Stock
+----------
 
 
-Moog rose 2.3% to 203.58 in Thursday [stock market action](https://www.investors.com/news/stock-market-today-stock-market-news/). The move carried the aerospace and defense stock past a 200.92 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a seven-week consolidation, according to a [MarketSurge](https://marketsurge.investors.com/) analysis. Arguably, Moog stock was actionable Wednesday when it cleared the Aug. 30 short-term high of 197.73.  
-穆格在周四[的股市行动](https://www.investors.com/news/stock-market-today-stock-market-news/)中上涨 2.3% 至 203.58。根据 [MarketSurge](https://marketsurge.investors.com/) 的分析，此举使航空航天和国防股在为期 7 周的盘整中突破了 200.92 [的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)。可以说，穆格股票周三突破了 8 月 30 日的短期高点 197.73 点。
+Moog rose 2.3% to 203.58 in Thursday [stock market action](https://www.investors.com/news/stock-market-today-stock-market-news/). The move carried the aerospace and defense stock past a 200.92 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a seven-week consolidation, according to a [MarketSurge](https://marketsurge.investors.com/) analysis. Arguably, Moog stock was actionable Wednesday when it cleared the Aug. 30 short-term high of 197.73.
 
 
-MOGA has doubled since the June 2023 investor meeting.  
-自 2023 年 6 月投资者会议以来，MOGA 已经翻了一番。
+MOGA has doubled since the June 2023 investor meeting.
 
 
-The stock carries a 96 IBD Composite rating out of a possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/). The rating combines a range of fundamental and technical factors.  
-根据 [IBD Stock Checkup](https://research.investors.com/stock-checkup/) 的数据，该股票的 IBD 综合评级为 96 分（满分 99 分）。该评级结合了一系列基本面和技术因素。
+The stock carries a 96 IBD Composite rating out of a possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/). The rating combines a range of fundamental and technical factors.
 
 
-Moog, Boeing, Lockheed Martin, Airbus, Embraer and General Dynamics are all part of the Aerospace/Defense group. That's ranked 21 out of 197 industry groups.  
-穆格、波音、洛克希德马丁、空客、巴西航空工业公司和通用动力公司都隶属于航空航天/国防集团。这在 197 个行业组中排名第 21 位。
+Moog, Boeing, Lockheed Martin, Airbus, Embraer and General Dynamics are all part of the Aerospace/Defense group. That's ranked 21 out of 197 industry groups.
 
 
-Be sure to read IBD's [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) column after each trading day to get the latest on the prevailing stock market trend and what it means for your trading decisions.  
-请务必在每个交易日后阅读 IBD 的 [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) 专栏，以了解当前股市趋势的最新信息及其对您的交易决策意味着什么。
+Be sure to read IBD's [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) column after each trading day to get the latest on the prevailing stock market trend and what it means for your trading decisions.
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:**
 
 
-[These Are The Best 5 Stocks To Buy And Watch Now  
-这些是最适合立即购买和观看的 5 只股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Best 5 Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
-IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[AI News: Artificial Intelligence Trends and Top AI Stocks To Watch  
-AI News：人工智能趋势和值得关注的顶级 AI 股票](https://www.investors.com/news/technology/ai-stocks-artificial-intelligence-trends-and-news/)
+[AI News: Artificial Intelligence Trends and Top AI Stocks To Watch](https://www.investors.com/news/technology/ai-stocks-artificial-intelligence-trends-and-news/)
 
 
-[Here's What Fed Rate Cuts Historically Mean For The S&P 500  
-以下是美联储降息对标准普尔 500 指数的历史意义](https://www.investors.com/news/fed-rate-cut-sp-500-record-high-history-easing-cycles/)
+[Here's What Fed Rate Cuts Historically Mean For The S&P 500](https://www.investors.com/news/fed-rate-cut-sp-500-record-high-history-easing-cycles/)
 
 
-[Stocks Soar With This Notable Shift. Meta, Tesla Lead Slew Of New Buys.  
-股票随着这一显着转变而飙升。Meta、特斯拉领跑大量新买家。](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stock-market-soars-with-meta-apple-tesla-nvidia-buys-note-this-key-shift/)
+[Stocks Soar With This Notable Shift. Meta, Tesla Lead Slew Of New Buys.](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stock-market-soars-with-meta-apple-tesla-nvidia-buys-note-this-key-shift/)
 
 
 
