--- a/_columns/Stock_Of_the_Day/zh-cn/2024-09-23.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-09-23.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Vista Energy, IBD Stock Of The Day, Outperforms A Warren Buffett Favorite Despite Stalling Oil Prices	尽管油价停滞不前，但 IBD 今日股票 Vista Energy 的表现优于沃伦·巴菲特 （Warren Buffett） 的最爱
+  Vista Energy, IBD Stock Of The Day, Outperforms A Warren Buffett Favorite Despite Stalling Oil Prices
 image: /assets/img/stock-of-the-day/2024-09-23.jpg
 date: 2024-09-23 16:05 -0700
 author: KIT NORTON
@@ -12,110 +12,86 @@ author: KIT NORTON
 
 
 
-**Vista Energy** ([VIST](https://research.investors.com/quote.aspx?symbol=VIST)) is Monday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/), as the Latin American oil and gas producer moved above a buy point even as U.S. and international oil prices remain stunted.  
-**Vista Energy** （[VIST](https://research.investors.com/quote.aspx?symbol=VIST)） 是周一的 [IBD 今日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为尽管美国和国际油价仍然低迷，但这家拉丁美洲石油和天然气生产商仍高于买入点。
+**Vista Energy** ([VIST](https://research.investors.com/quote.aspx?symbol=VIST)) is Monday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/), as the Latin American oil and gas producer moved above a buy point even as U.S. and international oil prices remain stunted.
 
 
-The Mexico-based company focuses on oil production, which tends to have better economics than natural gas. It has substantial exposure to Argentina's Vaca Muerta field, the largest shale oil and gas play under development outside North America. Vista Energy has a strong project pipeline, according to analysts, with a current inventory of 1,150 wells.  
-这家总部位于墨西哥的公司专注于石油生产，石油生产往往比天然气具有更好的经济效益。该公司对阿根廷的Vaca Muerta油田有大量敞口，该油田是北美以外正在开发的最大的页岩油气田。据分析师称，Vista Energy 拥有强大的项目管道，目前库存为 1,150 口井。
+The Mexico-based company focuses on oil production, which tends to have better economics than natural gas. It has substantial exposure to Argentina's Vaca Muerta field, the largest shale oil and gas play under development outside North America. Vista Energy has a strong project pipeline, according to analysts, with a current inventory of 1,150 wells.
 
 
-Since posting consecutive annual losses in 2019 and 2020, Vista Energy has seen yearly profit grow more than 900%, from 40 cents per share in 2021 to $4.17 per share in 2023. Analyst consensus has 2024 EPS totaling $5.36 and growing another 90% to $8.11 by 2026, according to FactSet.  
-自 2019 年和 2020 年连续出现年度亏损以来，Vista Energy 的年利润增长超过 900%，从 2021 年的每股 40 美分增长到 2023 年的每股 4.17 美元。根据 FactSet 的数据，分析师一致认为 2024 年的每股收益总额为 5.36 美元，到 2026 年将再增长 90% 至 8.11 美元。
+Since posting consecutive annual losses in 2019 and 2020, Vista Energy has seen yearly profit grow more than 900%, from 40 cents per share in 2021 to $4.17 per share in 2023. Analyst consensus has 2024 EPS totaling $5.36 and growing another 90% to $8.11 by 2026, according to FactSet.
 
 
-Vista Energy shares have their primary list on the Mexican Stock Exchange. They trade as American depositary receipts, or ADRs, on the New York Stock Exchange.  
-Vista Energy 股票在墨西哥证券交易所上市。它们在纽约证券交易所作为美国存托凭证 （ADR） 进行交易。
+Vista Energy shares have their primary list on the Mexican Stock Exchange. They trade as American depositary receipts, or ADRs, on the New York Stock Exchange.
 
 
 
 
-Last week, Bank of America dropped its VIST price target to 68, down from 70, as the firm lowered its 2025 Brent forecast to $75 per barrel from its previous view of $80 per barrel. Bank of America in late August initiated coverage of VIST with a buy rating and a price target of 70, pointing to the company's presence in Vaca Muerta as a major positive.  
-上周，美国银行将其 VIST 目标价从 70 下调至 68，因为该公司将 2025 年布伦特原油预测从之前的观点每桶 80 美元下调至每桶 75 美元。美国银行 （Bank of America） 于 8 月下旬开始对 VIST 进行报道，评级为买入，目标价为 70，指出该公司在 Vaca Muerta 的存在是一个重大的积极因素。
+Last week, Bank of America dropped its VIST price target to 68, down from 70, as the firm lowered its 2025 Brent forecast to $75 per barrel from its previous view of $80 per barrel. Bank of America in late August initiated coverage of VIST with a buy rating and a price target of 70, pointing to the company's presence in Vaca Muerta as a major positive.
 
 
-Meanwhile, JPMorgan analyst Rodolfo Angele on Aug. 2o also initiated coverage of Vista Energy with an overweight rating and 68 price target.  
-与此同时，摩根大通分析师 Rodolfo Angele 在 8 月 2o 日也开始对 Vista Energy 进行报道，给予增持评级和 68 的目标价。
+Meanwhile, JPMorgan analyst Rodolfo Angele on Aug. 2o also initiated coverage of Vista Energy with an overweight rating and 68 price target.
 
 
-U.S. oil prices fell less than 1% Monday to around $70.68 per barrel. Meanwhile, Brent futures, the international benchmark, declined about 0.5% to $74.14 per barrel.  
-美国油价周一下跌不到 1%，至每桶 70.68 美元左右。与此同时，国际基准布伦特原油期货下跌约 0.5% 至每桶 74.14 美元。
+U.S. oil prices fell less than 1% Monday to around $70.68 per barrel. Meanwhile, Brent futures, the international benchmark, declined about 0.5% to $74.14 per barrel.
 
 
-Both U.S. and Brent oil prices are down nearly 20% in 2024 and have declined more than 8% in September.  
-美国和布伦特原油价格在 2024 年均下跌了近 20%，9 月份下跌了 8% 以上。
+Both U.S. and Brent oil prices are down nearly 20% in 2024 and have declined more than 8% in September.
 
 
-U.S. natural gas prices on Monday traded around $2.59 per British thermal unit, down 22% in 2024 but up more than 20% on the month.  
-周一，美国天然气价格约为每英热单位 2.59 美元，2024 年下跌 22%，但当月上涨超过 20%。
+U.S. natural gas prices on Monday traded around $2.59 per British thermal unit, down 22% in 2024 but up more than 20% on the month.
 
 
-Vista Energy Stock PerformanceVista Energy Stock表现
---------------------------------------------------
+Vista Energy Stock Performance
+------------------------------
 
 
-VIST ADRs edged up 0.3% to 47.54, hitting 49.60 intraday, during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Monday. The stock rebounded off its 50-day moving average, moving above a 48.17 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), the high from Sept. 16, according to [MarketSurge chart analysis](https://marketsurge.investors.com/).  
-在周一[的市场交易](https://www.investors.com/category/market-trend/stock-market-today/)中，VIST ADR 小幅上涨 0.3% 至 47.54，盘中触及 49.60。根据 [MarketSurge 图表分析](https://marketsurge.investors.com/)，该股从 50 天移动平均线反弹，升至 48.17 买入点上方，这是 9 月 16 日以来的高点。
+VIST ADRs edged up 0.3% to 47.54, hitting 49.60 intraday, during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Monday. The stock rebounded off its 50-day moving average, moving above a 48.17 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), the high from Sept. 16, according to [MarketSurge chart analysis](https://marketsurge.investors.com/).
 
 
 
-Vista Energy stock is down 7% in September after a nearly 16% gain in August. To date in 2024, Vista Energy has surged 64% even as the broader [IBD tracked Oil & Gas – International Exploration & Production](https://marketsurge.investors.com/) industry group has declined around 9%.  
-Vista Energy 股票在 8 月份上涨近 16% 后，9 月份下跌 7%。到2024年迄今，Vista Energy已经飙升了64%，尽管更广泛的[IBD追踪石油和天然气 - 国际勘探与生产](https://marketsurge.investors.com/)行业集团已经下降了约9%。
+Vista Energy stock is down 7% in September after a nearly 16% gain in August. To date in 2024, Vista Energy has surged 64% even as the broader [IBD tracked Oil & Gas – International Exploration & Production](https://marketsurge.investors.com/) industry group has declined around 9%.
 
 
-For comparison, **ConocoPhillips** ([COP](https://research.investors.com/quote.aspx?symbol=COP)) has declined 5% while Warren Buffett-backed **Occidental Petroleum** ([OXY](https://research.investors.com/quote.aspx?symbol=OXY)) has fallen 12% in 2024. Vista Energy is also outperforming **Exxon Mobil** ([XOM](https://research.investors.com/quote.aspx?symbol=XOM)) and **Chevron** ([CVX](https://research.investors.com/quote.aspx?symbol=CVX)) this year. XOM has advanced 18% while CVX is trading nearly flat.  
-相比之下，**康菲**石油公司 （[COP）](https://research.investors.com/quote.aspx?symbol=COP) 下跌了 5%，而沃伦·巴菲特支持的**西方石油公司** （[OXY）](https://research.investors.com/quote.aspx?symbol=OXY) 在 2024 年下跌了 12%。Vista Energy 今年的表现也优于**埃克森美孚** （[XOM）](https://research.investors.com/quote.aspx?symbol=XOM) 和**雪佛龙** （[CVX](https://research.investors.com/quote.aspx?symbol=CVX)）。XOM 上涨了 18%，而 CVX 的交易价格几乎持平。
+For comparison, **ConocoPhillips** ([COP](https://research.investors.com/quote.aspx?symbol=COP)) has declined 5% while Warren Buffett-backed **Occidental Petroleum** ([OXY](https://research.investors.com/quote.aspx?symbol=OXY)) has fallen 12% in 2024. Vista Energy is also outperforming **Exxon Mobil** ([XOM](https://research.investors.com/quote.aspx?symbol=XOM)) and **Chevron** ([CVX](https://research.investors.com/quote.aspx?symbol=CVX)) this year. XOM has advanced 18% while CVX is trading nearly flat.
 
 
-On Sunday, Morgan Stanley analyst Bruno Montanari raised the firm's VIST target price to 74, up from the previous 53. This represents 53% upside compared to current trading levels.  
-周日，摩根士丹利分析师布鲁诺·蒙塔纳里 （Bruno Montanari） 将该公司的 VIST 目标价从之前的 53 上调至 74。与当前交易水平相比，这代表了 53% 的上涨空间。
+On Sunday, Morgan Stanley analyst Bruno Montanari raised the firm's VIST target price to 74, up from the previous 53. This represents 53% upside compared to current trading levels.
 
 
-The analyst said the company is Morgan Stanley's "favorite stock to play Argentina energy."  
-这位分析师表示，该公司是摩根士丹利“最喜欢玩阿根廷能源的股票”。
+The analyst said the company is Morgan Stanley's "favorite stock to play Argentina energy."
 
 
-Montanari forecasts that production could grow around 60% in 2025 and 75% in 2026 compared to current production levels.  
-Montanari 预测，与目前的生产水平相比，2025 年的产量可能会增长约 60%，2026 年的产量可能会增长 75% 左右。
+Montanari forecasts that production could grow around 60% in 2025 and 75% in 2026 compared to current production levels.
 
 
-"The main risk associated with Vista's short- to medium-term growth lies in the oil evacuation infrastructure," the analyst wrote. "Vista has contingency plans to deal with new delays by increasing its trucking utilization."  
-“与 Vista 的短期到中期增长相关的主要风险在于石油疏散基础设施，”这位分析师写道。“Vista 制定了应急计划，通过提高卡车运输利用率来应对新的延误。”
+"The main risk associated with Vista's short- to medium-term growth lies in the oil evacuation infrastructure," the analyst wrote. "Vista has contingency plans to deal with new delays by increasing its trucking utilization."
 
 
-"Oil prices and negative macro-political developments are also risk, although not specific to Vista," Montanari added.  
-“油价和负面的宏观政治发展也是风险，尽管并非Vista所特有，”蒙塔纳里补充道。
+"Oil prices and negative macro-political developments are also risk, although not specific to Vista," Montanari added.
 
 
-Vista Energy stock has a 91 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. The stock also has a 91 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 91 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
-Vista Energy 股票的综合[评级](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)为 91 分（最高分 99 分）。该股还具有 91 的[相对强弱评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)和 91 [的 EPS 评级](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)。
+Vista Energy stock has a 91 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. The stock also has a 91 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 91 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
 
 
-*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.  
-请在 X [@KitNorton](https://twitter.com/KitNorton) 上关注 Kit Norton 以获得更多报道。*
+*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.*
 
 
-#### **YOU MAY ALSO LIKE: 您可能还喜欢：**
+#### **YOU MAY ALSO LIKE:**
 
 
-[Is Tesla Stock A Buy Or A Sell?  
-特斯拉股票是买入还是卖出？](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
+[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings  
-获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learning How To Pick Great Stocks? Read Investor's Corner  
-学习如何挑选好股票？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.  
-AI 正在推动“核复兴”。比尔·盖茨 （Bill Gates） 和杰夫·贝佐斯 （Jeff Bezos） 也在其中。](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
+[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
 
 
-[Bulls In Control With Three Titans In Buy Areas; What To Do Now  
-多头控制着，三个巨头在买入区域;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bulls-meta-apple-tesla-in-buy-areas/)
+[Bulls In Control With Three Titans In Buy Areas; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bulls-meta-apple-tesla-in-buy-areas/)
 
 
 
