--- a/_columns/Stock_Of_the_Day/zh-cn/2024-09-26.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-09-26.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  InterDigital, IBD Stock Of The Day, Flirts With Buy Point After Analyst Day	InterDigital，今日 IBD 股票，在分析师日后与 Buy Point 调情
+  InterDigital, IBD Stock Of The Day, Flirts With Buy Point After Analyst Day
 image: /assets/img/stock-of-the-day/2024-09-26.jpg
 date: 2024-09-26 16:17 -0700
 author: PATRICK SEITZ
@@ -12,98 +12,78 @@ author: PATRICK SEITZ
 
 
 
-**InterDigital** ([IDCC](https://research.investors.com/quote.aspx?symbol=IDCC)), a developer of wireless and video technologies, is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Thursday. IDCC stock is flirting with a buy point after the company's recent analyst day.  
-无线和视频技术开发商 **InterDigital** （[IDCC）](https://research.investors.com/quote.aspx?symbol=IDCC) 是周四的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)。IDCC 股票在该公司最近的分析师日之后徘徊在买入点。
+**InterDigital** ([IDCC](https://research.investors.com/quote.aspx?symbol=IDCC)), a developer of wireless and video technologies, is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Thursday. IDCC stock is flirting with a buy point after the company's recent analyst day.
 
 
 
 
-At its Sept. 10 investor day, the Wilmington, Del.-based research and development company outlined its growth strategy and the opportunities ahead. It set targets of $1 billion in annual recurring revenue and $600 million in adjusted earnings by 2030.  
-在 9 月 10 日的投资者日上，这家总部位于特拉华州威尔明顿的研发公司概述了其增长战略和未来的机遇。它设定了到 2030 年实现 10 亿美元的年度经常性收入和 6 亿美元的调整后收益的目标。
+At its Sept. 10 investor day, the Wilmington, Del.-based research and development company outlined its growth strategy and the opportunities ahead. It set targets of $1 billion in annual recurring revenue and $600 million in adjusted earnings by 2030.
 
 
-"In the past four years, we have almost doubled our revenue, improved our execution across the business, and taken multiple steps to enhance shareholder value," Chief Executive Liren Chen said in a [news release](https://www.globenewswire.com/en/news-release/2024/09/16/2946563/24691/en/InterDigital-Announces-Annual-Recurring-Revenue-Target-Of-1-Billion-By-2030.html).  
-“在过去的四年里，我们的收入几乎翻了一番，改善了我们整个业务的执行力，并采取了多项措施来提高股东价值，”首席执行官 Liren Chen 在一份[新闻稿](https://www.globenewswire.com/en/news-release/2024/09/16/2946563/24691/en/InterDigital-Announces-Annual-Recurring-Revenue-Target-Of-1-Billion-By-2030.html)中表示。
+"In the past four years, we have almost doubled our revenue, improved our execution across the business, and taken multiple steps to enhance shareholder value," Chief Executive Liren Chen said in a [news release](https://www.globenewswire.com/en/news-release/2024/09/16/2946563/24691/en/InterDigital-Announces-Annual-Recurring-Revenue-Target-Of-1-Billion-By-2030.html).
 
 
-He added, "Based on our world-class innovation in wireless, video and AI, accelerating momentum across the business, the large addressable markets available to us, and new greenfield opportunities, we believe we are perfectly positioned to deliver significant growth in revenue and profitability in coming years."  
-他补充道：“基于我们在无线、视频和人工智能方面的世界级创新、整个业务的加速发展势头、我们可用的大型潜在市场以及新的绿地机会，我们相信我们完全有能力在未来几年实现收入和盈利能力的显著增长。
+He added, "Based on our world-class innovation in wireless, video and AI, accelerating momentum across the business, the large addressable markets available to us, and new greenfield opportunities, we believe we are perfectly positioned to deliver significant growth in revenue and profitability in coming years."
 
 
-IDCC Stock In Flat BaseIDCC 平底库存
---------------------------------
+IDCC Stock In Flat Base
+-----------------------
 
 
-InterDigital has a portfolio of more than 32,000 patents in wireless, video and artificial intelligence. Its technologies are in smartphones, consumer electronics, automobiles and streaming video services. The company's portfolio has been growing by about five new patents a day.  
-InterDigital 在无线、视频和人工智能方面拥有超过 32,000 项专利。其技术应用于智能手机、消费电子产品、汽车和流媒体视频服务。该公司的产品组合每天增长约 5 项新专利。
+InterDigital has a portfolio of more than 32,000 patents in wireless, video and artificial intelligence. Its technologies are in smartphones, consumer electronics, automobiles and streaming video services. The company's portfolio has been growing by about five new patents a day.
 
 
-Top InterDigital customers include **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), Samsung and Xiaomi.  
-InterDigital 的主要客户包括 **Apple** （[AAPL）、](https://research.investors.com/quote.aspx?symbol=AAPL)三星和小米。
+Top InterDigital customers include **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), Samsung and Xiaomi.
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), IDCC stock rose 1.2% to close at 138.45.  
-[今日股市](https://www.investors.com/news/stock-market-today-stock-market-news/)方面，IDCC 股价上涨 1.2%，收于 138.45。
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), IDCC stock rose 1.2% to close at 138.45.
 
 
-According to [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) charts, IDCC stock is in a [flat base](https://www.investors.com/ibd-university/how-to-buy/common-patterns-3/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/the-best-stocks-have-crystal-clear-buy-points-heres-how-to-identify-them/) of 140.60. It has been flirting with that buy point for the past five trading sessions.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) 图表，IDCC 股票处于[平坦底部](https://www.investors.com/ibd-university/how-to-buy/common-patterns-3/)，[买入点](https://www.investors.com/how-to-invest/investors-corner/the-best-stocks-have-crystal-clear-buy-points-heres-how-to-identify-them/)为 140.60。在过去的五个交易日里，它一直在与那个买入点调情。
+According to [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) charts, IDCC stock is in a [flat base](https://www.investors.com/ibd-university/how-to-buy/common-patterns-3/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/the-best-stocks-have-crystal-clear-buy-points-heres-how-to-identify-them/) of 140.60. It has been flirting with that buy point for the past five trading sessions.
 
 
-In intraday trades on Monday, InterDigital stock notched a record high of 141.  
-在周一的盘中交易中，InterDigital 股票创下 141 点的历史新高。
+In intraday trades on Monday, InterDigital stock notched a record high of 141.
 
 
-'Powerful Business Model'“强大的商业模式”
-----------------------------------
+'Powerful Business Model'
+-------------------------
 
 
-William Blair analyst Arjun Bhatia said InterDigital has "a powerful business model with research at its core."  
-William Blair 分析师 Arjun Bhatia 表示，InterDigital 拥有“以研究为核心的强大商业模式”。
+William Blair analyst Arjun Bhatia said InterDigital has "a powerful business model with research at its core."
 
 
-The smartphone market provides the majority of InterDigital's revenue today, but the company is working to grow more in the consumer electronics and streaming video markets, Bhatia said.  
-Bhatia 表示，智能手机市场提供了 InterDigital 目前的大部分收入，但该公司正在努力在消费电子和流媒体视频市场取得更多增长。
+The smartphone market provides the majority of InterDigital's revenue today, but the company is working to grow more in the consumer electronics and streaming video markets, Bhatia said.
 
 
-Bhatia rates IDCC stock as outperform.  
-Bhatia 将 IDCC 股票评为跑赢大盘。
+Bhatia rates IDCC stock as outperform.
 
 
-"The stock is attractive given the upside potential from new and expanding partnerships in the smartphone market, the medium-term opportunity in consumer electronics, and the long-term opportunity to license to cloud service providers," Bhatia said in a Sept. 11 client note.  
-Bhatia 在 9 月 11 日的一份客户报告中表示：“鉴于智能手机市场新的和不断扩大的合作伙伴关系的上行潜力、消费电子产品的中期机会以及向云服务提供商授权的长期机会，该股具有吸引力。
+"The stock is attractive given the upside potential from new and expanding partnerships in the smartphone market, the medium-term opportunity in consumer electronics, and the long-term opportunity to license to cloud service providers," Bhatia said in a Sept. 11 client note.
 
 
-IDCC stock is on the [IBD Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-sep-25-2024/) list.  
-IDCC 股票在 [IBD 技术领导者](https://www.investors.com/data-tables/ibd-tech-leaders-sep-25-2024/)名单上。
+IDCC stock is on the [IBD Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-sep-25-2024/) list.
 
 
 
-*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.  
-在 [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) 上关注 Patrick Seitz 的 X（前身为 Twitter），了解有关消费技术、软件和半导体股票的更多故事。*
+*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Microsoft Azure Sales Estimate Lowered As Copilots Slow To Take Off  
-Microsoft Azure 销售预估下调，因为 Copilots 起飞缓慢](https://www.investors.com/news/technology/microsoft-stock-azure-sales-estimate-cut/)
+[Microsoft Azure Sales Estimate Lowered As Copilots Slow To Take Off](https://www.investors.com/news/technology/microsoft-stock-azure-sales-estimate-cut/)
 
 
-[Micron Jumps As Memory-Chip Giant Posts Beat-And-Raise Report  
-美光股价上涨，因为存储芯片巨头发布 Beat-and-Raise 报告](https://www.investors.com/news/technology/mu-stock-micron-technology-fiscal-q4-2024-earnings/)
+[Micron Jumps As Memory-Chip Giant Posts Beat-And-Raise Report](https://www.investors.com/news/technology/mu-stock-micron-technology-fiscal-q4-2024-earnings/)
 
 
-[Netflix Stock In Buy Zone, Gets Price-Target Hike  
-Netflix 股票处于买入区，目标价上调](https://www.investors.com/news/technology/netflix-stock-in-buy-zone-gets-price-target-hike/)
+[Netflix Stock In Buy Zone, Gets Price-Target Hike](https://www.investors.com/news/technology/netflix-stock-in-buy-zone-gets-price-target-hike/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find Today's Best Growth Stocks To Watch With IBD 50  
-寻找今天最值得关注的 IBD 50 成长型股票](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
+[Find Today's Best Growth Stocks To Watch With IBD 50](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
 
 
 
