--- a/_columns/Stock_Of_the_Day/zh-cn/2024-09-30.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-09-30.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  M/I Homes, IBD Stock Of The Day, Eyes Buy Point Amid 47% Rally From July Lows	M/I Homes，今日 IBD 股票，在 7 月低点反弹 47% 的情况下关注买入点
+  M/I Homes, IBD Stock Of The Day, Eyes Buy Point Amid 47% Rally From July Lows
 image: /assets/img/stock-of-the-day/2024-09-30.jpg
 date: 2024-09-30 16:05 -0700
 author: KIT NORTON
@@ -12,26 +12,21 @@ author: KIT NORTON
 
 
 
-**M/I Homes** ([MHO](https://research.investors.com/quote.aspx?symbol=MHO)) is Monday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/), as the homebuilder traded near a buy point in the midst of a nearly 50% advance from recent lows. MHO shares angled up Monday.  
-**M/I Homes** （[MHO](https://research.investors.com/quote.aspx?symbol=MHO)） 是周一的 [IBD 今日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为这家住宅建筑商在从近期低点上涨近 50% 的情况下，在买入点附近交易。MHO 股价周一小幅上涨。
+**M/I Homes** ([MHO](https://research.investors.com/quote.aspx?symbol=MHO)) is Monday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/), as the homebuilder traded near a buy point in the midst of a nearly 50% advance from recent lows. MHO shares angled up Monday.
 
 
-Ohio-based M/I Homes is one the top U.S. homebuilders. with operations across the Midwest, Florida, Texas, North Carolina and Tennessee.  
-总部位于俄亥俄州的 M/I Homes 是美国顶级住宅建筑商之一。业务遍及中西部、佛罗里达州、德克萨斯州、北卡罗来纳州和田纳西州。
+Ohio-based M/I Homes is one the top U.S. homebuilders. with operations across the Midwest, Florida, Texas, North Carolina and Tennessee.
 
 
 
 
-M/I Homes reported better-than-expected second-quarter earnings and revenue at the end of July. Analysts forecast Q3 EPS growing 2.5% with sales increasing around 8%. The company is expected to report third-quarter financials in late October.  
-M/I Homes 在 7 月底报告称，第二季度收益和收入好于预期。分析师预测第三季度每股收益增长 2.5%，销售额增长约 8%。该公司预计将于 10 月下旬报告第三季度财务数据。
+M/I Homes reported better-than-expected second-quarter earnings and revenue at the end of July. Analysts forecast Q3 EPS growing 2.5% with sales increasing around 8%. The company is expected to report third-quarter financials in late October.
 
 
-For the full year, analyst consensus has earnings jumping 22% to $19.76 per share. Profit is expected to hit $22.99 per share in 2026, which would represent a 41% increase compared to 2023 levels.  
-对于全年，分析师普遍认为收益增长 22% 至每股 19.76 美元。预计 2026 年利润将达到每股 22.99 美元，与 2023 年的水平相比增长 41%。
+For the full year, analyst consensus has earnings jumping 22% to $19.76 per share. Profit is expected to hit $22.99 per share in 2026, which would represent a 41% increase compared to 2023 levels.
 
 
-In late August, Seaport Research initiated coverage of M/I Homes with a neutral rating and no price target. The analyst wrote that the builder has grown from its Midwest roots into Texas, Florida and the Carolinas. Those new areas now account for around 60% of its sales. The firm believes MHO's current margin success could raise cyclical concerns.  
-8 月下旬，Seaport Research 开始对 M/I Homes 进行报道，评级为中性，无目标价。这位分析师写道，这家建筑商已经从中西部的根源发展到德克萨斯州、佛罗里达州和卡罗来纳州。这些新区域现在占其销售额的 60% 左右。该公司认为，MHO 目前的利润率成功可能会引发周期性担忧。
+In late August, Seaport Research initiated coverage of M/I Homes with a neutral rating and no price target. The analyst wrote that the builder has grown from its Midwest roots into Texas, Florida and the Carolinas. Those new areas now account for around 60% of its sales. The firm believes MHO's current margin success could raise cyclical concerns.
 
 
 
@@ -39,8 +34,7 @@ In late August, Seaport Research initiated coverage of M/I Homes with a neutral 
 ---
 
 
-[**This S&P 500 Stock Falls On Earnings Despite Expected Tailwind From Fed Rate Cuts  
-这只标准普尔 500 指数股票因收益而下跌，尽管预期美联储降息将带来利好**](https://www.investors.com/news/sp-500-stock-lennar-earnings-fed-rate-cut-tailwind/)
+[**This S&P 500 Stock Falls On Earnings Despite Expected Tailwind From Fed Rate Cuts**](https://www.investors.com/news/sp-500-stock-lennar-earnings-fed-rate-cut-tailwind/)
 
 
 
@@ -48,45 +42,37 @@ In late August, Seaport Research initiated coverage of M/I Homes with a neutral 
 ---
 
 
-The Fed Rate Cut And Housing美联储降息和住房
-------------------------------------
+The Fed Rate Cut And Housing
+----------------------------
 
 
-The [Federal Reserve](https://www.investors.com/news/economy/next-federal-reserve-meeting-rate-cut-outlook-sp-500/) recently cut rates for the first time since the Covid crisis with Fed Chief Jerome Powell signaling more easing along with an economic soft landing.  
-[美联储](https://www.investors.com/news/economy/next-federal-reserve-meeting-rate-cut-outlook-sp-500/)最近自 Covid 危机以来首次降息，美联储主席杰罗姆鲍威尔暗示将进一步宽松政策以及经济软着陆。
+The [Federal Reserve](https://www.investors.com/news/economy/next-federal-reserve-meeting-rate-cut-outlook-sp-500/) recently cut rates for the first time since the Covid crisis with Fed Chief Jerome Powell signaling more easing along with an economic soft landing.
 
 
-For 2025, policymakers see another 100 basis points of Fed rate cuts, bringing the key rate down to a 3.25%-3.5% range.  
-对于 2025 年，政策制定者预计美联储将再次降息 100 个基点，使关键利率降至 3.25%-3.5% 的区间。
+For 2025, policymakers see another 100 basis points of Fed rate cuts, bringing the key rate down to a 3.25%-3.5% range.
 
 
-Homebuilders for more than a year have said that housing affordability has been tested by interest rate movements. Many homebuilders have turned to incentives to keep home prices down and drum up demand amid increased interest rates. However, mortgage rates have fallen considerably over the past few months along with Treasury yields in anticipation of Fed rate cuts. That boosts affordability, so potential buyers may need fewer incentives to seal the deal, leading to higher profits for M/I Homes and others.  
-一年多来，房屋建筑商一直表示，住房负担能力已经受到利率变动的考验。许多房屋建筑商已转向激励措施，以压低房价并在利率上升的情况下刺激需求。然而，由于预期美联储降息，抵押贷款利率在过去几个月与美国国债收益率一起大幅下降。这提高了负担能力，因此潜在买家可能需要更少的激励措施来达成交易，从而为 M/I Homes 和其他公司带来更高的利润。
+Homebuilders for more than a year have said that housing affordability has been tested by interest rate movements. Many homebuilders have turned to incentives to keep home prices down and drum up demand amid increased interest rates. However, mortgage rates have fallen considerably over the past few months along with Treasury yields in anticipation of Fed rate cuts. That boosts affordability, so potential buyers may need fewer incentives to seal the deal, leading to higher profits for M/I Homes and others.
 
 
-M/I Homes Stock PerformanceM/I Homes 股票表现
------------------------------------------
+M/I Homes Stock Performance
+---------------------------
 
 
-MHO shares gained 0.7% to 171.28 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Monday. The stock is looking to end September with a more-than-6% increase after declining 4.5% in August. M/I Homes stock had a massive July, soaring 36.6%.  
-MHO 股价在周一[的市场交易](https://www.investors.com/category/market-trend/stock-market-today/)中上涨 0.7% 至 171.28。该股在 8 月份下跌 4.5% 后，预计 9 月底将上涨 6% 以上。M/I Homes 的股票在 7 月份表现强劲，飙升了 36.6%。
+MHO shares gained 0.7% to 171.28 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Monday. The stock is looking to end September with a more-than-6% increase after declining 4.5% in August. M/I Homes stock had a massive July, soaring 36.6%.
 
 
-MHO has a 173.69 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a base handle. The entry is fractionally below the top of the base at 173.86, which was an all-time high.  
-MHO 有一个 173.69 [的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)。该入场点略低于底部顶部 173.86，这是历史新高。
+MHO has a 173.69 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a base handle. The entry is fractionally below the top of the base at 173.86, which was an all-time high.
 
 
-The current base formed right on top of a six-month consolidation, according to [MarketSurge chart analysis](https://marketsurge.investors.com/).  
-根据 [MarketSurge 图表分析](https://marketsurge.investors.com/)，当前基础是在六个月的盘整之上形成的。
+The current base formed right on top of a six-month consolidation, according to [MarketSurge chart analysis](https://marketsurge.investors.com/).
 
 
 
-The stock has rallied more than 23% in 2024 and rocketed 47% higher since hitting a recent low of 115.29 on July 5.  
-该股在 2024 年上涨了 23% 以上，自 7 月 5 日触及近期低点 115.29 以来飙升了 47%。
+The stock has rallied more than 23% in 2024 and rocketed 47% higher since hitting a recent low of 115.29 on July 5.
 
 
-Overall, the IBD-tracked [Building-Residential/Commercial industry group](https://marketsurge.investors.com/) surged 60% in 2023. This year, the 22 stocks in the group have collectively advanced 36.4%.  
-总体而言，IBD 跟踪的[建筑-住宅/商业行业组](https://marketsurge.investors.com/)在 2023 年飙升了 60%。今年，该集团的 22 只股票合计上涨了 36.4%。
+Overall, the IBD-tracked [Building-Residential/Commercial industry group](https://marketsurge.investors.com/) surged 60% in 2023. This year, the 22 stocks in the group have collectively advanced 36.4%.
 
 
 
@@ -94,8 +80,7 @@ Overall, the IBD-tracked [Building-Residential/Commercial industry group](https:
 ---
 
 
-**[New Home Sales Tops Views As Mortgage Rates Ease, KB Home Falls  
-随着抵押贷款利率的回落，新屋销售成为浏览量榜首，KB Home 下跌](https://www.investors.com/news/kb-home-earnings-mortgage-rates-new-housing-data/)**
+**[New Home Sales Tops Views As Mortgage Rates Ease, KB Home Falls](https://www.investors.com/news/kb-home-earnings-mortgage-rates-new-housing-data/)**
 
 
 
@@ -103,47 +88,37 @@ Overall, the IBD-tracked [Building-Residential/Commercial industry group](https:
 ---
 
 
-**KB Home** ([KBH](https://research.investors.com/quote.aspx?symbol=KBH)) traded about 4% below an official 88.31 entry on Monday. Shares fell last week on mixed results.  
-**KB Home** （[KBH](https://research.investors.com/quote.aspx?symbol=KBH)） 周一的交易价格比官方的 88.31 低约 4%。上周，由于业绩喜忧参半，股价下跌。
+**KB Home** ([KBH](https://research.investors.com/quote.aspx?symbol=KBH)) traded about 4% below an official 88.31 entry on Monday. Shares fell last week on mixed results.
 
 
-S&P 500 stock **Lennar** ([LEN](https://research.investors.com/quote.aspx?symbol=LEN)) has retreated slightly since hitting all-time highs on Sept. 19, amid a 24% gain in 2024. The S&P 500 stock was last below its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/) in early July and has rallied 30% since then.  
-标准普尔 500 指数股票 **Lennar** （[LEN](https://research.investors.com/quote.aspx?symbol=LEN)） 自 9 月 19 日创下历史新高以来略有回落，2024 年上涨了 24%。标准普尔 500 指数在 7 月初最后一次低于其 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/)，此后已上涨 30%。
+S&P 500 stock **Lennar** ([LEN](https://research.investors.com/quote.aspx?symbol=LEN)) has retreated slightly since hitting all-time highs on Sept. 19, amid a 24% gain in 2024. The S&P 500 stock was last below its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/) in early July and has rallied 30% since then.
 
 
-Meanwhile, **Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)) and **D.R. Horton** ([DHI](https://research.investors.com/quote.aspx?symbol=DHI)) are also both trading around all-time highs. Toll Brothers hit 156 on Friday while DHI shares on Sept. 19 had an intraday high of 199.85.  
-与此同时，**Toll Brothers** （[TOL](https://research.investors.com/quote.aspx?symbol=TOL)） 和 **D.R. Horton** （[DHI](https://research.investors.com/quote.aspx?symbol=DHI)） 的交易价格也都在历史高点附近。Toll Brothers 周五触及 156，而 DHI 股价在 9 月 19 日创下盘中高点 199.85。
+Meanwhile, **Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)) and **D.R. Horton** ([DHI](https://research.investors.com/quote.aspx?symbol=DHI)) are also both trading around all-time highs. Toll Brothers hit 156 on Friday while DHI shares on Sept. 19 had an intraday high of 199.85.
 
 
-MHO stock has a robust 94 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. M/I Homes also has a strong 95 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 98 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
-MHO 股票的综合[评级](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)为 94 分（满分 99 分）。M/I Homes 还拥有强大的 95 相对[实力评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)和 98 [EPS 评级](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)。
+MHO stock has a robust 94 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. M/I Homes also has a strong 95 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 98 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
 
 
-*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.  
-请在 X [@KitNorton](https://twitter.com/KitNorton) 上关注 Kit Norton 以获得更多报道。*
+*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.*
 
 
-#### **YOU MAY ALSO LIKE: 您可能还喜欢：**
+#### **YOU MAY ALSO LIKE:**
 
 
-[Is Tesla Stock A Buy Or A Sell?  
-特斯拉股票是买入还是卖出？](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
+[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings  
-获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learning How To Pick Great Stocks? Read Investor's Corner  
-学习如何挑选好股票？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[The Tesla Robotaxi Event Approaches; But What About Waymo  
-特斯拉 Robotaxi 活动临近;但是 Waymo 呢](https://www.investors.com/news/tesla-stock-robotaxi-event-waymo-uber-lyft/)
+[The Tesla Robotaxi Event Approaches; But What About Waymo](https://www.investors.com/news/tesla-stock-robotaxi-event-waymo-uber-lyft/)
 
 
-[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.  
-AI 正在推动“核复兴”。比尔·盖茨 （Bill Gates） 和杰夫·贝佐斯 （Jeff Bezos） 也在其中。](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
+[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
 
 
 
