--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-03.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-03.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Cava, Stock Of The Day, Eyes New Buy Point After 190% Run, With Earnings Set To Double	今日股票 Cava 在上涨 190% 后瞄准新的买入点，收益将翻倍
+  Cava, Stock Of The Day, Eyes New Buy Point After 190% Run, With Earnings Set To Double
 image: /assets/img/stock-of-the-day/2024-10-03.jpg
 date: 2024-10-03 16:27 -0700
 author: APARNA NARAYANAN
@@ -12,118 +12,94 @@ author: APARNA NARAYANAN
 
 
 
-**Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it hugs a short-term support level while eyeing both an early entry and a more-traditional buy point. Cava stock continues its red-hot run after an August earnings beat-and-raise, near post-IPO highs.  
-**Cava** （[CAVA）](https://research.investors.com/quote.aspx?symbol=CAVA) 是[当今的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为它处于短期支撑位，同时着眼于早期入场和更传统的买入点。Cava 股票在 8 月份的收益超过预期并上调后，接近 IPO 后的高点，继续其炙手可热的走势。
+**Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it hugs a short-term support level while eyeing both an early entry and a more-traditional buy point. Cava stock continues its red-hot run after an August earnings beat-and-raise, near post-IPO highs.
 
 
-The fast-casual Mediterranean restaurant chain specializes in build-your-own falafel bowls and pita sandwiches, made with hearty ingredients and bold flavors. Cava stock packs a punch, too, having nearly tripled year to date.  
-这家快速休闲的地中海连锁餐厅专门提供自制的沙拉三明治碗和皮塔饼三明治，采用丰盛的食材和大胆的口味制成。卡瓦酒的股票也很有冲击力，年初至今几乎翻了三倍。
+The fast-casual Mediterranean restaurant chain specializes in build-your-own falafel bowls and pita sandwiches, made with hearty ingredients and bold flavors. Cava stock packs a punch, too, having nearly tripled year to date.
 
 
 
 
-Founded in 2010, Cava delivered its first profit on an annual basis on 60% revenue growth in 2023, the year it went public. The Washington, D.C.-based company ties its rapid growth to new and repeat customers.  
-Cava 成立于 2010 年，在 2023 年上市的那一年，以 60% 的收入增长实现了首次年度盈利。这家总部位于华盛顿特区的公司将其快速增长与新客户和回头客联系在一起。
+Founded in 2010, Cava delivered its first profit on an annual basis on 60% revenue growth in 2023, the year it went public. The Washington, D.C.-based company ties its rapid growth to new and repeat customers.
 
 
-Analysts call Cava the next **Chipotle Mexican Grill** ([CMG](https://research.investors.com/quote.aspx?symbol=CMG)). That larger fast-casual peer, too, had landed huge success, with its customizable bowls underpinning rapid growth. Some investors may see a similar winning story in **Sweetgreen** ([SG](https://research.investors.com/quote.aspx?symbol=SG)).  
-分析师称 Cava 为下一个 **Chipotle Mexican Grill** （[CMG](https://research.investors.com/quote.aspx?symbol=CMG)）。这家规模更大的休闲快餐店也取得了巨大成功，其可定制的碗为快速增长奠定了基础。一些投资者可能会在 **Sweetgreen** （[SG）](https://research.investors.com/quote.aspx?symbol=SG) 中看到类似的成功故事。
+Analysts call Cava the next **Chipotle Mexican Grill** ([CMG](https://research.investors.com/quote.aspx?symbol=CMG)). That larger fast-casual peer, too, had landed huge success, with its customizable bowls underpinning rapid growth. Some investors may see a similar winning story in **Sweetgreen** ([SG](https://research.investors.com/quote.aspx?symbol=SG)).
 
 
-Cava Stock Nearing Buy PointCava 股票接近买入点
-----------------------------------------
+Cava Stock Nearing Buy Point
+----------------------------
 
 
-Shares rose 1.6% to 124.94 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). Cava stock continues to work on a 128.18 [buy point](https://www.investors.com/ibd-university/how-to-buy/), which marks the Aug. 26 high of a short consolidation After a recent pullback, the restaurant retail stock found support at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). Investors could use the Oct. 1 high of 125.66 as a possible early entry, which would also break a short downtrend.  
-[今天股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)股价上涨 1.6% 至 124.94。卡瓦（Cava）股票继续在128.18买入[点](https://www.investors.com/ibd-university/how-to-buy/)上工作，这标志着8月26日短暂盘整的高点。在最近的回调之后，这家餐厅零售股在[21天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)找到了支撑。投资者可以使用 10 月 1 日的高点 125.66 作为可能的提前入场，这也将打破短暂的下跌趋势。
+Shares rose 1.6% to 124.94 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). Cava stock continues to work on a 128.18 [buy point](https://www.investors.com/ibd-university/how-to-buy/), which marks the Aug. 26 high of a short consolidation After a recent pullback, the restaurant retail stock found support at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). Investors could use the Oct. 1 high of 125.66 as a possible early entry, which would also break a short downtrend.
 
 
 
-An IPO stock, Cava came public at 22 a share in June 2023. The top growth stock hit a record 58.10 on Aug. 2, 2023. It exactly halved to 29.05 last Oct. 4 before rebounding. This year, Cava stock pegged a series of new highs on the back of stronger-than-expected earnings.  
-作为 IPO 股票，Cava 于 2023 年 6 月以每股 22 的价格上市。2023 年 8 月 2 日，增长最快的股票创下了创纪录的 58.10。去年 10 月 4 日，它正好减半至 29.05，然后反弹。今年，Cava 股票在强于预期的收益的支持下创下了一系列新高。
+An IPO stock, Cava came public at 22 a share in June 2023. The top growth stock hit a record 58.10 on Aug. 2, 2023. It exactly halved to 29.05 last Oct. 4 before rebounding. This year, Cava stock pegged a series of new highs on the back of stronger-than-expected earnings.
 
 
-It's up 152% from a first-stage cup-with-handle breakout in early February, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). It's up more than 157% from a July 2023 breakout from an [IPO base](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/).  
-根据 [MarketSurge 模式识别](https://marketsurge.investors.com)，它比 2 月初的第一阶段带手柄杯突破上涨了 152%。它比 2023 年 7 月从 [IPO 基地](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/)突破时上涨了 157% 以上。
+It's up 152% from a first-stage cup-with-handle breakout in early February, according to [MarketSurge pattern recognition](https://marketsurge.investors.com). It's up more than 157% from a July 2023 breakout from an [IPO base](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/).
 
 
-A standout among retail stocks, Cava bears a perfect [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) of 99, which means it has outperformed 99% of all stocks in the Investor's Business Daily database over the past year.  
-作为零售股中的佼佼者，Cava 拥有完美的 99 分相对[强弱评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)，这意味着它在过去一年中跑赢了投资者商业日报数据库中 99% 的股票。
+A standout among retail stocks, Cava bears a perfect [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) of 99, which means it has outperformed 99% of all stocks in the Investor's Business Daily database over the past year.
 
 
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) for Cava bolted higher over the past year, but has now flattened out a bit. A rising RS line, the blue line in the chart shown, means that a stock is outperforming the S&P 500 index.  
-Cava 的[相对强度线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/)在过去一年中飙升，但现在已经略微趋平。上升的 RS 线，即图表中的蓝线，意味着一只股票的表现优于标准普尔 500 指数。
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) for Cava bolted higher over the past year, but has now flattened out a bit. A rising RS line, the blue line in the chart shown, means that a stock is outperforming the S&P 500 index.
 
 
-Among favorable technical signs, Cava stock shows an [up/down volume ratio](https://www.investors.com/how-to-invest/investors-corner/top-stocks-under-accumulation-use-the-up-down-volume-ratio-to-find-the-best-prospects/) of 1.7. Ratings above 1 indicate upward price pressure on a stock.  
-在有利的技术迹象中，Cava 股票的[上/下成交量比率](https://www.investors.com/how-to-invest/investors-corner/top-stocks-under-accumulation-use-the-up-down-volume-ratio-to-find-the-best-prospects/)为 1.7。评级高于 1 表示股票的价格面临上行压力。
+Among favorable technical signs, Cava stock shows an [up/down volume ratio](https://www.investors.com/how-to-invest/investors-corner/top-stocks-under-accumulation-use-the-up-down-volume-ratio-to-find-the-best-prospects/) of 1.7. Ratings above 1 indicate upward price pressure on a stock.
 
 
-Cava stock bears a solid-enough Accumulation/Distribution Rating of B. The number of funds owning shares rose 7% in the September-ended quarter, a favorable sign, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-cava-group-cava.aspx). Cava also shows four quarters of rising fund ownership.  
-卡瓦酒股票的累积/派发评级为 B。根据 [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-cava-group-cava.aspx) 的数据，在截至 9 月的季度中，持有股票的基金数量增长了 7%，这是一个有利的迹象。Cava 还显示了四个季度的基金持有量上升。
+Cava stock bears a solid-enough Accumulation/Distribution Rating of B. The number of funds owning shares rose 7% in the September-ended quarter, a favorable sign, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-cava-group-cava.aspx). Cava also shows four quarters of rising fund ownership.
 
 
-Cava Earnings Poised To DoubleCava 收益有望翻倍
------------------------------------------
+Cava Earnings Poised To Double
+------------------------------
 
 
-This restaurant play holds a near-perfect [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) of 98. The Composite Rating combines various technical and fundamental metrics into one easy-to-read score. Further, Cava boasts a solid 81 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/), no mean feat for a young company.  
-这部餐厅剧拥有近乎完美的[综合评分](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) 98。综合评级将各种技术和基本指标组合成一个易于阅读的分数。此外，Cava 拥有 81 的 [EPS 评级](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)，对于一家年轻的公司来说，这绝非易事。
+This restaurant play holds a near-perfect [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) of 98. The Composite Rating combines various technical and fundamental metrics into one easy-to-read score. Further, Cava boasts a solid 81 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/), no mean feat for a young company.
 
 
-Every quarter since its June 2023 debut, Cava has beat analysts' earnings estimates, according to FactSet. But the latest second quarter saw the restaurant chain post its first earnings decline in six quarters, to the tune of 19%. Same-store sales also slowed but outpaced views.  
-根据 FactSet 的数据，自 2023 年 6 月首次亮相以来，Cava 每个季度的收益都超过分析师的预期。但最新的第二季度，这家连锁餐厅的收益出现了六个季度以来的首次下降，降至 19%。同店销售也有所放缓，但超过了浏览量。
+Every quarter since its June 2023 debut, Cava has beat analysts' earnings estimates, according to FactSet. But the latest second quarter saw the restaurant chain post its first earnings decline in six quarters, to the tune of 19%. Same-store sales also slowed but outpaced views.
 
 
-On the brighter side, Cava defied the industry trend with Q2 same-store sales growth of 14.4%. Traffic grew by 9.5%. Revenue rose by 35%. The company lifted adjusted EBITDA guidance to $109 million-$114 million, from $100 million-$105 million earlier.  
-从好的方面来看，Cava 违背了行业趋势，第二季度的同店销售额增长了 14.4%。流量增长了 9.5%。收入增长了 35%。该公司将调整后的 EBITDA 指引从之前的 1 亿至 1.05 亿美元上调至 1.09 亿至 1.14 亿美元。
+On the brighter side, Cava defied the industry trend with Q2 same-store sales growth of 14.4%. Traffic grew by 9.5%. Revenue rose by 35%. The company lifted adjusted EBITDA guidance to $109 million-$114 million, from $100 million-$105 million earlier.
 
 
-After the Q2 earnings blip, analysts expect a big comeback in the current and upcoming quarters. They see Cava earnings jumping 100.5% to 42 cents per share for the full year, rising another 21% in 2025.  
-在第二季度财报公布后，分析师预计本季度和未来几个季度将出现大幅反弹。他们预计 Cava 全年收益将增长 100.5% 至每股 42 美分，到 2025 年将再增长 21%。
+After the Q2 earnings blip, analysts expect a big comeback in the current and upcoming quarters. They see Cava earnings jumping 100.5% to 42 cents per share for the full year, rising another 21% in 2025.
 
 
-Cava 'Doing The Same' As Chipotle Stock卡瓦酒与 Chipotle Stock “做同样的事情”
--------------------------------------------------------------------
+Cava 'Doing The Same' As Chipotle Stock
+---------------------------------------
 
 
-"Cava seems to have found a magic formula," Wedbush analyst Nick Setyan said after the Aug. 23 report.  
-“卡瓦酒似乎找到了一个神奇的公式，”Wedbush 分析师尼克·塞蒂安 （Nick Setyan） 在 8 月 23 日的报告发布后说。
+"Cava seems to have found a magic formula," Wedbush analyst Nick Setyan said after the Aug. 23 report.
 
 
-He, too, favorably compared Cava to Chipotle stock. "No one had been able to kind of transform the Mexican category into a national chain, and Chipotle did that," Setyan said. "Cava is doing the same thing with the Mediterranean cuisine and concept."  
-他也赞成将卡瓦酒与 Chipotle 股票进行比较。“没有人能够将墨西哥品类转变为全国连锁店，而 Chipotle 做到了，”Setyan 说。“Cava 在地中海美食和概念上做了同样的事情。”
+He, too, favorably compared Cava to Chipotle stock. "No one had been able to kind of transform the Mexican category into a national chain, and Chipotle did that," Setyan said. "Cava is doing the same thing with the Mediterranean cuisine and concept."
 
 
-Cava stock surged nearly 20% on Aug. 23 and hit a high of 131.82 on Sept. 23. It is up 190% year to date.  
-Cava 股票在 8 月 23 日飙升近 20%，并在 9 月 23 日创下 131.82 的高点。今年迄今已上涨 190%。
+Cava stock surged nearly 20% on Aug. 23 and hit a high of 131.82 on Sept. 23. It is up 190% year to date.
 
 
-Analysts on Wall Street remain overweight on this restaurant retail play, FactSet shows. But their consensus price target for Cava stock is 114.75, below where shares traded on Thursday.  
-FactSet 显示，华尔街的分析师仍然增持这家餐厅零售业。但他们对 Cava 股票的共识目标价为 114.75，低于周四的股价。
+Analysts on Wall Street remain overweight on this restaurant retail play, FactSet shows. But their consensus price target for Cava stock is 114.75, below where shares traded on Thursday.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
-最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
-寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
-加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Futures: Nvidia Rises While Tesla Retreats; Jobs Report Looms  
-期货：英伟达上涨，特斯拉下跌;就业报告迫在眉睫](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-indexes-hold-nvidia-rallies-tesla-skids-jobs-report-due/)
+[Futures: Nvidia Rises While Tesla Retreats; Jobs Report Looms](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-indexes-hold-nvidia-rallies-tesla-skids-jobs-report-due/)
 
 
 
