--- a/_columns/The_Big_Picture/zh-cn/2024-08-01.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-01.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq Soars, S&P Holds Critical Level; How Investors Should React To Market Shift	纳斯达克飙升，标准普尔保持关键水平;投资者应如何应对市场变化
+  Nasdaq Soars, S&P Holds Critical Level; How Investors Should React To Market Shift
 date: 2024-08-01 22:35 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,133 +10,105 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The Nasdaq composite led a powerful retort to stock market bears Wednesday, posting its best day in more than five months. Notably, most of the gains came before the Federal Reserve suggested an interest-rate cut might be in the cards for September.  
-纳斯达克综合指数周三对股市空头进行了有力的反驳，创下五个多月来的最佳单日表现。值得注意的是，大部分涨幅发生在美联储暗示 9 月份可能降息之前。
+The Nasdaq composite led a powerful retort to stock market bears Wednesday, posting its best day in more than five months. Notably, most of the gains came before the Federal Reserve suggested an interest-rate cut might be in the cards for September.
 
 
 
 
-The Nasdaq jumped 2.6%. It was its best single-day performance since the index surged 3% on Feb. 22. But the Nasdaq still faces a test of resistance at its 50-day moving average.  
-纳斯达克指数上涨 2.6%。这是自 2 月 22 日该指数飙升 3% 以来的最佳单日表现。但纳斯达克指数仍面临 50 天移动平均线的阻力测试。
+The Nasdaq jumped 2.6%. It was its best single-day performance since the index surged 3% on Feb. 22. But the Nasdaq still faces a test of resistance at its 50-day moving average.
 
 
-Late Tuesday, a Nasdaq rally seemed like a fantasy after **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) slid on [softer growth for its Azure](https://www.investors.com/news/technology/microsoft-stock-ai-chip-stocks-diverge-on-capex-report/) cloud computing business. Microsoft shares fell more than 3% in extended trading but ended up losing only 1.1% by the end of Wednesday's regular session.  
-周二晚些时候，在**微软 （Microsoft**） （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 的 Azure 云计算业务增长[疲软](https://www.investors.com/news/technology/microsoft-stock-ai-chip-stocks-diverge-on-capex-report/)后，纳斯达克的反弹似乎是幻想。Microsoft 股价在延长交易中下跌超过 3%，但截至周三例会结束时仅下跌 1.1%。
+Late Tuesday, a Nasdaq rally seemed like a fantasy after **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) slid on [softer growth for its Azure](https://www.investors.com/news/technology/microsoft-stock-ai-chip-stocks-diverge-on-capex-report/) cloud computing business. Microsoft shares fell more than 3% in extended trading but ended up losing only 1.1% by the end of Wednesday's regular session.
 
 
-Other major stocks more than offset Microsoft's loss. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) soared nearly 13% after Morgan Stanley [named it a top pick](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/). The chip designer's market cap swelled by $326.9 billion on the stock market Wednesday, the largest one-day increase in history, according to Dow Jones Market Data.  
-其他主要股票足以抵消 Microsoft 的损失。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 在摩根士丹利[将其评为首选](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/)后飙升近 13%。根据道琼斯市场数据，这家芯片设计商周三在股市上的市值膨胀了 3269 亿美元，创下历史上最大的单日涨幅。
+Other major stocks more than offset Microsoft's loss. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) soared nearly 13% after Morgan Stanley [named it a top pick](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/). The chip designer's market cap swelled by $326.9 billion on the stock market Wednesday, the largest one-day increase in history, according to Dow Jones Market Data.
 
 
-**Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) rebounded nearly 5%, while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) climbed more than 3%. **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) rose 2.5% ahead of its earnings report and added more than 4% in extended trading.  
-**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 反弹近 5%，而 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 上涨超过 3%。**Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)） 在财报发布前上涨 2.5%，在延长交易中上涨超过 4%。
+**Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) rebounded nearly 5%, while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) climbed more than 3%. **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) rose 2.5% ahead of its earnings report and added more than 4% in extended trading.
 
 
-After closing just below the 50-day moving average Tuesday, the S&P 500 jumped right back above that crucial line, as well as the 5,500 level.  
-在周二收于 50 天移动平均线下方后，标准普尔 500 指数直接跳回该关键线以及 5,500 水平上方。
+After closing just below the 50-day moving average Tuesday, the S&P 500 jumped right back above that crucial line, as well as the 5,500 level.
 
 
-Surely, major index gains in higher volume are a sign that institutional investors are devouring as much stock as they can. It was interesting that the Nasdaq had already climbed more than 2.5% before the Fed headlines started to roll in.  
-当然，主要指数的成交量增加表明机构投资者正在尽可能多地吞噬股票。有趣的是，在美联储的头条新闻开始涌入之前，纳斯达克指数已经上涨了 2.5% 以上。
+Surely, major index gains in higher volume are a sign that institutional investors are devouring as much stock as they can. It was interesting that the Nasdaq had already climbed more than 2.5% before the Fed headlines started to roll in.
 
 
-![](https://www.investors.com/wp-content/uploads/2024/07/MP073124.jpg)The Dow Jones Industrial Average climbed 0.2%, extending its outperformance for the month. It jumped 4.4% in July, beating the S&P 500's 1.1% gain. The Nasdaq closed the month with a loss of nearly 0.8%.  
-道琼斯工业平均指数上涨 0.2%，延续了本月的优异表现。它在 7 月份上涨了 4.4%，超过了标准普尔 500 指数 1.1% 的涨幅。纳斯达克指数上月收盘下跌近 0.8%。
+![](https://www.investors.com/wp-content/uploads/2024/07/MP073124.jpg)The Dow Jones Industrial Average climbed 0.2%, extending its outperformance for the month. It jumped 4.4% in July, beating the S&P 500's 1.1% gain. The Nasdaq closed the month with a loss of nearly 0.8%.
 
 
-The Russell 2000 added more than 10% for July. *(An earlier version of this story incorrectly said the Russell rose 0.5%  in July.)*  
-罗素 2000 指数 7 月份上涨了 10% 以上。*（本文的早期版本错误地表示罗素指数在 7 月份上涨了 0.5%。*
+The Russell 2000 added more than 10% for July. *(An earlier version of this story incorrectly said the Russell rose 0.5%  in July.)*
 
 
-Stock Market Outlook Improves股市前景改善
------------------------------------
+Stock Market Outlook Improves
+-----------------------------
 
 
-Wednesday's index action was persuasive. Thus, IBD raised its recommended exposure level from a range of 40%-60% to a range of 60%-80%.  
-周三的指数走势很有说服力。因此，IBD 将其推荐的暴露水平从 40%-60% 的范围提高到 60%-80% 的范围。
+Wednesday's index action was persuasive. Thus, IBD raised its recommended exposure level from a range of 40%-60% to a range of 60%-80%.
 
 
-That means investors should relax their guard some, and buy carefully selected stocks at [proper buy points](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/). Keep in mind, this is not the most bullish recommended exposure, so remain vigilant for sell signals.  
-这意味着投资者应该放松警惕，并在[适当的买入点](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/)购买精心挑选的股票。请记住，这不是最看涨的推荐敞口，因此请对卖出信号保持警惕。
+That means investors should relax their guard some, and buy carefully selected stocks at [proper buy points](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/). Keep in mind, this is not the most bullish recommended exposure, so remain vigilant for sell signals.
 
 
-The stock market often has moved in a dichotomy in which growth lags when value rises, and vice versa. That leaves the chance of an unexpected turn.  
-股票市场经常处于二分法中，当价值上升时，增长滞后，反之亦然。这留下了意想不到的转折的机会。
+The stock market often has moved in a dichotomy in which growth lags when value rises, and vice versa. That leaves the chance of an unexpected turn.
 
 
-The Dow and S&P 500 have moved in opposite directions 41 times so far this year, according to Dow Jones Market Data. That's the most days the two indexes have diverged ever recorded in that time frame. The indexes should surpass the prior full-year record of 45 days made back in 2000.  
-根据道琼斯市场数据，今年迄今，道琼斯指数和标准普尔 500 指数已向相反的方向移动了 41 次。这是两个指数在该时间段内有记录以来出现分歧的最大天数。这些指数应该会超过2000年创下的45天的全年纪录。
+The Dow and S&P 500 have moved in opposite directions 41 times so far this year, according to Dow Jones Market Data. That's the most days the two indexes have diverged ever recorded in that time frame. The indexes should surpass the prior full-year record of 45 days made back in 2000.
 
 
-If Wednesday was the day the stock market got back on track with its uptrend, there weren't many breakouts among top-rated stocks.  
-如果周三是股市重回上升趋势的日子，那么顶级股票中的突破并不多。
+If Wednesday was the day the stock market got back on track with its uptrend, there weren't many breakouts among top-rated stocks.
 
 
-**Johnson Controls** ([JCI](https://research.investors.com/quote.aspx?symbol=JCI)) faded badly after topping a 74.23 buy point following its earnings report. **Dycom** ([DY](https://research.investors.com/quote.aspx?symbol=DY)), **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)) and **Teva Pharmaceuticals** ([TEVA](https://research.investors.com/quote.aspx?symbol=TEVA)) had limp action around buy points. Investment management firm **Carlyle Group** ([CG](https://research.investors.com/quote.aspx?symbol=CG)), however, held above its 48.52 buy point.  
-**江森自控** （[JCI）](https://research.investors.com/quote.aspx?symbol=JCI) 在财报发布后突破 74.23 的买入点后严重下跌。**Dycom** （[DY](https://research.investors.com/quote.aspx?symbol=DY)）、**Tradeweb Markets** （[TW）](https://research.investors.com/quote.aspx?symbol=TW) 和 **Teva Pharmaceuticals** （[TEVA）](https://research.investors.com/quote.aspx?symbol=TEVA) 在买入点附近表现不佳。然而，投资管理公司**凯雷集团** （[CG）](https://research.investors.com/quote.aspx?symbol=CG) 守住了其 48.52 买入点上方。
+**Johnson Controls** ([JCI](https://research.investors.com/quote.aspx?symbol=JCI)) faded badly after topping a 74.23 buy point following its earnings report. **Dycom** ([DY](https://research.investors.com/quote.aspx?symbol=DY)), **Tradeweb Markets** ([TW](https://research.investors.com/quote.aspx?symbol=TW)) and **Teva Pharmaceuticals** ([TEVA](https://research.investors.com/quote.aspx?symbol=TEVA)) had limp action around buy points. Investment management firm **Carlyle Group** ([CG](https://research.investors.com/quote.aspx?symbol=CG)), however, held above its 48.52 buy point.
 
 
-While the record on July breakouts is mixed, some leaders are in follow-on buy areas, such as **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)).  
-虽然 7 月份的突破记录喜忧参半，但一些领导者正在跟进买入领域，例如 **Texas Roadhouse** （[TXRH）。](https://research.investors.com/quote.aspx?symbol=TXRH)
+While the record on July breakouts is mixed, some leaders are in follow-on buy areas, such as **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)).
 
 
-Oddly, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) had climbed as much as 1.8% but closed only 0.1% higher.  
-奇怪的是，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 上涨了 1.8%，但收盘仅上涨了 0.1%。
+Oddly, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) had climbed as much as 1.8% but closed only 0.1% higher.
 
 
-Fed Gives Stock Market Bulls More To Cheer美联储让股市多头更欢呼
------------------------------------------------------
+Fed Gives Stock Market Bulls More To Cheer
+------------------------------------------
 
 
-The Fed gave a nod to an interest-rate cut in its [policy statement](https://www.federalreserve.gov/newsevents/pressreleases/monetary20240731a.htm) and in Fed Chairman Jerome Powell's press briefing.  
-美联储在其[政策声明](https://www.federalreserve.gov/newsevents/pressreleases/monetary20240731a.htm)和美联储主席杰罗姆鲍威尔的新闻发布会上对降息表示赞同。
+The Fed gave a nod to an interest-rate cut in its [policy statement](https://www.federalreserve.gov/newsevents/pressreleases/monetary20240731a.htm) and in Fed Chairman Jerome Powell's press briefing.
 
 
-Powell said [a rate cut in September](https://www.investors.com/news/economy/federal-reserve-meeting-powell-september-fed-rate-cut-sp-500/) "could be on the table." While he added that economic data will determine the final outcome, the panel discussed a rate cut in its meeting.  
-鲍威尔表示[，9 月份降息](https://www.investors.com/news/economy/federal-reserve-meeting-powell-september-fed-rate-cut-sp-500/)“可能被提上日程”。虽然他补充说，经济数据将决定最终结果，但该小组在会议上讨论了降息。
+Powell said [a rate cut in September](https://www.investors.com/news/economy/federal-reserve-meeting-powell-september-fed-rate-cut-sp-500/) "could be on the table." While he added that economic data will determine the final outcome, the panel discussed a rate cut in its meeting.
 
 
-Powell's details emboldened stock market bulls even more, although much of the post-announcement rally faded by the close.  
-鲍威尔的细节让股市多头更加大胆，尽管宣布后的大部分涨势在收盘时已经消退。
+Powell's details emboldened stock market bulls even more, although much of the post-announcement rally faded by the close.
 
 
-Job gains have moderated, the committee said in its statement. At the June meeting, labor market gains had "remained strong." In another hint it is less concerned about inflation, the Fed said inflation goals "continue to move into better balance." In June, the view was that goals had moved "toward better balance."  
-该委员会在声明中表示，就业增长有所放缓。在 6 月的会议上，劳动力市场涨幅“保持强劲”。美联储表示，通胀目标“继续走向更好的平衡”，这是它对通胀担忧减少的另一个暗示。6 月，人们认为目标已经“朝着更好的平衡”发展。
+Job gains have moderated, the committee said in its statement. At the June meeting, labor market gains had "remained strong." In another hint it is less concerned about inflation, the Fed said inflation goals "continue to move into better balance." In June, the view was that goals had moved "toward better balance."
 
 
-The 10-year Treasury yield was volatile after the Fed news. Late Wednesday, it was at 4.107% — down three basis points.  
-美联储消息发布后，10 年期美国国债收益率波动。周三晚些时候，该指数为 4.107%，下跌 3 个基点。
+The 10-year Treasury yield was volatile after the Fed news. Late Wednesday, it was at 4.107% — down three basis points.
 
 
-Market Details 市场详情
--------------------
+Market Details
+--------------
 
 
-At least for a day, the stock market reversed some recent trends.  
-至少在一天内，股市逆转了最近的一些趋势。
+At least for a day, the stock market reversed some recent trends.
 
 
-Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)), which had slid about 12% since July 10, led the market with a 3.7% increase. The PHLX Semiconductor Index rebounded 7% after losing about 12% in a two-week rout.  
-自 7 月 10 日以来下跌约 12% 的科技精选行业 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 以 3.7% 的涨幅领涨市场。PHLX 半导体指数在两周暴跌约 12% 后反弹 7%。
+Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)), which had slid about 12% since July 10, led the market with a 3.7% increase. The PHLX Semiconductor Index rebounded 7% after losing about 12% in a two-week rout.
 
 
-Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) jumped 1.6%. The communications services index regained its 50-day line as it climbed 1.2%. But financials, which rose more than 6% in July, fell 0.3%.  
-非必需消费品精选板块 SPDR （[XLY](https://research.investors.com/quote.aspx?symbol=XLY)） 上涨 1.6%。通信服务指数上涨 1.2%，收复了 50 日线。但 7 月份上涨超过 6% 的金融股下跌了 0.3%。
+Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) jumped 1.6%. The communications services index regained its 50-day line as it climbed 1.2%. But financials, which rose more than 6% in July, fell 0.3%.
 
 
-The energy sector rose 0.4%. The price of West Texas intermediate crude rose 4.3% to $77.91 per barrel. Brent crude climbed 2.7%. The prospect of a potential conflict between Israel and its enemies grew after [leaders of Hezbollah and Hamas were killed](https://www.wsj.com/world/middle-east/two-enemies-of-israel-are-killed-and-the-mideast-tilts-on-the-brink-of-wider-war-8545bae9?mod=hp_lead_pos1).  
-能源板块上涨 0.4%。西德克萨斯中质原油价格上涨 4.3% 至每桶 77.91 美元。布伦特原油上涨 2.7%。在[真主党和哈马斯领导人被杀](https://www.wsj.com/world/middle-east/two-enemies-of-israel-are-killed-and-the-mideast-tilts-on-the-brink-of-wider-war-8545bae9?mod=hp_lead_pos1)后，以色列与其敌人之间发生潜在冲突的可能性增加了。
+The energy sector rose 0.4%. The price of West Texas intermediate crude rose 4.3% to $77.91 per barrel. Brent crude climbed 2.7%. The prospect of a potential conflict between Israel and its enemies grew after [leaders of Hezbollah and Hamas were killed](https://www.wsj.com/world/middle-east/two-enemies-of-israel-are-killed-and-the-mideast-tilts-on-the-brink-of-wider-war-8545bae9?mod=hp_lead_pos1).
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_073124.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_073124.pdf)
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Stock Market Forecast For The Next Six Months Is Stacking Up Well. But Don't Ignore These Risks.  
-对未来六个月的股市预测进展顺利。但不要忽视这些风险。](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+[Stock Market Forecast For The Next Six Months Is Stacking Up Well. But Don't Ignore These Risks.](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
 
 
 [IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
