--- a/_columns/The_Big_Picture/zh-cn/2024-08-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-09.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Ends Roller-Coaster Week Well Off Lows; Inflation Data, Retail Sales Loom	股市从低点结束了过山车般的一周;通胀数据，零售销售迫在眉睫
+  Stock Market Ends Roller-Coaster Week Well Off Lows; Inflation Data, Retail Sales Loom
 date: 2024-08-09 17:32 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,110 +10,87 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended a wild week well off lows, with the S&P 500 erasing nearly all of its losses. Now, fresh inflation data and a new retail sales reading loom in the coming week.  
-股市从低点结束了疯狂的一周，标准普尔 500 指数几乎抹去了所有损失。现在，新的通胀数据和新的零售销售数据将在未来一周迫在眉睫。
+The stock market ended a wild week well off lows, with the S&P 500 erasing nearly all of its losses. Now, fresh inflation data and a new retail sales reading loom in the coming week.
 
 
 
 
-The past week was certainly not one for the faint of heart on the Nasdaq. It rose 0.5% Friday, but closed the week down just 0.2%. It managed to erase most of Monday's 3.4% plunge after getting support at the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/). The tech-heavy index now holds a gain of 11.6% for the year so far.  
-过去的一周肯定不是纳斯达克胆小的人的一周。周五上涨 0.5%，但本周收盘仅下跌 0.2%。在获得 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/)的支撑后，它成功抹去了周一 3.4% 的大部分暴跌。到目前为止，以科技股为主的指数目前上涨了 11.6%。
+The past week was certainly not one for the faint of heart on the Nasdaq. It rose 0.5% Friday, but closed the week down just 0.2%. It managed to erase most of Monday's 3.4% plunge after getting support at the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/). The tech-heavy index now holds a gain of 11.6% for the year so far.
 
 
-The S&P 500 notched a daily gain of 0.5% and ended the week virtually flat, though nominally lower. The index has yet to test the 200-day line but remains about 2% below the key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It holds a gain of 12% for 2024.  
-标准普尔 500 指数每日上涨 0.5%，本周收盘基本持平，尽管名义上走低。该指数尚未测试 200 天线，但仍比关键的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)低约 2%。它在 12 年保持 2024% 的收益。
+The S&P 500 notched a daily gain of 0.5% and ended the week virtually flat, though nominally lower. The index has yet to test the 200-day line but remains about 2% below the key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It holds a gain of 12% for 2024.
 
 
-Advancers held the edge on decliners on the New York Stock Exchange while the opposite was the case on the Nasdaq. Volume was lower for each on Friday.  
-纽约证券交易所的上涨股比下跌的股占优势，而纳斯达克的情况正好相反。周五每辆车的成交量都较低。
+Advancers held the edge on decliners on the New York Stock Exchange while the opposite was the case on the Nasdaq. Volume was lower for each on Friday.
 
 
-The Dow Jones Industrial Average lagged the other major indexes on the stock market, rising 0.1% while it suffered a weekly decline of 0.6%. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) and **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) fared best while **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) once again lagged.  
-道琼斯工业平均指数落后于股市上的其他主要指数，上涨 0.1%，而每周下跌 0.6%。**美国运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 和**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 表现最好，而**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 再次落后。
+The Dow Jones Industrial Average lagged the other major indexes on the stock market, rising 0.1% while it suffered a weekly decline of 0.6%. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) and **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) fared best while **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) once again lagged.
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP080924.jpg)Small caps also failed to keep in stride, with the Russell 2000 falling 0.2%. Growth stocks were stronger, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.4%.  
-小盘股也未能保持稳定，罗素 2000 指数下跌 0.2%。成长型股票表现强劲，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金上涨 0.4%。
+![](https://www.investors.com/wp-content/uploads/2024/08/MP080924.jpg)Small caps also failed to keep in stride, with the Russell 2000 falling 0.2%. Growth stocks were stronger, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.4%.
 
 
-Recent negative action and ongoing uncertainty mean Investor's Business Daily is holding its recommended exposure level in the 0% to 20% range. But stocks have rallied well from lows, and volatility has eased.  
-最近的负面行动和持续的不确定性意味着 Investor's Business Daily 将其建议的风险敞口水平保持在 0% 至 20% 的范围内。但股市从低点反弹良好，波动性也有所缓解。
+Recent negative action and ongoing uncertainty mean Investor's Business Daily is holding its recommended exposure level in the 0% to 20% range. But stocks have rallied well from lows, and volatility has eased.
 
 
-The currently rally attempt is still in play and has cleared its fourth day. A follow-through day could signal the start of a new stock market uptrend and an appropriate increase of exposure from the current levels. If the market undercuts Monday's low, however, the rally attempt would be null and investors would need to wait for a new attempt to transpire.  
-目前的反弹尝试仍在进行中，并且已经度过了第四天。后续交易日可能预示着新的股市上升趋势的开始，并且从当前水平适当增加敞口。然而，如果市场低于周一的低点，那么反弹尝试将是无效的，投资者将需要等待新的尝试发生。
+The currently rally attempt is still in play and has cleared its fourth day. A follow-through day could signal the start of a new stock market uptrend and an appropriate increase of exposure from the current levels. If the market undercuts Monday's low, however, the rally attempt would be null and investors would need to wait for a new attempt to transpire.
 
 
-Inflation Data, Walmart Earnings Loom通胀数据，沃尔玛收益迫在眉睫
----------------------------------------------------
+Inflation Data, Walmart Earnings Loom
+-------------------------------------
 
 
-Stocks were hammered earlier this week due to ongoing fallout from a weak jobs report and the unraveling of the Japanese yen carry trade. A benevolent jobless claims reading Thursday helped stocks fight back with fury.  
-由于疲软的就业报告和日元套利交易的瓦解，股市本周早些时候受到重创。周四善意的初请失业金人数帮助股市愤怒地反击。
+Stocks were hammered earlier this week due to ongoing fallout from a weak jobs report and the unraveling of the Japanese yen carry trade. A benevolent jobless claims reading Thursday helped stocks fight back with fury.
 
 
-There is more economic data due in the coming week that could move the markets. The Producer Price Index comes Tuesday, with headline PPI seen rising 2.6% year over year. Consumer Price Index data drops Wednesday. Headline CPI is seen holding steady at a 3% lift on an annualized basis, while it is expected to ease slightly to a 3.2% year-over-year rise when food and energy costs are excluded.  
-未来一周将公布更多经济数据，这些数据可能会推动市场。周二公布生产者价格指数，整体 PPI 同比增长 2.6%。消费者价格指数（Consumer Price Index）数据周三下降。整体 CPI 年化增长 3% 持稳，而如果排除食品和能源成本，预计同比上涨将略微放缓至 3.2%。
+There is more economic data due in the coming week that could move the markets. The Producer Price Index comes Tuesday, with headline PPI seen rising 2.6% year over year. Consumer Price Index data drops Wednesday. Headline CPI is seen holding steady at a 3% lift on an annualized basis, while it is expected to ease slightly to a 3.2% year-over-year rise when food and energy costs are excluded.
 
 
-Additionally, U.S. retail sales data for July will be announced Thursday. There have been signs that the consumer is weakening, so this could provide further insight. Jobless claims data comes the same day and another strong reading could further soothe investor fears about the economy. Finally, the Empire State and Philadelphia Fed manufacturing surveys are also due Thursday.  
-此外，美国 7 月份的零售销售数据将于周四公布。有迹象表明消费者正在走弱，因此这可能会提供进一步的见解。同一天公布了申请失业救济人数的数据，另一次强劲的数据可能会进一步缓解投资者对经济的担忧。最后，帝国州立大学和费城联储制造业调查也将于周四公布。
+Additionally, U.S. retail sales data for July will be announced Thursday. There have been signs that the consumer is weakening, so this could provide further insight. Jobless claims data comes the same day and another strong reading could further soothe investor fears about the economy. Finally, the Empire State and Philadelphia Fed manufacturing surveys are also due Thursday.
 
 
-Meanwhile, there are some [noteworthy earnings reports due in the week ahead](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-retail-leader-walmart-on-holding/). Retail behemoth **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)), farming equipment giant **Deere** ([DE](https://research.investors.com/quote.aspx?symbol=DE)), Warren Buffett stock **Nu** ([NU](https://research.investors.com/quote.aspx?symbol=NU)) and **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)) are among companies posting results.  
-与此同时，[未来一周将发布一些值得注意的收益报告](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-retail-leader-walmart-on-holding/)。零售巨头**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)）、农业设备巨头**迪尔** （[DE）、](https://research.investors.com/quote.aspx?symbol=DE)沃伦巴菲特股票 **Nu** （[NU）](https://research.investors.com/quote.aspx?symbol=NU) 和 **On Holding** （[ONON）](https://research.investors.com/quote.aspx?symbol=ONON) 等公司都发布了结果。
+Meanwhile, there are some [noteworthy earnings reports due in the week ahead](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-retail-leader-walmart-on-holding/). Retail behemoth **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)), farming equipment giant **Deere** ([DE](https://research.investors.com/quote.aspx?symbol=DE)), Warren Buffett stock **Nu** ([NU](https://research.investors.com/quote.aspx?symbol=NU)) and **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)) are among companies posting results.
 
 
-ELF Falls From Shelf, Hurting This Stock Market GroupELF 下架，伤害了这个股市集团
----------------------------------------------------------------------
+ELF Falls From Shelf, Hurting This Stock Market Group
+-----------------------------------------------------
 
 
-Nearly all of the [S&P 500 sectors closed Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Communication services and technology made the strongest gains. Only materials ended the day lower, but the loss was slight.  
-几乎所有[标准普尔 500 板块周五收高](https://www.investors.com/category/etfs-and-funds/sectors/)。通信服务和技术涨幅最大。只有材料收盘走低，但跌幅很小。
+Nearly all of the [S&P 500 sectors closed Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Communication services and technology made the strongest gains. Only materials ended the day lower, but the loss was slight.
 
 
 
-As ever, the relative performance of the Investor's Business Daily industry groups gave a deeper insight into what happened on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
-与往常一样，Investor's Business Daily 行业团体的相对表现让我们更深入地了解[了当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)发生的事情。
+As ever, the relative performance of the Investor's Business Daily industry groups gave a deeper insight into what happened on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
 
 
-Medical software firms, diversified medical plays such as [new Leaderboard stock](https://get.investors.com/leaderboard/) **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)), data storage stocks and mail order retailers were among the best performers. The educational software group also outperformed.  
-医疗软件公司、多元化医疗公司，如[新排行榜股票](https://get.investors.com/leaderboard/)**Eli Lilly** （[LLY](https://research.investors.com/quote.aspx?symbol=LLY)）、数据存储股票和邮购零售商，都是表现最好的公司。教育软件组也表现出色。
+Medical software firms, diversified medical plays such as [new Leaderboard stock](https://get.investors.com/leaderboard/) **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)), data storage stocks and mail order retailers were among the best performers. The educational software group also outperformed.
 
 
-In contrast, cable stocks, radio and TV companies, office supply retailers, and distributors of metal products lagged. Cosmetics stocks struggled after **ELF Beauty** ([ELF](https://research.investors.com/quote.aspx?symbol=ELF)) plunged following its quarterly report, undercutting the 200-day line in the process. The firm beat on earnings, but investors balked at signs of slowing growth.  
-相比之下，有线电视股、广播和电视公司、办公用品零售商和金属产品分销商表现落后。**ELF Beauty** （[ELF](https://research.investors.com/quote.aspx?symbol=ELF)） 在季度报告发布后暴跌，在此过程中削弱了 200 天线，化妆品股陷入困境。该公司的收益超过预期，但投资者对增长放缓的迹象犹豫不决。
+In contrast, cable stocks, radio and TV companies, office supply retailers, and distributors of metal products lagged. Cosmetics stocks struggled after **ELF Beauty** ([ELF](https://research.investors.com/quote.aspx?symbol=ELF)) plunged following its quarterly report, undercutting the 200-day line in the process. The firm beat on earnings, but investors balked at signs of slowing growth.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080924.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080924.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080924.pdf).
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Come Meet The New Big 'Daddy' On Wall Street  
-来认识华尔街的新大“爸爸”](https://www.investors.com/etfs-and-funds/mutual-funds/microsoft-nvidia-shunned-meet-the-new-big-daddy-on-wall-street/)
+[Come Meet The New Big 'Daddy' On Wall Street](https://www.investors.com/etfs-and-funds/mutual-funds/microsoft-nvidia-shunned-meet-the-new-big-daddy-on-wall-street/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions  
-股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
