--- a/_columns/The_Big_Picture/zh-cn/2024-08-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-12.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Closes Mixed, But A Few Former Leaders Hammered Again; Is Lower Volatility Welcome?	股市收盘涨跌互现，但一些前领导人再次受到打击;低波动性是否受欢迎？
+  Stock Market Closes Mixed, But A Few Former Leaders Hammered Again; Is Lower Volatility Welcome?
 date: 2024-08-12 18:02 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,54 +10,43 @@ author: DAVID SAITO-CHUNG
 
 
 
-Volatility in the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/)? Way down compared with last week. Small caps? Also down, but not as much as in recent days. But given the current environment for investors, a dull session can still show merits.  
-[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的波动性？与上周相比，下降了很多。小型股？也有所下降，但没有最近几天那么多。但鉴于当前投资者的环境，沉闷的交易时段仍然可以显示出优点。
+Volatility in the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/)? Way down compared with last week. Small caps? Also down, but not as much as in recent days. But given the current environment for investors, a dull session can still show merits.
 
 
 
 
-If declines in both the major stock market barometers and in highly rated growth stocks get smaller as the month progresses, it could signal that the most bearish and most fearful investors are getting exhausted.  
-如果主要股市晴雨表和高评级成长股的跌幅都随着月份的进行而变小，这可能表明最悲观和最恐惧的投资者正在筋疲力尽。
+If declines in both the major stock market barometers and in highly rated growth stocks get smaller as the month progresses, it could signal that the most bearish and most fearful investors are getting exhausted.
 
 
-Nonetheless, investors will also want to see evidence that the big boys and girls of the stock market are truly hungering for equities. And when that occurs, [excellent breakouts](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/) from proper bases will emerge.  
-尽管如此，投资者也希望看到证据表明股市的大佬们真的渴望股票。当这种情况发生时，就会出现来自适当基地的[出色突破](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/)。
+Nonetheless, investors will also want to see evidence that the big boys and girls of the stock market are truly hungering for equities. And when that occurs, [excellent breakouts](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/) from proper bases will emerge.
 
 
-Overall, the indexes' moves on Monday showed quite a mix of colors, sort of like a jar of Jelly Belly. While the Nasdaq composite drifted 0.2% higher, the S&P 500 finished virtually flat. At 5,344.39, it rose a measly 0.23 of a point, well below 0.1%. The S&P 500 ended the session with a gain of 12% year to date, which is still decent.  
-总体而言，指数周一的走势呈现出相当多的颜色，有点像一罐 Jelly Belly。虽然纳斯达克综合指数上涨 0.2%，但标准普尔 500 指数收盘几乎持平。在 5,344.39 点，它仅上涨了 0.23 点，远低于 0.1%。标准普尔 500 指数今年迄今上涨 12%，仍然不错。
+Overall, the indexes' moves on Monday showed quite a mix of colors, sort of like a jar of Jelly Belly. While the Nasdaq composite drifted 0.2% higher, the S&P 500 finished virtually flat. At 5,344.39, it rose a measly 0.23 of a point, well below 0.1%. The S&P 500 ended the session with a gain of 12% year to date, which is still decent.
 
 
-But the Russell 2000, which marked a 1.3% drop last week, lopped off another 0.9%. The Russell, at 2062, has seen its advance since Jan. 1 dwindle to less than 2%.  
-但上周下跌 1.3% 的罗素 2000 指数又下跌了 0.9%。罗素指数为 2062 点，自 1 月 1 日以来的涨幅已降至不到 2%。
+But the Russell 2000, which marked a 1.3% drop last week, lopped off another 0.9%. The Russell, at 2062, has seen its advance since Jan. 1 dwindle to less than 2%.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP081224-229x300.jpg)Midcaps joined the weak side of the stock market. SPDR S&P Mid Cap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) sank 0.6%. That virtually matched the decline seen in the Dow Jones transportation average.  
-中型股加入了股市的疲软面。SPDR S&P Mid Cap 400 （[MDY](https://research.investors.com/quote.aspx?symbol=MDY)） 下跌 0.6%。这几乎与道琼斯运输平均指数的下跌相匹配。
+![](https://www.investors.com/wp-content/uploads/2024/08/MP081224-229x300.jpg)Midcaps joined the weak side of the stock market. SPDR S&P Mid Cap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) sank 0.6%. That virtually matched the decline seen in the Dow Jones transportation average.
 
 
-Lately, more attention has gotten paid to the [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility). Last week, the VIX soared to as high as 65.73 before nose-diving the same day and over the next four sessions. On Monday, the VIX made a meek move, up 1% to 20.71. Yet, the 65.73 intraday reading on Aug. 5 hit the highest level since the 2020 Covid-19 bear market. (You can see a historical chart of the [VIX on MarketSurge](https://marketsurge.investors.com/?src=A012BF) by punching in "zero-VIX.")  
-最近，[Cboe 市场波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility)受到了更多关注。上周，VIX 飙升至 65.73 高位，然后在同一天和接下来的四个交易日暴跌。周一，VIX 走势温和，上涨 1% 至 20.71。然而，8 月 5 日的盘中读数 65.73 触及自 2020 年 Covid-19 熊市以来的最高水平。（您可以通过输入“zero-VIX”来查看 [MarketSurge 上的 VIX](https://marketsurge.investors.com/?src=A012BF) 历史图表。
+Lately, more attention has gotten paid to the [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility). Last week, the VIX soared to as high as 65.73 before nose-diving the same day and over the next four sessions. On Monday, the VIX made a meek move, up 1% to 20.71. Yet, the 65.73 intraday reading on Aug. 5 hit the highest level since the 2020 Covid-19 bear market. (You can see a historical chart of the [VIX on MarketSurge](https://marketsurge.investors.com/?src=A012BF) by punching in "zero-VIX.")
 
 
-Overall, investors can witness a rise in investor pessimism.  
-总体而言，投资者可以见证投资者悲观情绪的上升。
+Overall, investors can witness a rise in investor pessimism.
 
 
-The weekly Investors Intelligence survey of pundits showed bullishness plunge to 46.9% last week. That's way down from a 2024 peak of 64.2%. The bears ratio rose to 18.7%, however, which is not at all an extreme level.  
-Investors Intelligence 对专家的每周调查显示，上周看涨率暴跌至 46.9%。这远低于 2024 年 64.2% 的峰值。然而，空头比率上升到 18.7%，这根本不是一个极端的水平。
+The weekly Investors Intelligence survey of pundits showed bullishness plunge to 46.9% last week. That's way down from a 2024 peak of 64.2%. The bears ratio rose to 18.7%, however, which is not at all an extreme level.
 
 
-For instance, when the stock market showed a bullish turn with a [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on Nov. 1, 2023, by the Nasdaq, the bears ratio had climbed to 25.7% during the Week of Oct. 30, 2023, vs. 18% in July the same year.  
-例如，当纳斯达克股市在 2023 年 11 月 1 日的[后续交易日](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)出现看涨转点时，空头比率在 2023 年 10 月 30 日当周攀升至 25.7%，而同年 7 月为 18%。
+For instance, when the stock market showed a bullish turn with a [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on Nov. 1, 2023, by the Nasdaq, the bears ratio had climbed to 25.7% during the Week of Oct. 30, 2023, vs. 18% in July the same year.
 
 
-Elsewhere, CNN's Fear And Greed Index on Monday edged up to 24, still in the zone of "Extreme Fear," on a scale of zero to 100.  
-在其他地方，CNN 的恐惧与贪婪指数周一小幅上升至 24，仍处于“极度恐惧”区域，范围为 0 到 100。
+Elsewhere, CNN's Fear And Greed Index on Monday edged up to 24, still in the zone of "Extreme Fear," on a scale of zero to 100.
 
 
 
@@ -65,8 +54,7 @@ Elsewhere, CNN's Fear And Greed Index on Monday edged up to 24, still in the zon
 ---
 
 
-[**Options Trading: Benefit From Future Volatility In Shopify This Way  
-期权交易：以这种方式从 Shopify 的未来波动中受益**](https://www.investors.com/research/options/shopify-stock-today-profitable-options-trade-earnings/)
+[**Options Trading: Benefit From Future Volatility In Shopify This Way**](https://www.investors.com/research/options/shopify-stock-today-profitable-options-trade-earnings/)
 
 
 
@@ -74,56 +62,45 @@ Elsewhere, CNN's Fear And Greed Index on Monday edged up to 24, still in the zon
 ---
 
 
-What The Charts Say 图表怎么说
--------------------------
+What The Charts Say
+-------------------
 
 
-In terms of chart-related technicals, however, virtually all of the key stock market benchmarks look uniformly weak. Hence, it makes 100% sense to remain conservative with new buys.  
-然而，就图表相关的技术面而言，几乎所有主要股市基准看起来都一致疲软。因此，对新购买保持保守是 100% 有意义的。
+In terms of chart-related technicals, however, virtually all of the key stock market benchmarks look uniformly weak. Hence, it makes 100% sense to remain conservative with new buys.
 
 
-Looking at the [Leaderboard model stock portfolio](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint), if you excluded the longest and largest holding, total long exposure among recently added stock market leaders is truly limited to around 20% to 25%.  
-从[排行榜模型股票投资组合](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)来看，如果排除最长和最大的持股，最近增加的股票市场领导者的总多头敞口确实限制在 20% 到 25% 左右。
+Looking at the [Leaderboard model stock portfolio](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint), if you excluded the longest and largest holding, total long exposure among recently added stock market leaders is truly limited to around 20% to 25%.
 
 
-Could we expect more activity in the second full week of trading in August? Absolutely.  
-我们能否预期 8 月交易的第二个完整周会有更多活动？绝对。
+Could we expect more activity in the second full week of trading in August? Absolutely.
 
 
-Tuesday, wholesale inflation numbers take center stage before the stock market opens. [According to Econoday](https://research.investors.com/economic-calendar/), producer level prices are seen rising 0.2% in July vs. June and increasing 2.6% year over year. But core prices, excluding volatile food and energy products, are still seen going up 3% vs. a year ago. That's above the Federal Reserve's comfort level of 2%.  
-周二，批发通胀数据在股市开盘前成为焦点。[根据 Econoday 的数据](https://research.investors.com/economic-calendar/)，预计 7 月份生产者层面的价格比 6 月份上涨 0.2%，同比上涨 2.6%。但不包括波动较大的食品和能源产品的核心价格仍预计与一年前相比上涨 3%。这高于美联储 2% 的舒适水平。
+Tuesday, wholesale inflation numbers take center stage before the stock market opens. [According to Econoday](https://research.investors.com/economic-calendar/), producer level prices are seen rising 0.2% in July vs. June and increasing 2.6% year over year. But core prices, excluding volatile food and energy products, are still seen going up 3% vs. a year ago. That's above the Federal Reserve's comfort level of 2%.
 
 
-The U.S. consumer price index follows right behind on Wednesday. Traders then greet monthly data on retail sales on Thursday.  
-美国消费者价格指数（CPI）周三紧随其后。然后，交易员将在周四迎接零售销售月度数据。
+The U.S. consumer price index follows right behind on Wednesday. Traders then greet monthly data on retail sales on Thursday.
 
 
-Outside The Stock Market: Less Bearish Tone股市之外：看跌基调减少
-------------------------------------------------------
+Outside The Stock Market: Less Bearish Tone
+-------------------------------------------
 
 
-Commodities enjoyed a banner session.  
-大宗商品价格上涨。
+Commodities enjoyed a banner session.
 
 
-Gold futures gained more than 1.5% to $2,511 per ounce. Indeed, 2024 has been a sparkling year for the precious metal. Silver has continued to back off its year-to-date peak of $32.75 an ounce, yet on Monday it rallied 1.6% to $28.03.  
-黄金期货上涨超过 1.5% 至每盎司 2,511 美元。事实上，2024 年对贵金属来说是闪耀的一年。白银继续从年初至今的每盎司 32.75 美元的峰值回落，但周一上涨 1.6% 至 28.03 美元。
+Gold futures gained more than 1.5% to $2,511 per ounce. Indeed, 2024 has been a sparkling year for the precious metal. Silver has continued to back off its year-to-date peak of $32.75 an ounce, yet on Monday it rallied 1.6% to $28.03.
 
 
-Even copper futures got into a bullish mood. According to Thinkorswim, futures of the metal said to have a Ph.D. in economics raced 2% higher to $4.07 a pound, up nearly 5% for the year.  
-甚至铜期货也进入了看涨情绪。根据 Thinkorswim 的数据，据称拥有经济学博士学位的金属期货飙升 2% 至每磅 4.07 美元，全年上涨近 5%。
+Even copper futures got into a bullish mood. According to Thinkorswim, futures of the metal said to have a Ph.D. in economics raced 2% higher to $4.07 a pound, up nearly 5% for the year.
 
 
-Meanwhile, crude oil futures on the NYMEX rose 4.2% to $80.06 per barrel. That marked a three-week high.  
-与此同时，纽约商品交易所的原油期货上涨 4.2% 至每桶 80.06 美元。这创下了三周的新高。
+Meanwhile, crude oil futures on the NYMEX rose 4.2% to $80.06 per barrel. That marked a three-week high.
 
 
-Crude's heavy gains made a splash in the stock market as well.  
-原油的大幅上涨也在股市引起了轰动。
+Crude's heavy gains made a splash in the stock market as well.
 
 
-Looking at the [industry groups tracked by IBD](https://www.investors.com/ibd-data-tables/), indeed, energy occupied a lot of space near the top. Early data showed at least six oil and gas related industries rising 1% or more. Gold and silver mining jumped 3.7%, the second strongest increase among 197 industries. Solar energy ramped up 1.1%.  
-从 [IBD 跟踪的行业群体](https://www.investors.com/ibd-data-tables/)来看，能源确实占据了顶部附近的很大空间。早期数据显示，至少有六个石油和天然气相关行业上涨了 1% 或更多。黄金和白银开采上涨 3.7%，在 197 个行业中涨幅第二大。太阳能上涨 1.1%。
+Looking at the [industry groups tracked by IBD](https://www.investors.com/ibd-data-tables/), indeed, energy occupied a lot of space near the top. Early data showed at least six oil and gas related industries rising 1% or more. Gold and silver mining jumped 3.7%, the second strongest increase among 197 industries. Solar energy ramped up 1.1%.
 
 
 
@@ -131,8 +108,7 @@ Looking at the [industry groups tracked by IBD](https://www.investors.com/ibd-da
 ---
 
 
-[**Stock Market Outlook For The Next 6 Months  
-未来 6 个月的股市展望**](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+[**Stock Market Outlook For The Next 6 Months**](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
 
 
 
@@ -144,16 +120,13 @@ On The Upside And Downside
 --------------------------
 
 
-At the individual stock level, **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)) deserves close monitoring. The team-oriented business software expert blasted 14.8% higher in massive volume on Monday after reporting stellar results. Shares cleared a choppy consolidation near 250. Only five sessions earlier, Monday.com found itself testing vital support at the long-term 200-day moving average.  
-在个种群层面，**Monday.com** （[MNDY）](https://research.investors.com/quote.aspx?symbol=MNDY) 值得密切监测。这家以团队为导向的商业软件专家在报告了出色的业绩后，周一大幅上涨了 14.8%。股价在 250 附近结束了震荡的盘整。仅在五个交易日之前，Monday.com 发现自己正在测试 200 天长期移动平均线的重要支撑。
+At the individual stock level, **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)) deserves close monitoring. The team-oriented business software expert blasted 14.8% higher in massive volume on Monday after reporting stellar results. Shares cleared a choppy consolidation near 250. Only five sessions earlier, Monday.com found itself testing vital support at the long-term 200-day moving average.
 
 
-As noted in [Monday's IBD Live episode](https://get.investors.com/ibd-live/?src=A00616), the company has gained momentum in growing large contracts. It saw big leaps in the number of clients with an annual recurring revenue (ARR) contract value of $50,000 or more as well as $100,000 or more.  
-正如[周一的 IBD Live 节目](https://get.investors.com/ibd-live/?src=A00616)中所指出的，该公司在发展大合同方面获得了动力。它看到年度经常性收入 （ARR） 合同价值为 50,000 美元或以上以及 100,000 美元或以上的客户数量大幅增加。
+As noted in [Monday's IBD Live episode](https://get.investors.com/ibd-live/?src=A00616), the company has gained momentum in growing large contracts. It saw big leaps in the number of clients with an annual recurring revenue (ARR) contract value of $50,000 or more as well as $100,000 or more.
 
 
-Monday.com is a "serial gapper," an expression coined by David Ryan, three-time winner of the U.S. Investing Championships and special guest on IBD Live every Tuesday. Put another way, the stock makes huge moves, both up or down, right after quarterly results. Such volatility makes the stock extra difficult to trade.  
-Monday.com 是一个“连续跳空者”，这是由美国投资锦标赛三届冠军、每周二 IBD Live 特邀嘉宾 David Ryan 创造的表达方式。换句话说，该股在季度业绩公布后立即出现大幅波动，无论是上涨还是下跌。这种波动性使该股更加难以交易。
+Monday.com is a "serial gapper," an expression coined by David Ryan, three-time winner of the U.S. Investing Championships and special guest on IBD Live every Tuesday. Put another way, the stock makes huge moves, both up or down, right after quarterly results. Such volatility makes the stock extra difficult to trade.
 
 
 
@@ -161,8 +134,7 @@ Monday.com 是一个“连续跳空者”，这是由美国投资锦标赛三届
 ---
 
 
-[**Here's The Latest IBD Podcast  
-这是最新的 IBD 播客**](https://get.investors.com/podcast/?src=A00511A)
+[**Here's The Latest IBD Podcast**](https://get.investors.com/podcast/?src=A00511A)
 
 
 
@@ -170,47 +142,38 @@ Monday.com 是一个“连续跳空者”，这是由美国投资锦标赛三届
 ---
 
 
-When Bottom Fishing Can Cause Bleeding当底钓会导致流血时
------------------------------------------------
+When Bottom Fishing Can Cause Bleeding
+--------------------------------------
 
 
-**JetBlue** ([JBLU](https://research.investors.com/quote.aspx?symbol=JBLU)), however, plunged more than 20% to 4.80, a seven-month low. Volume grew more than sevenfold to the highest level in more than a year. The airline announced plans to raise up to $400 million in convertible debt. That's a huge offering when you consider the potential dilutive nature of the plan. As on Monday, JetBlue's market value totaled $1.66 billion.  
-然而，**捷蓝航空** （[JBLU）](https://research.investors.com/quote.aspx?symbol=JBLU) 暴跌超过 20% 至 4.80，为 7 个月低点。交易量增长了七倍多，达到一年多来的最高水平。该航空公司宣布计划筹集高达 4 亿美元的可转换债务。当您考虑到该计划的潜在稀释性质时，这是一个巨大的提议。截至周一，捷蓝航空的市值总计为 16.6 亿美元。
+**JetBlue** ([JBLU](https://research.investors.com/quote.aspx?symbol=JBLU)), however, plunged more than 20% to 4.80, a seven-month low. Volume grew more than sevenfold to the highest level in more than a year. The airline announced plans to raise up to $400 million in convertible debt. That's a huge offering when you consider the potential dilutive nature of the plan. As on Monday, JetBlue's market value totaled $1.66 billion.
 
 
-**ELF Beauty** ([ELF](https://research.investors.com/quote.aspx?symbol=ELF)) dropped hard again, despite reversing bullishly on Aug. 5 and reclaiming its 200-day moving average. The rebound, however, stopped short of a close back above the 50-day line.  
-**ELF Beauty** （[ELF）](https://research.investors.com/quote.aspx?symbol=ELF) 再次大幅下跌，尽管在 8 月 5 日看涨反转并收复了 200 天移动均线。然而，反弹未能收于 50 日线上方。
+**ELF Beauty** ([ELF](https://research.investors.com/quote.aspx?symbol=ELF)) dropped hard again, despite reversing bullishly on Aug. 5 and reclaiming its 200-day moving average. The rebound, however, stopped short of a close back above the 50-day line.
 
 
-Last week, the disruptive innovator within the cosmetics industry reported a surprise flat fiscal first quarter earnings at $1.10 per share, despite a 50% leap in sales to $324.5 million. A year ago, earnings soared 182%, making for an incredibly tough comparison for this year's quarter.  
-上周，这家化妆品行业的颠覆性创新者报告称，尽管销售额增长了 50% 至 3.245 亿美元，但第一财季收益出人意料地持平，为每股 1.10 美元。一年前，收益飙升了 182%，与今年季度相比，这是一个非常艰难的比较。
+Last week, the disruptive innovator within the cosmetics industry reported a surprise flat fiscal first quarter earnings at $1.10 per share, despite a 50% leap in sales to $324.5 million. A year ago, earnings soared 182%, making for an incredibly tough comparison for this year's quarter.
 
 
-The stock's [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/what-is-relative-strength/) of 53 reflects the stock's diminished luster. Just four weeks ago, it was sparking at 96. But the [technical panel on ELF's MarketSurge chart](https://marketsurge.investors.com/?src=A012BF) also highlights a poor three-month RS Rating of 14 and a six-month rating of 19.  
-该股的[相对强弱评级](https://www.investors.com/how-to-invest/investors-corner/what-is-relative-strength/)为 53 分，反映了该股的光泽减弱。就在四个星期前，它还在 96 点闪耀。但 [ELF 的 MarketSurge 图表上的技术面板](https://marketsurge.investors.com/?src=A012BF)也强调了三个月的 RS 评级为 14 分，六个月的评级为 19 分。
+The stock's [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/what-is-relative-strength/) of 53 reflects the stock's diminished luster. Just four weeks ago, it was sparking at 96. But the [technical panel on ELF's MarketSurge chart](https://marketsurge.investors.com/?src=A012BF) also highlights a poor three-month RS Rating of 14 and a six-month rating of 19.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081224.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081224.pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:**
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
-想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[The Latest In IBD Videos  
-最新的 IBD 视频](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
 
 
-[IBD 50 Stocks To Watch  
-值得关注的 IBD 50 只股票](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
+[IBD 50 Stocks To Watch](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
 
 
 [Want To Find New Breakouts? Consult This List Each Day](https://research.investors.com/stocksonthemove.aspx)
