--- a/_columns/The_Big_Picture/zh-cn/2024-08-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-13.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Surges On Inflation Data And Fed Comments, Marking This Shift Ahead Of CPI	通胀数据和美联储评论导致股市飙升，标志着 CPI 之前的这一转变
+  Stock Market Surges On Inflation Data And Fed Comments, Marking This Shift Ahead Of CPI
 date: 2024-08-13 18:14 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,78 +10,62 @@ author: MICHAEL LARKIN
 
 
 
-The stock market surged Tuesday following benevolent inflation data and encouraging comments from a top Fed official. This triggered a bullish market shift ahead of Wednesday's consumer price index reading.  
-在温和的通胀数据和一位美联储高级官员的鼓舞人心的评论之后，股市周二飙升。这在周三消费者价格指数读数之前引发了看涨市场转变。
+The stock market surged Tuesday following benevolent inflation data and encouraging comments from a top Fed official. This triggered a bullish market shift ahead of Wednesday's consumer price index reading.
 
 
 
 
-Stocks are really gaining traction after last week's wild action. The Nasdaq rose 2.4% Tuesday and is now up 2.6% for the week so far. It has been rallying well since getting support at the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/). The tech-heavy composite is now back above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) after making the best four-day run since November 2022.  
-在上周的疯狂行动之后，股市确实获得了牵引力。纳斯达克指数周二上涨 2.4%，本周迄今上涨 2.6%。自从 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/)获得支撑以来，它一直反弹良好。以科技股为主的综合指数在创下 2022 年 11 月以来最好的四天表现后，现在回到了 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)上方。
+Stocks are really gaining traction after last week's wild action. The Nasdaq rose 2.4% Tuesday and is now up 2.6% for the week so far. It has been rallying well since getting support at the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/). The tech-heavy composite is now back above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) after making the best four-day run since November 2022.
 
 
-The Nasdaq's next task will to be to reclaim the 50-day moving  average, which is 367 points ahead.  
-纳斯达克的下一个任务将是收复领先 367 点的 50 天移动平均线。
+The Nasdaq's next task will to be to reclaim the 50-day moving  average, which is 367 points ahead.
 
 
-The S&P 500, meanwhile, turned in a significant gain of 1.7%, which it also holds for the week. The index is now within comfortable striking distance of the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and has pared its loss for the month to just 1.6%.  
-与此同时，标准普尔 500 指数大幅上涨 1.7%，本周也保持了这一水平。该指数现在距离 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)很近，并已将本月的跌幅缩减至仅 1.6%。
+The S&P 500, meanwhile, turned in a significant gain of 1.7%, which it also holds for the week. The index is now within comfortable striking distance of the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and has pared its loss for the month to just 1.6%.
 
 
-Advancers were on top of decliners by more than a 4-1 ratio on the New York Stock Exchange and by more than 13-to-5 on the Nasdaq, according to FactSet. Volume was higher, adding conviction to the day's moves.  
-根据 FactSet 的数据，纽约证券交易所的上涨股超过下跌的股票，比例超过 4：1，纳斯达克的上涨比例超过 13：5。成交量更高，为当天的走势增添了信心。
+Advancers were on top of decliners by more than a 4-1 ratio on the New York Stock Exchange and by more than 13-to-5 on the Nasdaq, according to FactSet. Volume was higher, adding conviction to the day's moves.
 
 
-The Dow Jones Industrial Average lagged the other major indexes on the stock market today, but it still rallied 408 points, or 1%. This was enough to propel it back above its 50-day line. Beaten-down chip giant **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and sportswear stock **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) were the top performers here. But the largest contributor to the Dow was **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)), which added nearly 59 of the Dow's points.  
-道琼斯工业平均指数今天落后于股市上的其他主要指数，但仍上涨了 408 点，或 1%。这足以推动其回到 50 日线上方。被击败的芯片巨头**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和运动服装股**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 是其中表现最好的股票。但道琼斯指数的最大贡献者是**联合健康** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)），它增加了道琼斯指数的近 59 点。
+The Dow Jones Industrial Average lagged the other major indexes on the stock market today, but it still rallied 408 points, or 1%. This was enough to propel it back above its 50-day line. Beaten-down chip giant **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and sportswear stock **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) were the top performers here. But the largest contributor to the Dow was **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)), which added nearly 59 of the Dow's points.
 
 
-Small caps also popped, with the Russell 2000 jumping 1.6%. It will now look to move convincingly clear of its 50-day line. Growth stocks were not quite so impressive, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.4%. The midcap S&P 400 rose 1.3%.  
-小盘股也大涨，罗素 2000 指数上涨 1.6%。它现在将寻求令人信服地摆脱其 50 天线。成长型股票的表现并不那么令人印象深刻，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金上涨 0.4%。中型股标准普尔 400 指数上涨 1.3%。
+Small caps also popped, with the Russell 2000 jumping 1.6%. It will now look to move convincingly clear of its 50-day line. Growth stocks were not quite so impressive, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.4%. The midcap S&P 400 rose 1.3%.
 
 
-Stock Market Outlook Improves股市前景改善
------------------------------------
+Stock Market Outlook Improves
+-----------------------------
 
 
-Tuesday's action qualified as a [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on both the S&P 500 and Nasdaq. Since the latter index corrected as much as 13% from its peak, it seems a more significant event.  
-周二的行动符合标准普尔 500 指数和纳斯达克指数的[后续交易日](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)的条件。由于后一个指数从峰值回调了 13%，因此这似乎是一个更重要的事件。
+Tuesday's action qualified as a [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on both the S&P 500 and Nasdaq. Since the latter index corrected as much as 13% from its peak, it seems a more significant event.
 
 
-![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP081324-229x300.jpg)Because of the bullish market action, IBD is lifting the recommended market exposure to the 20%-40% range. We will now look for continued bullish behavior, such as gains in strong volume and breakouts among top stocks, before considering a larger exposure level.  
-由于看涨的市场行为，IBD 将建议的市场敞口提高到 20%-40% 的范围内。在考虑更大的敞口水平之前，我们现在将寻找持续的看涨行为，例如强劲成交量的增加和顶级股票的突破。
+![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP081324-229x300.jpg)Because of the bullish market action, IBD is lifting the recommended market exposure to the 20%-40% range. We will now look for continued bullish behavior, such as gains in strong volume and breakouts among top stocks, before considering a larger exposure level.
 
 
-The S&P 500 faces a test of resistance at its 50-day moving average, and clearing that level would be another factor in deciding on a proper exposure level.  
-标准普尔 500 指数在其 50 天移动平均线面临阻力测试，清除该水平将是决定适当敞口水平的另一个因素。
+The S&P 500 faces a test of resistance at its 50-day moving average, and clearing that level would be another factor in deciding on a proper exposure level.
 
 
-Remember, many follow-through days fail, so raise exposure in a measured fashion. Look for top-performing stocks clearing proper buy points in high volume. Oddly, there were few breakouts Tuesday.  
-请记住，许多后续日子都失败了，因此请以有节制的方式提高曝光率。寻找表现最好的股票，大量清算适当的买入点。奇怪的是，周二几乎没有突破。
+Remember, many follow-through days fail, so raise exposure in a measured fashion. Look for top-performing stocks clearing proper buy points in high volume. Oddly, there were few breakouts Tuesday.
 
 
-Inflation Data, Fed's Bostic Boost Stocks; CPI Next通胀数据，美联储的博斯蒂克提振股票;CPI Next
------------------------------------------------------------------------------
+Inflation Data, Fed's Bostic Boost Stocks; CPI Next
+---------------------------------------------------
 
 
-Stocks were given an early boost due to a lighter-than-expected producer price index. The headline PPI rose 2.2% year over year in July, below economist expectations for 2.6%. Core PPI, which excludes food and energy, was up 2.4% on the year-ago period, also below views.  
-由于生产者价格指数低于预期，股市早盘受到提振。7 月份整体 PPI 同比上涨 2.2%，低于经济学家预期的 2.6%。不包括食品和能源的核心 PPI 同比上涨 2.4%，也低于预期。
+Stocks were given an early boost due to a lighter-than-expected producer price index. The headline PPI rose 2.2% year over year in July, below economist expectations for 2.6%. Core PPI, which excludes food and energy, was up 2.4% on the year-ago period, also below views.
 
 
-Meanwhile, Federal Reserve Bank of Atlanta President Raphael Bostic also stepped up to the plate to cheer investors with sunny comments at today's Conference of African American Financial Professionals.  
-与此同时，亚特兰大联邦储备银行行长拉斐尔·博斯蒂克 （Raphael Bostic） 也在今天的非裔美国金融专业人士会议上站出来，以阳光明媚的评论为投资者加油。
+Meanwhile, Federal Reserve Bank of Atlanta President Raphael Bostic also stepped up to the plate to cheer investors with sunny comments at today's Conference of African American Financial Professionals.
 
 
-He said he was encouraged by recent inflation figures and reiterated his stance that it's likely he'll be ready to cut rates by the end of the year.  
-他说，他对最近的通胀数据感到鼓舞，并重申了他的立场，即他很可能会准备在今年年底前降息。
+He said he was encouraged by recent inflation figures and reiterated his stance that it's likely he'll be ready to cut rates by the end of the year.
 
 
-"I'm hopeful that in the next several months, we'll be at a place where we have an economy that's pretty much fully normalized," Bostic added.  
-“我希望在接下来的几个月里，我们的经济将几乎完全正常化，”博斯蒂克补充道。
+"I'm hopeful that in the next several months, we'll be at a place where we have an economy that's pretty much fully normalized," Bostic added.
 
 
-The stage has been set for further gains if tomorrow's consumer price index also comes in tame. Headline CPI is expected to rise 3% year over year while core CPI is seen popping 3.2%.  
-如果明天的消费者价格指数也表现平和，那么进一步上涨的舞台已经准备好了。预计整体 CPI 将同比增长 3%，而核心 CPI 预计将上涨 3.2%。
+The stage has been set for further gains if tomorrow's consumer price index also comes in tame. Headline CPI is expected to rise 3% year over year while core CPI is seen popping 3.2%.
 
 
 
@@ -89,8 +73,7 @@ The stage has been set for further gains if tomorrow's consumer price index also
 ---
 
 
-[**Bullish Market Move As 5 Stocks Flash Buy Signals; CPI Inflation Data Due  
-看涨市场走势，5 只股票闪现买入信号;CPI 通胀数据即将公布**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bullish-move-cpi-inflation/)
+[**Bullish Market Move As 5 Stocks Flash Buy Signals; CPI Inflation Data Due**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bullish-move-cpi-inflation/)
 
 
 
@@ -98,64 +81,51 @@ The stage has been set for further gains if tomorrow's consumer price index also
 ---
 
 
-Big Moves For Chipotle, StarbucksChipotle、星巴克的大动作
--------------------------------------------------
+Big Moves For Chipotle, Starbucks
+---------------------------------
 
 
-Most of the [S&P 500 sectors ended Tuesday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Technology, communication services and consumer discretionary were strongest. Energy was the only area to end lower.  
-[标准普尔 500 指数的大部分板块周二收高](https://www.investors.com/category/etfs-and-funds/sectors/)。科技、通信服务和非必需消费品表现最为强劲。能源是唯一收低的领域。
+Most of the [S&P 500 sectors ended Tuesday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Technology, communication services and consumer discretionary were strongest. Energy was the only area to end lower.
 
 
 
-Those looking for a deeper insight into the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it by studying the relative performance of the 197 Investor's Business Daily industry groups.  
-那些希望更深入地了解[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)走势的人可以通过研究 197 个投资者商业日报行业团体的相对表现来了解它。
+Those looking for a deeper insight into the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it by studying the relative performance of the 197 Investor's Business Daily industry groups.
 
 
-Dairy products, computer hardware and educational software outperformed. Fabless chip stocks also popped, helped by a 6.5% surge from [Leaderboard stock](https://get.investors.com/leaderboard/) **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).  
-乳制品、计算机硬件和教育软件表现出色。无晶圆厂芯片股也大涨，这得益于[排行榜股票](https://get.investors.com/leaderboard/)**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 飙升 6.5%。
+Dairy products, computer hardware and educational software outperformed. Fabless chip stocks also popped, helped by a 6.5% surge from [Leaderboard stock](https://get.investors.com/leaderboard/) **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).
 
 
-In contrast, blank-check finance plays, a variety of oil & gas groups and discount retailers were among the worst performers on the stock market today.  
-相比之下，空白支票金融游戏、各种石油和天然气集团以及折扣零售商是今天股市表现最差的股票之一。
+In contrast, blank-check finance plays, a variety of oil & gas groups and discount retailers were among the worst performers on the stock market today.
 
 
-Finally, **Starbucks** ([SBUX](https://research.investors.com/quote.aspx?symbol=SBUX)) had its best day in history as it soared 24.5%, a whopping move considering it is a large-cap company. It is now worth $108.7 billion. The stock was jolted on the news that **Chipotle Mexican Grill** ([CMG](https://research.investors.com/quote.aspx?symbol=CMG)) CEO Brian Niccol is joining as its new CEO. He starts his new role in September.  
-最后，**星巴克** （[SBUX）](https://research.investors.com/quote.aspx?symbol=SBUX) 经历了历史上最好的一天，飙升了 24.5%，考虑到它是一家大型公司，这是一个惊人的举动。它现在价值 1087 亿美元。**Chipotle Mexican Grill** （[CMG](https://research.investors.com/quote.aspx?symbol=CMG)） 首席执行官 Brian Niccol 将加入担任新任 CEO 的消息后，该股受到震荡。他将于 9 月开始担任新职务。
+Finally, **Starbucks** ([SBUX](https://research.investors.com/quote.aspx?symbol=SBUX)) had its best day in history as it soared 24.5%, a whopping move considering it is a large-cap company. It is now worth $108.7 billion. The stock was jolted on the news that **Chipotle Mexican Grill** ([CMG](https://research.investors.com/quote.aspx?symbol=CMG)) CEO Brian Niccol is joining as its new CEO. He starts his new role in September.
 
 
-In contrast, Chipotle stock ended the day down 7.5%, gapping back below the 200-day moving average in the process. The stock has already been mired in a downtrend, with an [IBD Composite Rating of 82](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/) out of 99.  
-相比之下，Chipotle 股票当天收盘下跌 7.5%，在此过程中跳空回落至 200 天移动平均线下方。该股已经陷入下跌趋势，[IBD 综合评分为 82](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/) 分（满分 99 分）。
+In contrast, Chipotle stock ended the day down 7.5%, gapping back below the 200-day moving average in the process. The stock has already been mired in a downtrend, with an [IBD Composite Rating of 82](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/) out of 99.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081324.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081324.pdf)
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Investors Laugh All The Way To The Bank With 9 Dividend Stocks  
-投资者一路欢笑到 9 只股息股票的银行](https://www.investors.com/etfs-and-funds/sectors/sp500-investors-laugh-all-the-way-to-the-bank-dividend-stocks/)
+[Investors Laugh All The Way To The Bank With 9 Dividend Stocks](https://www.investors.com/etfs-and-funds/sectors/sp500-investors-laugh-all-the-way-to-the-bank-dividend-stocks/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions  
-股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
