--- a/_columns/The_Big_Picture/zh-cn/2024-08-16.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-16.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Posts Huge Weekly Gain, Triggers This; Powell Jackson Hole Speech Looms	股市每周大幅上涨，触发此情况;鲍威尔·杰克逊霍尔演讲迫在眉睫
+  Stock Market Posts Huge Weekly Gain, Triggers This; Powell Jackson Hole Speech Looms
 date: 2024-08-16 17:36 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,65 +10,53 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended a powerful week with another day of gains, spurring a further bullish shift. The release of the latest Federal Reserve minutes and a speech by Fed Chair Jerome Powell could move indexes in the coming week.  
-股市以又一天的上涨结束了强劲的一周，刺激了进一步的看涨转变。美联储最新会议纪要的发布和美联储主席杰罗姆鲍威尔的讲话可能会在未来一周影响指数。
+The stock market ended a powerful week with another day of gains, spurring a further bullish shift. The release of the latest Federal Reserve minutes and a speech by Fed Chair Jerome Powell could move indexes in the coming week.
 
 
 
 
-The Nasdaq composite squeezed out a gain of 0.2% Friday, but the true story is its mammoth weekly gain of 5.3%. It is now 12.2% above the previous week's low and sits a hair above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The tech-heavy index's gain for 2024 has spiked to 17.5%.  
-纳斯达克综合指数周五上涨了 0.2%，但真实情况是其 5.3% 的巨额周涨幅。它现在比上周的低点高出 12.2%，比其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)高出一点点。这个以科技股为主的指数在 2024 年的涨幅已飙升至 17.5%。
+The Nasdaq composite squeezed out a gain of 0.2% Friday, but the true story is its mammoth weekly gain of 5.3%. It is now 12.2% above the previous week's low and sits a hair above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The tech-heavy index's gain for 2024 has spiked to 17.5%.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/08/MP081624-300x284.jpg)
 
 
-The S&P 500 inched up 0.2% for the day while it nailed down its best weekly gain of the year so far with a 3.9% lift. The index has a more impressive gap above the 50-day line and now sits nearly 2% above the benchmark. Its gain for the year has now jumped to 16.4%.  
-标准普尔 500 指数当天小幅上涨 0.2%，同时以 3.9% 的涨幅创下今年迄今的最佳单周涨幅。该指数在 50 天线上方的差距更为明显，目前比基准高出近 2%。其今年的涨幅现已跃升至 16.4%。
+The S&P 500 inched up 0.2% for the day while it nailed down its best weekly gain of the year so far with a 3.9% lift. The index has a more impressive gap above the 50-day line and now sits nearly 2% above the benchmark. Its gain for the year has now jumped to 16.4%.
 
 
-Advancers led decliners almost 2-to-1 on the New York Stock Exchange and by more than 1.5-to-1 on the Nasdaq. Volume was lower for each on Friday.  
-纽约证券交易所的涨幅几乎是 2 比 1，纳斯达克的涨幅超过 1.5 比 1。周五每辆车的成交量都较低。
+Advancers led decliners almost 2-to-1 on the New York Stock Exchange and by more than 1.5-to-1 on the Nasdaq. Volume was lower for each on Friday.
 
 
-Encouraging Actions Spurs This Move鼓励行动推动这一举措
----------------------------------------------
+Encouraging Actions Spurs This Move
+-----------------------------------
 
 
-The Dow Jones Industrial Average held its own against the other major indexes on the stock market today. It rose 0.2% Friday and was up 2.9% for the week. **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) were strongest here while **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) lagged.  
-道琼斯工业平均指数与当今股市上的其他主要指数相比保持稳定。周五上涨 0.2%，本周上涨 2.9%。**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和**思科系统** （[CSCO）](https://research.investors.com/quote.aspx?symbol=CSCO) 在这方面表现最强，而**卡特彼**勒 （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 则落后。
+The Dow Jones Industrial Average held its own against the other major indexes on the stock market today. It rose 0.2% Friday and was up 2.9% for the week. **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) were strongest here while **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) lagged.
 
 
-Small caps partook in the broad rally, with the Russell 2000 rising 0.3% for the day and 3% for the week. Growth stocks popped, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.6% Friday, though it remains below both the 200-day and 50-day lines.  
-小盘股参与了广泛的反弹，罗素 2000 指数当天上涨 0.3%，本周上涨 3%。成长型股票大放异彩，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金周五上涨 0.6%，但仍低于 200 天和 50 天线。
+Small caps partook in the broad rally, with the Russell 2000 rising 0.3% for the day and 3% for the week. Growth stocks popped, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rising 0.6% Friday, though it remains below both the 200-day and 50-day lines.
 
 
-Stocks built on recent gains Friday, which means the current market rally is continuing to prove itself. The Nasdaq composite ended the week above its key 50-day moving average while the S&P 500 is solidly above that benchmark and also moved above its close for the July 31 follow-through day.  
-股市周五在最近的涨幅基础上继续上涨，这意味着当前的市场反弹正在继续证明自己。纳斯达克综合指数本周收于其关键的 50 天移动平均线上方，而标准普尔 500 指数稳固高于该基准，并在 7 月 31 日的后续交易日也升至收盘价上方。
+Stocks built on recent gains Friday, which means the current market rally is continuing to prove itself. The Nasdaq composite ended the week above its key 50-day moving average while the S&P 500 is solidly above that benchmark and also moved above its close for the July 31 follow-through day.
 
 
-Because of this, Investor's Business Daily is raising its recommended market exposure level to the 60% to 80% range. Investors should continue to add exposure in a measured fashion. Look to open new positions, or add to existing ones, as issues clear proper buy points.  
-因此，Investor's Business Daily 将其建议的市场敞口水平提高到 60% 至 80% 的范围。投资者应继续以谨慎的方式增加敞口。寻求开设新头寸或增加现有头寸，因为问题清除了适当的买入点。
+Because of this, Investor's Business Daily is raising its recommended market exposure level to the 60% to 80% range. Investors should continue to add exposure in a measured fashion. Look to open new positions, or add to existing ones, as issues clear proper buy points.
 
 
-Fed Minutes And Powell Speech Loom美联储会议纪要和鲍威尔讲话
------------------------------------------------
+Fed Minutes And Powell Speech Loom
+----------------------------------
 
 
-Benevolent inflation readings and encouraging jobless claims data this week helped soothe recession fears among investors. Additionally, better-than-expected U.S. retail sales in July and a [strong earnings report](https://www.investors.com/news/walmart-earnings-q2-walmart-stock-amazon-home-depot/) from **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) eased worries over the health of the consumer. This was a potent cocktail that allowed indexes to claw back much of their recent losses.  
-本周温和的通胀数据和令人鼓舞的初请失业金人数数据帮助缓解了投资者对经济衰退的担忧。此外，美国 7 月份零售额好于预期，沃尔**玛** （[WMT）](https://research.investors.com/quote.aspx?symbol=WMT) 强劲的[收益报告](https://www.investors.com/news/walmart-earnings-q2-walmart-stock-amazon-home-depot/)缓解了对消费者健康状况的担忧。这是一种有效的鸡尾酒，使指数能够收复最近的大部分损失。
+Benevolent inflation readings and encouraging jobless claims data this week helped soothe recession fears among investors. Additionally, better-than-expected U.S. retail sales in July and a [strong earnings report](https://www.investors.com/news/walmart-earnings-q2-walmart-stock-amazon-home-depot/) from **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) eased worries over the health of the consumer. This was a potent cocktail that allowed indexes to claw back much of their recent losses.
 
 
-The coming week features a few noteworthy events that could further drive the stock market. Monday sees the release of the U.S. leading economic indicators for July. Meanwhile, the minutes from the July Federal Open Market Committee meeting come Wednesday.  
-未来一周将发生一些值得注意的事件，这些事件可能会进一步推动股市。周一将发布美国 7 月份领先经济指标。与此同时，7 月联邦公开市场委员会会议纪要将于周三公布。
+The coming week features a few noteworthy events that could further drive the stock market. Monday sees the release of the U.S. leading economic indicators for July. Meanwhile, the minutes from the July Federal Open Market Committee meeting come Wednesday.
 
 
-There will also be a slew of Fedspeak, with Fed Chair Jerome Powell's speech at Jackson Hole Economic Symposium on Friday being the main event. Investors will be keen to hear any guidance on the future direction of interest rates.  
-还将有一系列美联储讲话，美联储主席杰罗姆鲍威尔周五在杰克逊霍尔经济研讨会上的讲话是主要活动。投资者将热衷于听到有关利率未来方向的任何指导。
+There will also be a slew of Fedspeak, with Fed Chair Jerome Powell's speech at Jackson Hole Economic Symposium on Friday being the main event. Investors will be keen to hear any guidance on the future direction of interest rates.
 
 
-There will also be some noteworthy [earnings reports in the coming week.](https://www.investors.com/research/earnings-preview/palo-alto-stock-target-stock-retail-earnings/) These include **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)), **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)) and restaurant stock **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)). A slew of retailers are also due, including **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)), **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and **Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)).  
-未来一周还将发布一些值得注意[的收益报告。](https://www.investors.com/research/earnings-preview/palo-alto-stock-target-stock-retail-earnings/)其中包括 **Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)）、**Workday** （[WDAY）](https://research.investors.com/quote.aspx?symbol=WDAY) 和餐厅股票 **Cava** （[CAVA）。](https://research.investors.com/quote.aspx?symbol=CAVA)包括**塔吉特** （[TGT](https://research.investors.com/quote.aspx?symbol=TGT)）、**梅西百货** （[M](https://research.investors.com/quote.aspx?symbol=M)） 和**劳氏** （[LOW）](https://research.investors.com/quote.aspx?symbol=LOW) 在内的一系列零售商也即将上市。
+There will also be some noteworthy [earnings reports in the coming week.](https://www.investors.com/research/earnings-preview/palo-alto-stock-target-stock-retail-earnings/) These include **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)), **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)) and restaurant stock **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)). A slew of retailers are also due, including **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)), **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and **Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)).
 
 
 
@@ -76,8 +64,7 @@ There will also be some noteworthy [earnings reports in the coming week.](https:
 ---
 
 
-**[Powell Due After Best Week Of 2024; Three AI Stocks Near Buy Points  
-鲍威尔将在 2024 年最佳一周之后到期;买入点附近的三只 AI 股票](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-powell-jackson-hole-speech-nvidia-ai-stocks/)**
+**[Powell Due After Best Week Of 2024; Three AI Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-powell-jackson-hole-speech-nvidia-ai-stocks/)**
 
 
 
@@ -88,56 +75,45 @@ There will also be some noteworthy [earnings reports in the coming week.](https:
  
 
 
-These Stock Market Groups Up As Gold Shines这些股市随着黄金的闪耀而上涨
----------------------------------------------------------
+These Stock Market Groups Up As Gold Shines
+-------------------------------------------
 
 
-A majority of the [S&P 500 sectors ended Friday with gains](https://www.investors.com/category/etfs-and-funds/sectors/). Financials, utilities and technology led the upside while energy and industrials lagged.  
-[标准普尔 500 指数的大部分板块周五收盘上涨](https://www.investors.com/category/etfs-and-funds/sectors/)。金融、公用事业和科技板块领涨，而能源和工业板块落后。
+A majority of the [S&P 500 sectors ended Friday with gains](https://www.investors.com/category/etfs-and-funds/sectors/). Financials, utilities and technology led the upside while energy and industrials lagged.
 
 
 
-The relative performance of the IBD industry groups offered a more nuanced view of the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
-IBD 行业团体的相对表现为[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的行动提供了更细致的看法。
+The relative performance of the IBD industry groups offered a more nuanced view of the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
 
 
-It was a strong day for retailers, with office supplies sellers, specialty retailers and drugstores among the best performers. Gold miners, including [Leaderboard stock](https://get.investors.com/leaderboard/) **Agnico Eagle Mines** ([AEM](https://research.investors.com/quote.aspx?symbol=AEM)), also impressed on a day gold futures moved above the 25,000 level.  
-对于零售商来说，这是表现强劲的一天，办公用品销售商、专业零售商和药店表现最好。包括[排行榜股票](https://get.investors.com/leaderboard/)**Agnico Eagle Mines** （[AEM](https://research.investors.com/quote.aspx?symbol=AEM)） 在内的黄金矿商在黄金期货突破 25,000 点水平的一天也给人留下了深刻的印象。
+It was a strong day for retailers, with office supplies sellers, specialty retailers and drugstores among the best performers. Gold miners, including [Leaderboard stock](https://get.investors.com/leaderboard/) **Agnico Eagle Mines** ([AEM](https://research.investors.com/quote.aspx?symbol=AEM)), also impressed on a day gold futures moved above the 25,000 level.
 
 
-In contrast, long-term medical care firms, cable stocks, replacement auto parts companies and airlines all struggled. The chip equipment group also struggled on a day **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)) tumbled despite serving up better-than-expected quarterly results.  
-相比之下，长期医疗保健公司、电缆股、替代汽车零部件公司和航空公司都陷入困境。芯片设备组在应用**材料公司** （[AMAT）](https://research.investors.com/quote.aspx?symbol=AMAT) 暴跌的一天也陷入困境，尽管其季度业绩好于预期。
+In contrast, long-term medical care firms, cable stocks, replacement auto parts companies and airlines all struggled. The chip equipment group also struggled on a day **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)) tumbled despite serving up better-than-expected quarterly results.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_O081624.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_O081624.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_O081624.pdf).
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Breakout Watch: This Steve Jobs Favorite Jumps Into Buy Range  
-突破观察：史蒂夫乔布斯最喜欢的这个跳入买入范围](https://www.investors.com/research/ibd-stock-analysis/birkenstock-ipo-birk-stock-breakout/)
+[Breakout Watch: This Steve Jobs Favorite Jumps Into Buy Range](https://www.investors.com/research/ibd-stock-analysis/birkenstock-ipo-birk-stock-breakout/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions  
-股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
