--- a/_columns/The_Big_Picture/zh-cn/2024-08-21.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-21.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Extends Advance, But These Two Signals Hint At Possible Pause	股市延续涨势，但这两个信号暗示可能暂停
+  Stock Market Extends Advance, But These Two Signals Hint At Possible Pause
 date: 2024-08-21 17:25 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,113 +10,90 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market wavered for much of Wednesday's session but closed higher as the S&P 500 came even closer to record highs.  
-股市在周三的大部分时间里都波动，但随着标准普尔 500 指数更接近历史高点，收盘走高。
+The stock market wavered for much of Wednesday's session but closed higher as the S&P 500 came even closer to record highs.
 
 
 
 
-The S&P 500 rose 0.4% for its ninth gain in the past 10 sessions. The index is less than 1% from a record high, after sprinting nearly 10% from its Aug. 5 low. The Dow Jones Industrial Average, about 1% away from its own record high, edged upward by 0.1%.  
-标准普尔 500 指数上涨 0.4%，这是过去 10 个交易日中的第 9 次上涨。该指数从 8 月 5 日的低点飙升近 10% 后，距离历史高点不到 1%。道琼斯工业平均指数（Dow Jones Industrial Average）距离自己的历史高点仅差约 1%，小幅上涨 0.1%。
+The S&P 500 rose 0.4% for its ninth gain in the past 10 sessions. The index is less than 1% from a record high, after sprinting nearly 10% from its Aug. 5 low. The Dow Jones Industrial Average, about 1% away from its own record high, edged upward by 0.1%.
 
 
-Like other indexes, the Nasdaq composite closed near session highs, up 0.6% and near the 18,000 level. Small caps led the market, with the Russell 2000 up 1.3%.  
-与其他指数一样，纳斯达克综合指数收于盘中高点附近，上涨 0.6% 并接近 18,000 点水平。小盘股领涨，罗素 2000 指数上涨 1.3%。
+Like other indexes, the Nasdaq composite closed near session highs, up 0.6% and near the 18,000 level. Small caps led the market, with the Russell 2000 up 1.3%.
 
 
-Volume rose on the New York Stock Exchange but fell on the Nasdaq exchange. Advancing stocks topped decliners by more than 3-to-1 on the NYSE and by nearly 5-to-2 on the Nasdaq, according to FactSet.  
-纽约证券交易所的成交量上升，但纳斯达克交易所的成交量下降。根据 FactSet 的数据，纽约证券交易所上涨的股票比下跌的股票高出 3 比 1 以上，纳斯达克的涨幅接近 5 比 2。
+Volume rose on the New York Stock Exchange but fell on the Nasdaq exchange. Advancing stocks topped decliners by more than 3-to-1 on the NYSE and by nearly 5-to-2 on the Nasdaq, according to FactSet.
 
 
-A Bump From The Fed来自美联储的冲击
+A Bump From The Fed
+-------------------
+
+
+Stock market indexes saw a temporary bump up after minutes of the most recent Federal Reserve meeting were released at 2 p.m. ET.
+
+
+Fed Chair Jerome Powell had said a September rate cut was "on the table," and the minutes provided some clarity on that. The documents said that a "vast majority" of policymakers believed that if economic data doesn't surprise, "it would likely be appropriate to ease policy at the next meeting."
+
+
+Some officials believed jobs gains were overstated, and Wednesday's [massive revision of employment data](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/) seemed to confirm their suspicions.
+
+
+![](https://www.investors.com/wp-content/uploads/2024/08/MP082124.jpg)Bond traders also grew more comfortable with the chances of lower interest rates: The 10-year Treasury yield fell four basis points to 3.778% – a 13-month low.
+
+
+Meanwhile, the IBD 50 index rose nearly 0.8% Wednesday.
+
+
+Stock Market Ready For Pause?
+-----------------------------
+
+
+A month that started out with panic selling has come back with a [follow-through](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on Aug. 13 and continued gains. Since that rally confirmation signal, the stock market indexes have yet to record a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/).
+
+
+While the stock market uptrend continues to hum, indexes are reaching potential resistance levels, including the S&P's prior high at 5,669. A pullback would not necessarily hurt the market uptrend. In fact, it could help the market settle down and avoid getting too far ahead of itself.
+
+
+[MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s NYSE Short Term Overbought-Oversold Oscillator has climbed to overbought levels near the market peaks of May and July.
+
+
+Second, this month's market volume shows buying hasn't been as robust as the market rebound would suggest. The [Accumulation/Distribution Ratings of the major indexes](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082024.pdf) are at or near lowest-possible readings. That's exactly where those ratings were when the market bottomed Aug. 5.
+
+
+Still, with stock market signals mostly positive, Investor's Business Daily continues to recommend an exposure level of 60% to 80%.
+
+
+Retail Stocks Offer A Boost
 ---------------------------
 
 
-Stock market indexes saw a temporary bump up after minutes of the most recent Federal Reserve meeting were released at 2 p.m. ET.  
-在美国东部时间下午 2 点发布最近的美联储会议纪要后，股市指数暂时上涨。
+SPDR Retail ETF ([XRT](https://research.investors.com/quote.aspx?symbol=XRT)) rose 1.3% to a three-week high. The Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) led S&P sector ETFs with a 1.3% increase.
 
 
-Fed Chair Jerome Powell had said a September rate cut was "on the table," and the minutes provided some clarity on that. The documents said that a "vast majority" of policymakers believed that if economic data doesn't surprise, "it would likely be appropriate to ease policy at the next meeting."  
-美联储主席杰罗姆鲍威尔曾表示，9 月降息“已提上日程”，会议纪要对此提供了一些明确性。文件称，“绝大多数”政策制定者认为，如果经济数据不令人意外，“在下次会议上放松政策可能是合适的”。
+Yet, it was discount retail that truly stood out Wednesday on the stock market, thanks in large part to a [bullish quarterly report](https://www.investors.com/news/target-earnings-q-2-2024-target-stock-walmart-amazon/) from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)). The stock soared more than 11% to close at the highest since mid-May.
 
 
-Some officials believed jobs gains were overstated, and Wednesday's [massive revision of employment data](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/) seemed to confirm their suspicions.  
-一些官员认为就业增长被夸大了，周三[对就业数据的大规模修正](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/)似乎证实了他们的怀疑。
+**Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) rose nearly 1% to a record high. A six-day win streak has sent shares up about 10%. It is Walmart's best six-day stretch since a run ending Sept. 3, 2020, when it rose 10.6%, according to Dow Jones Market Data. Reports said the retailer [sold its 9.4% stake](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/) in China-based **JD.com** ([JD](https://research.investors.com/quote.aspx?symbol=JD)) for $3.6 billion.
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP082124.jpg)Bond traders also grew more comfortable with the chances of lower interest rates: The 10-year Treasury yield fell four basis points to 3.778% – a 13-month low.  
-债券交易员也对降息的可能性更加放心：10 年期美国国债收益率下跌 4 个基点至 3.778%，创下 13 个月低点。
+By comparison, department store chain **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) plunged nearly 13% after the company's [quarterly sales fell nearly 4%](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/) and missed estimates.
 
 
-Meanwhile, the IBD 50 index rose nearly 0.8% Wednesday.  
-与此同时，IBD 50 指数周三上涨近 0.8%。
+Some stock market strategists noted that the strength in retail rested primarily in discount chains, which may suggest consumers are reining in their spending.
 
 
-Stock Market Ready For Pause?股市准备好暂停了吗？
----------------------------------------
+The Consumer Staples Select Sector SPDR ([XLP](https://research.investors.com/quote.aspx?symbol=XLP)) rose to an all-time high Wednesday, and this month's gain of nearly 5% leads all other S&P sectors. The utilities sector is up 3.4% in August. The sector also is associated with defensive trading, but could be benefiting from a decline in competing Treasury yields.
 
 
-A month that started out with panic selling has come back with a [follow-through](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) on Aug. 13 and continued gains. Since that rally confirmation signal, the stock market indexes have yet to record a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/).  
-一个月以恐慌性抛售开始，然后在 8 月 13 [日卷](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)土重来，并继续上涨。自该反弹确认信号以来，股市指数尚未记录[过分发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082124.pdf)
 
 
-While the stock market uptrend continues to hum, indexes are reaching potential resistance levels, including the S&P's prior high at 5,669. A pullback would not necessarily hurt the market uptrend. In fact, it could help the market settle down and avoid getting too far ahead of itself.  
-虽然股市上涨趋势继续嗡嗡作响，但指数正在达到潜在的阻力位，包括标准普尔指数之前的高点 5,669 点。回调不一定会损害市场上升趋势。事实上，它可以帮助市场稳定下来，避免太超前。
+**YOU MAY ALSO LIKE:**
 
 
-[MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s NYSE Short Term Overbought-Oversold Oscillator has climbed to overbought levels near the market peaks of May and July.  
-[MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的纽约证券交易所短期超买-超卖震荡指标已攀升至 5 月和 7 月市场峰值附近的超买水平。
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-Second, this month's market volume shows buying hasn't been as robust as the market rebound would suggest. The [Accumulation/Distribution Ratings of the major indexes](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082024.pdf) are at or near lowest-possible readings. That's exactly where those ratings were when the market bottomed Aug. 5.  
-其次，本月的市场成交量显示，买盘并不像市场反弹所暗示的那样强劲。[主要指数的累积/派发评级](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082024.pdf)处于或接近可能的最低读数。这正是 8 月 5 日市场触底时的收视率。
-
-
-Still, with stock market signals mostly positive, Investor's Business Daily continues to recommend an exposure level of 60% to 80%.  
-尽管如此，由于股市信号大多是积极的，《投资者商业日报》继续建议 60% 至 80% 的敞口水平。
-
-
-Retail Stocks Offer A Boost零售股提振
---------------------------------
-
-
-SPDR Retail ETF ([XRT](https://research.investors.com/quote.aspx?symbol=XRT)) rose 1.3% to a three-week high. The Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) led S&P sector ETFs with a 1.3% increase.  
-SPDR Retail ETF （[XRT](https://research.investors.com/quote.aspx?symbol=XRT)） 上涨 1.3% 至三周高点。非必需消费品精选行业 SPDR （[XLY](https://research.investors.com/quote.aspx?symbol=XLY)） 以 1.3% 的涨幅领先标准普尔行业 ETF。
-
-
-Yet, it was discount retail that truly stood out Wednesday on the stock market, thanks in large part to a [bullish quarterly report](https://www.investors.com/news/target-earnings-q-2-2024-target-stock-walmart-amazon/) from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)). The stock soared more than 11% to close at the highest since mid-May.  
-然而，周三在股市上真正脱颖而出的是折扣零售，这在很大程度上要归功于 **Target** （[TGT）](https://research.investors.com/quote.aspx?symbol=TGT) 的[看涨季度报告](https://www.investors.com/news/target-earnings-q-2-2024-target-stock-walmart-amazon/)。该股飙升超过 11%，收于 5 月中旬以来的最高水平。
-
-
-**Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) rose nearly 1% to a record high. A six-day win streak has sent shares up about 10%. It is Walmart's best six-day stretch since a run ending Sept. 3, 2020, when it rose 10.6%, according to Dow Jones Market Data. Reports said the retailer [sold its 9.4% stake](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/) in China-based **JD.com** ([JD](https://research.investors.com/quote.aspx?symbol=JD)) for $3.6 billion.  
-**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 上涨近 1% 至历史新高。连续六天的上涨使股价上涨了约 10%。根据道琼斯市场数据，这是沃尔玛自 2020 年 9 月 3 日结束的上涨以来最好的六天表现，当时上涨 10.6%。报道称，该零售商以 36 亿美元的价格出售了其在中国 **JD.com** （[JD）](https://research.investors.com/quote.aspx?symbol=JD) [9.4% 的股份](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/)。
-
-
-By comparison, department store chain **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) plunged nearly 13% after the company's [quarterly sales fell nearly 4%](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/) and missed estimates.  
-相比之下，百货连锁店**梅西**百货 （[M](https://research.investors.com/quote.aspx?symbol=M)） 暴跌近 13%，此前该公司[的季度销售额下降了近 4%](https://www.investors.com/news/walmart-stock-jd-macys-tjx-discount-retailers-dltr-dg/) 且低于预期。
-
-
-Some stock market strategists noted that the strength in retail rested primarily in discount chains, which may suggest consumers are reining in their spending.  
-一些股市策略师指出，零售业的实力主要在于折扣连锁店，这可能表明消费者正在控制他们的支出。
-
-
-The Consumer Staples Select Sector SPDR ([XLP](https://research.investors.com/quote.aspx?symbol=XLP)) rose to an all-time high Wednesday, and this month's gain of nearly 5% leads all other S&P sectors. The utilities sector is up 3.4% in August. The sector also is associated with defensive trading, but could be benefiting from a decline in competing Treasury yields.  
-消费必需品精选板块 SPDR （[XLP](https://research.investors.com/quote.aspx?symbol=XLP)） 周三升至历史新高，本月上涨近 5%，领先于所有其他标准普尔板块。公用事业板块 8 月份上涨 3.4%。该行业也与防御易有关，但可能会从竞争性美国国债收益率的下跌中受益。
-
-
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082124.pdf)
-
-
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
-
-
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
-
-
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
 [IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
