--- a/_columns/The_Big_Picture/zh-cn/2024-08-23.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-23.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Rallies As Powell Signals This Interest Rate Shift; Nvidia Earnings Loom	随着鲍威尔发出利率转变的信号，股市反弹;Nvidia 收益迫在眉睫
+  Stock Market Rallies As Powell Signals This Interest Rate Shift; Nvidia Earnings Loom
 date: 2024-08-23 17:30 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,118 +10,93 @@ author: MICHAEL LARKIN
 
 
 
-The stock market rallied after Federal Reserve Chairman Jerome Powell indicated interest rate cuts are imminent. Now **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) earnings and critical inflation data loom.  
-在美联储主席杰罗姆鲍威尔表示即将降息后，股市上涨。现在**，英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 的收益和关键的通胀数据迫在眉睫。
+The stock market rallied after Federal Reserve Chairman Jerome Powell indicated interest rate cuts are imminent. Now **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) earnings and critical inflation data loom.
 
 
 
 
-The Nasdaq composite fared best among the major indexes Friday, jumping 1.5%. This actually outstripped its weekly gain of 1.4%. It ended the week back above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) but remains well below recent highs. The tech-heavy index is now up 19.1% for the year.  
-纳斯达克综合指数周五在主要指数中表现最佳，上涨 1.5%。这实际上超过了其每周 1.4% 的涨幅。本周收盘时，它回到了 [50 天移动平均线上方](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)，但仍远低于近期高点。以科技股为主的指数今年上涨了 19.1%。
+The Nasdaq composite fared best among the major indexes Friday, jumping 1.5%. This actually outstripped its weekly gain of 1.4%. It ended the week back above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) but remains well below recent highs. The tech-heavy index is now up 19.1% for the year.
 
 
-The S&P 500 rose 1.2% for the day but notched a better weekly gain of 1.5%. It sits clear of its short-term and major moving averages and is getting close to all-time high levels. Its year-to-date gain has risen to 18.1%. The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund made a new closing high.  
-标准普尔 500 指数当天上涨 1.2%，但每周涨幅为 1.5%。它避开了短期和主要移动平均线，并接近历史高位。其年初至今的涨幅已升至 18.1%。Invesco S&P 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金创下收盘新高。
+The S&P 500 rose 1.2% for the day but notched a better weekly gain of 1.5%. It sits clear of its short-term and major moving averages and is getting close to all-time high levels. Its year-to-date gain has risen to 18.1%. The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund made a new closing high.
 
 
-Advancers led decliners almost 8-to-1 on the New York Stock Exchange and by more than 3-to-1 on the Nasdaq. Volume was higher for both, a bullish sign.  
-纽约证券交易所的涨幅几乎是 8 比 1，纳斯达克的涨幅超过 3 比 1。两者的成交量都更高，这是一个看涨信号。
+Advancers led decliners almost 8-to-1 on the New York Stock Exchange and by more than 3-to-1 on the Nasdaq. Volume was higher for both, a bullish sign.
 
 
-The Dow Jones Industrial Average finished only slightly behind the other major indexes. It notched a 1.1% lift Friday, which accounted for the bulk of its 1.3% weekly gain.  
-道琼斯工业平均指数收盘仅略微落后于其他主要指数。周五，该指数上涨了 1.1%，占其 1.3% 的周涨幅的大部分。
+The Dow Jones Industrial Average finished only slightly behind the other major indexes. It notched a 1.1% lift Friday, which accounted for the bulk of its 1.3% weekly gain.
 
 
-**Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) fared the best, while **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) and **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)) were the only Dow components to close lower.  
-**家得宝**（[HD](https://research.investors.com/quote.aspx?symbol=HD)）和高**盛**（[GS）](https://research.investors.com/quote.aspx?symbol=GS)表现最好，而**宝洁**（[PG）](https://research.investors.com/quote.aspx?symbol=PG)和**Visa**（[V](https://research.investors.com/quote.aspx?symbol=V)）是唯一收低的道琼斯指数成分。
+**Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) and **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) fared the best, while **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) and **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)) were the only Dow components to close lower.
 
 
-Small caps gave the bears the biggest spanking though, with the Russell 2000 rising 3.2%. Growth stocks also had a strong session, with the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) rising 1.7% Friday.  
-不过，小盘股给空头的打击最大，罗素 2000 指数上涨 3.2%。成长型股票也表现强劲，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周五上涨 1.7%。
+Small caps gave the bears the biggest spanking though, with the Russell 2000 rising 3.2%. Growth stocks also had a strong session, with the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) rising 1.7% Friday.
 
 
-Powell Comments Boost Stocks; Nvidia Earnings Loom鲍威尔的评论提振了股市;Nvidia 收益迫在眉睫
----------------------------------------------------------------------------
+Powell Comments Boost Stocks; Nvidia Earnings Loom
+--------------------------------------------------
 
 
-Fed Chair Powell unlocked a stock market rally after he made dovish comments in his long-awaited speech at the Jackson Hole Economic Policy Symposium Friday.  
-美联储主席鲍威尔周五在杰克逊霍尔经济政策研讨会上发表了期待已久的鸽派言论，随后引发股市反弹。
+Fed Chair Powell unlocked a stock market rally after he made dovish comments in his long-awaited speech at the Jackson Hole Economic Policy Symposium Friday.
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP082324.jpg)"The time has come for policy to adjust. The direction of travel is clear, and the timing and pace of rate cuts will depend on incoming data, the evolving outlook and the balance of risks," he said.  
-“现在是调整政策的时候了。前进的方向很明确，降息的时间和速度将取决于传入的数据、不断变化的前景和风险平衡，“他说。
+![](https://www.investors.com/wp-content/uploads/2024/08/MP082324.jpg)"The time has come for policy to adjust. The direction of travel is clear, and the timing and pace of rate cuts will depend on incoming data, the evolving outlook and the balance of risks," he said.
 
 
-[The CME FedWatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) rates the chance of a cut at the next Federal Open Market Committee meeting as a virtual certainty, with a 25-basis-point cut seen as 63.5% likely and a 50-basis-point cut rated as a 36.5% likelihood.  
-[CME FedWatch 工具](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html)将下一次联邦公开市场委员会会议降息的可能性评为几乎确定，降息 25 个基点的可能性为 63.5%，降息 50 个基点的可能性为 36.5%。
+[The CME FedWatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) rates the chance of a cut at the next Federal Open Market Committee meeting as a virtual certainty, with a 25-basis-point cut seen as 63.5% likely and a 50-basis-point cut rated as a 36.5% likelihood.
 
 
-While the markets responded positively to Powell's comments, the Nasdaq remains below the 18,000 level. As a result, Investor's Business Daily is holding its recommended exposure level in the 60% to 80% range. But with the current bullish action it makes sense to be at the top end of this range.  
-虽然市场对鲍威尔的言论反应积极，但纳斯达克指数仍低于 18,000 点。因此，Investor's Business Daily 将其建议的曝光水平保持在 60% 至 80% 的范围内。但鉴于目前的看涨行动，处于该区间的高端是有意义的。
+While the markets responded positively to Powell's comments, the Nasdaq remains below the 18,000 level. As a result, Investor's Business Daily is holding its recommended exposure level in the 60% to 80% range. But with the current bullish action it makes sense to be at the top end of this range.
 
 
-Though Powell's speech has cleared up the picture to a significant degree, economic data remains crucial. The Personal Consumption Expenditures Price Index is due to offer inflation data Friday, and should be the headline event of the week. Other noteworthy readings include durable-goods orders data on Monday and The Conference Board's Consumer Confidence report on Tuesday.  
-尽管鲍威尔的讲话在很大程度上澄清了情况，但经济数据仍然至关重要。个人消费支出价格指数将于周五提供通胀数据，这应该是本周的头条新闻。其他值得注意的数据包括周一的耐用品订单数据和周二的 The Conference Board 消费者信心报告。
+Though Powell's speech has cleared up the picture to a significant degree, economic data remains crucial. The Personal Consumption Expenditures Price Index is due to offer inflation data Friday, and should be the headline event of the week. Other noteworthy readings include durable-goods orders data on Monday and The Conference Board's Consumer Confidence report on Tuesday.
 
 
-And while earnings season has slowed substantially, a major report comes late Wednesday when artificial intelligence behemoth and [Leaderboard stock](https://get.investors.com/leaderboard/) **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) posts results. Other noteworthy firms [reporting in the coming week](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nvidia-nvda-birkenstock/) include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Ollie's Bargain Outlet** ([OLLI](https://research.investors.com/quote.aspx?symbol=OLLI)).  
-虽然财报季已大幅放缓，但周三晚些时候发布了一份重要报告，人工智能巨头和[排行榜股票](https://get.investors.com/leaderboard/)**英伟达** （[NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)） 公布了业绩。[未来一周公布财报的其他](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nvidia-nvda-birkenstock/)值得注意的公司包括 **Heico** （[HEI](https://research.investors.com/quote.aspx?symbol=HEI)）、**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **Ollie's Bargain Outlet** （[OLLI）。](https://research.investors.com/quote.aspx?symbol=OLLI)
+And while earnings season has slowed substantially, a major report comes late Wednesday when artificial intelligence behemoth and [Leaderboard stock](https://get.investors.com/leaderboard/) **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) posts results. Other noteworthy firms [reporting in the coming week](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nvidia-nvda-birkenstock/) include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Ollie's Bargain Outlet** ([OLLI](https://research.investors.com/quote.aspx?symbol=OLLI)).
 
 
-Stock Market Groups: Regional Banks Deposit Gains股票市场组：区域性银行存款收益
-----------------------------------------------------------------
+Stock Market Groups: Regional Banks Deposit Gains
+-------------------------------------------------
 
 
-Each of the [S&P 500 sectors ended Friday in positive territory](https://www.investors.com/category/etfs-and-funds/sectors/). Real estate and consumer discretionary were the strongest areas while utilities and consumer staples, defensive areas, made the slimmest gains. Underscoring real estate's strength, the SPDR S&P Homebuilders ETF ([XHB](https://research.investors.com/quote.aspx?symbol=XHB)) notched a new closing high.  
-[标准普尔 500 指数板块周五均收于上涨区域](https://www.investors.com/category/etfs-and-funds/sectors/)。房地产和非必需消费品是表现最强劲的领域，而公用事业和必需消费品（防御性领域）的涨幅最小。SPDR S&P Homebuilders ETF （[XHB](https://research.investors.com/quote.aspx?symbol=XHB)） 创下收盘新高，突显了房地产的实力。
+Each of the [S&P 500 sectors ended Friday in positive territory](https://www.investors.com/category/etfs-and-funds/sectors/). Real estate and consumer discretionary were the strongest areas while utilities and consumer staples, defensive areas, made the slimmest gains. Underscoring real estate's strength, the SPDR S&P Homebuilders ETF ([XHB](https://research.investors.com/quote.aspx?symbol=XHB)) notched a new closing high.
 
 
 
-Once again, the relative performance of the 197 IBD industry groups gave a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
-197 个 IBD 行业团体的相对表现再次让我们更深入地了解[了当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的行动。
+Once again, the relative performance of the 197 IBD industry groups gave a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
 
 
-It was a strong day for home furnishings plays, solar stocks, newspapers and wood products firms. Regional banking groups also outperformed, with Midwest banks faring best of all among this cadre.  
-对于家居用品公司、太阳能股票、报纸和木制品公司来说，这是强劲的一天。区域银行集团也表现出色，其中中西部银行表现最好。
+It was a strong day for home furnishings plays, solar stocks, newspapers and wood products firms. Regional banking groups also outperformed, with Midwest banks faring best of all among this cadre.
 
 
-Only a handful of groups closed in negative territory. These included auto parts plays, wholesale drug companies and diversified medical stocks.  
-只有少数小组收盘为负值。其中包括汽车零部件公司、批发药品公司和多元化的医疗股票。
+Only a handful of groups closed in negative territory. These included auto parts plays, wholesale drug companies and diversified medical stocks.
 
 
-The financial software group also lagged on a day that group heavyweight **Intuit** ([INTU](https://research.investors.com/quote.aspx?symbol=INTU)) flashed a sell signal by undercutting the 50-day line. Intuit served up a disappointing outlook for the current quarter.  
-该金融软件集团也落后于该集团重量级 **Intuit** （[INTU）](https://research.investors.com/quote.aspx?symbol=INTU) 通过突破 50 天线发出卖出信号的一天。Intuit 对本季度的前景令人失望。
+The financial software group also lagged on a day that group heavyweight **Intuit** ([INTU](https://research.investors.com/quote.aspx?symbol=INTU)) flashed a sell signal by undercutting the 50-day line. Intuit served up a disappointing outlook for the current quarter.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082324.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082324.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082324.pdf).
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[How Wall Street, Silicon Valley See Their Fate Under Trump Or Harris  
-华尔街和硅谷如何看待他们在特朗普或哈里斯领导下的命运](https://www.investors.com/news/stock-market-tech-companies-stocks-donald-trump-kamala-harris-us-election-2024/)
+[How Wall Street, Silicon Valley See Their Fate Under Trump Or Harris](https://www.investors.com/news/stock-market-tech-companies-stocks-donald-trump-kamala-harris-us-election-2024/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions  
-股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
