--- a/_columns/The_Big_Picture/zh-cn/2024-08-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-27.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Bides Time, Nasdaq Holds Support As Nvidia Earnings Loom Large	股市等待时间，纳斯达克因英伟达财报大幅增长而获得支撑
+  Stock Market Bides Time, Nasdaq Holds Support As Nvidia Earnings Loom Large
 date: 2024-08-27 17:31 -0700
 author: KEN SHREVE
 ---
@@ -10,26 +10,21 @@ author: KEN SHREVE
 
 
 
-Sellers knocked the Russell 2000 small-cap index for a loss of 0.7% in the stock market Tuesday. But the major indexes held in there, ending flat to slightly higher ahead of Nvidia's earnings report and a critical reading on inflation due Friday.  
-周二，卖家在股市上敲响了罗素 2000 小盘股指数，下跌了 0.7%。但主要股指持稳，在英伟达财报和周五公布的关键通胀数据之前收盘持平或略高。
+Sellers knocked the Russell 2000 small-cap index for a loss of 0.7% in the stock market Tuesday. But the major indexes held in there, ending flat to slightly higher ahead of Nvidia's earnings report and a critical reading on inflation due Friday.
 
 
 
 
-The Nasdaq composite edged up nearly 0.2% and the Nasdaq 100 added 0.3% as both indexes tested their 50-day moving averages. Despite small gains for both Nasdaq indexes, declining stocks outnumbered advancers on the Nasdaq exchange by roughly 3-to-2. Volume came in lower than Monday.  
-纳斯达克综合指数小幅上涨近 0.2%，纳斯达克 100 指数上涨 0.3%，这两个指数都测试了其 50 天移动平均线。尽管纳斯达克指数均小幅上涨，但下跌的股票数量与纳斯达克交易所上涨的股票数量之比约为 3 比 2。成交量低于周一。
+The Nasdaq composite edged up nearly 0.2% and the Nasdaq 100 added 0.3% as both indexes tested their 50-day moving averages. Despite small gains for both Nasdaq indexes, declining stocks outnumbered advancers on the Nasdaq exchange by roughly 3-to-2. Volume came in lower than Monday.
 
 
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) led a mixed performance for the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) stocks. Shares rose 1.5% in light volume ahead of the company's [earnings report](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/) due Wednesday after the close.  
-**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 领跑 [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) 股票的表现喜忧参半。在周三收盘后该公司公布[收益报告](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/)之前，股价上涨 1.5%。
+**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) led a mixed performance for the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) stocks. Shares rose 1.5% in light volume ahead of the company's [earnings report](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/) due Wednesday after the close.
 
 
-Nvidia continues to show strength and support after a nice move above the 50-day moving average. Expectations are high for another quarter of triple-digit earnings and revenue growth. But Nvidia's outlook will be even more important after a strong pre-earnings rally off lows.  
-英伟达在 50 天移动平均线上方取得好成绩后继续表现出实力和支持。市场对另一个季度的三位数收益和收入增长寄予厚望。但在财报前从低点强劲反弹之后，英伟达的前景将变得更加重要。
+Nvidia continues to show strength and support after a nice move above the 50-day moving average. Expectations are high for another quarter of triple-digit earnings and revenue growth. But Nvidia's outlook will be even more important after a strong pre-earnings rally off lows.
 
 
-The 10-year Treasury yield added two basis points to 3.84% after hitting an intraday high of nearly 3.87%. Yields strengthened a bit after the latest reading on consumer confidence came in better than expected.  
-10 年期美国国债收益率在触及近 3.87% 的盘中高点后上涨 2 个基点至 3.84%。在最新的消费者信心数据好于预期后，收益率略有走强。
+The 10-year Treasury yield added two basis points to 3.84% after hitting an intraday high of nearly 3.87%. Yields strengthened a bit after the latest reading on consumer confidence came in better than expected.
 
 
 
@@ -37,8 +32,7 @@ The 10-year Treasury yield added two basis points to 3.84% after hitting an intr
 ---
 
 
-**[Time The Market With IBD's ETF Market Strategy  
-使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
@@ -46,47 +40,38 @@ The 10-year Treasury yield added two basis points to 3.84% after hitting an intr
 ---
 
 
-Market expectations are still for 100 basis points in rate cuts before the end of the year, according to [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html). That implies one 50-basis-point cut at one of the Federal Reserve's remaining three meetings.  
-根据 [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的数据，市场仍预期年底前降息 100 个基点。这意味着美联储将在剩余的三次会议中的一次降息 50 个基点。
+Market expectations are still for 100 basis points in rate cuts before the end of the year, according to [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html). That implies one 50-basis-point cut at one of the Federal Reserve's remaining three meetings.
 
 
-Meanwhile, the latest reading from the personal consumption expenditures index, or PCE — one of the Fed's preferred inflation gauges —is due for release Friday at 8:30 a.m. ET. On a year-over-year basis, core prices are expected to rise 2.7% in July, slightly above June's reading of 2.6%.  
-与此同时，个人消费支出指数 （PCE） 的最新读数——美联储首选的通胀指标之一——将于美国东部时间周五上午 8：30 发布。与去年同期相比，预计 7 月份核心价格将上涨 2.7%，略高于 6 月份的 2.6%。
+Meanwhile, the latest reading from the personal consumption expenditures index, or PCE — one of the Fed's preferred inflation gauges —is due for release Friday at 8:30 a.m. ET. On a year-over-year basis, core prices are expected to rise 2.7% in July, slightly above June's reading of 2.6%.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The Dow Jones Industrial Average added less than 0.1%, but marked its second straight all-time closing high. The S&P 500 added nearly 0.2%. Losers beat winners on the New York Stock Exchange by roughly 4-to-3. Volume was slightly lower on the NYSE.  
-道琼斯工业平均指数上涨不到 0.1%，但创下历史第二大收盘新高。标准普尔 500 指数上涨近 0.2%。在纽约证券交易所，输家大约以 4 比 3 击败赢家。纽约证券交易所的成交量略有下降。
+The Dow Jones Industrial Average added less than 0.1%, but marked its second straight all-time closing high. The S&P 500 added nearly 0.2%. Losers beat winners on the New York Stock Exchange by roughly 4-to-3. Volume was slightly lower on the NYSE.
 
 
 ![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP082724.jpg)
 
 
-**Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) was a modest gainer on the Dow, up 0.3% ahead of the company's [Sept. 9 iPhone 16 event](https://www.investors.com/news/technology/apple-stock-fall-product-launch-event-anticipation/). New models of the Apple Watch and AirPods are also expected.  
-**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在道琼斯指数中小幅上涨，在该公司 [9 月 9 日的 iPhone 16 发布会](https://www.investors.com/news/technology/apple-stock-fall-product-launch-event-anticipation/)前上涨 0.3%。预计 Apple Watch 和 AirPods 的新型号也将推出。
+**Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) was a modest gainer on the Dow, up 0.3% ahead of the company's [Sept. 9 iPhone 16 event](https://www.investors.com/news/technology/apple-stock-fall-product-launch-event-anticipation/). New models of the Apple Watch and AirPods are also expected.
 
 
-Similar to Nvidia, Apple is back near highs and holding above its 50-day line. Same with **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)). But **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)), **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) are all on downtrends and below their 50-day lines.  
-与 Nvidia 类似，Apple 回到高点附近并保持在其 50 日线上方。**与 Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 相同。但 **Microsoft** （[MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)）、**Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)）、**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 都处于下跌趋势中，并低于 50 日线。
+Similar to Nvidia, Apple is back near highs and holding above its 50-day line. Same with **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)). But **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)), **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) are all on downtrends and below their 50-day lines.
 
 
-As money rotates out of several large-cap technology stocks, it's finding a home in other areas like utilities and gold stocks. These are typically defensive areas of the market, but leadership has expanded well beyond these two areas into other areas like retail, building, health care and financial stocks.  
-随着资金从几只大盘科技股中轮换出来，它正在公用事业和黄金股等其他领域找到归宿。这些通常是市场的防御性领域，但领导力已经远远超出了这两个领域，扩展到了零售、建筑、医疗保健和金融股票等其他领域。
+As money rotates out of several large-cap technology stocks, it's finding a home in other areas like utilities and gold stocks. These are typically defensive areas of the market, but leadership has expanded well beyond these two areas into other areas like retail, building, health care and financial stocks.
 
 
-While there are plenty of stocks out there that are extended past proper buy points, the stock market continues to serve up actionable stocks. It's a smaller group these days after a nice run for the market since the Aug. 5 lows. But the confirmed uptrend continues to show signs of strength.  
-虽然有很多股票超过了适当的买入点，但股票市场继续提供可操作的股票。自 8 月 5 日低点以来，市场表现良好，如今这是一个较小的群体。但已确认的上升趋势继续显示出强劲的迹象。
+While there are plenty of stocks out there that are extended past proper buy points, the stock market continues to serve up actionable stocks. It's a smaller group these days after a nice run for the market since the Aug. 5 lows. But the confirmed uptrend continues to show signs of strength.
 
 
-Keep an eye on Stocks On The Move screen on the homepage of investors.com. Stocks rising in heavy volume can often uncover shifts in leadership. Sleep apnea specialist **ResMed** ([RMD](https://research.investors.com/quote.aspx?symbol=RMD)) soared past an alternate handle entry of 231.50 after a favorable response to earnings on Aug. 2.  
-密切关注 investors.com 主页上的 Stocks On The Move 屏幕。股票的大量上涨往往可以揭示领导层的变化。睡眠呼吸暂停专家 **ResMed** （[RMD](https://research.investors.com/quote.aspx?symbol=RMD)） 在 8 月 2 日对财报反应良好后飙升至 231.50 的备选关口。
+Keep an eye on Stocks On The Move screen on the homepage of investors.com. Stocks rising in heavy volume can often uncover shifts in leadership. Sleep apnea specialist **ResMed** ([RMD](https://research.investors.com/quote.aspx?symbol=RMD)) soared past an alternate handle entry of 231.50 after a favorable response to earnings on Aug. 2.
 
 
-**Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)) and **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) also made the screen at one point Tuesday. Both are members of [Leaderboard](https://leaderboard.investors.com). Ferrari first joined the Leaders list on Aug. 14, and IBD's Leaderboard increased its position on April 16. SharkNinja, an earnings option trade, officially joined the Leaders list on Aug. 16 with an average cost basis of 80.80.  
-**法拉利** （[RACE](https://research.investors.com/quote.aspx?symbol=RACE)） 和 **SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) 也在周二一度登上了屏幕。两者都是 [Leaderboard](https://leaderboard.investors.com) 的成员。法拉利于 8 月 14 日首次加入领导者名单，IBD 的排行榜于 4 月 16 日上升。SharkNinja 是一种收益期权交易，于 8 月 16 日正式加入领导者名单，平均成本基础为 80.80。
+**Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)) and **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) also made the screen at one point Tuesday. Both are members of [Leaderboard](https://leaderboard.investors.com). Ferrari first joined the Leaders list on Aug. 14, and IBD's Leaderboard increased its position on April 16. SharkNinja, an earnings option trade, officially joined the Leaders list on Aug. 16 with an average cost basis of 80.80.
 
 
 
@@ -94,8 +79,7 @@ Keep an eye on Stocks On The Move screen on the homepage of investors.com. Stock
 ---
 
 
-[**Red-Hot Nvidia Next Up On Earnings Calendar  
-炙手可热的 Nvidia 在财报日历上发布**](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nvidia-nvda-birkenstock/)
+[**Red-Hot Nvidia Next Up On Earnings Calendar**](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nvidia-nvda-birkenstock/)
 
 
 
@@ -103,51 +87,40 @@ Keep an eye on Stocks On The Move screen on the homepage of investors.com. Stock
 ---
 
 
-Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), small cap and recent initial public offering **Ardent Health Partners** ([ARDT](https://research.investors.com/quote.aspx?symbol=ARDT)) jumped 6% and cleared an [IPO base](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/) with an 18.16 entry. The hospital operator went public in July at 16 and is prone to volatile price swings.  
-在 [MarketSurge Growth 250](https://marketsurge.investors.com) 内部，小盘股和最近的首次公开募股 **Ardent Health Partners** （[ARDT](https://research.investors.com/quote.aspx?symbol=ARDT)） 上涨了 6%，并以 18.16 的入场价清除了 [IPO 基础](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/)。这家医院运营商于 7 月在 16 岁时上市，容易受到价格波动的影响。
+Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), small cap and recent initial public offering **Ardent Health Partners** ([ARDT](https://research.investors.com/quote.aspx?symbol=ARDT)) jumped 6% and cleared an [IPO base](https://www.investors.com/how-to-invest/investors-corner/ipo-bases-rich-gains/) with an 18.16 entry. The hospital operator went public in July at 16 and is prone to volatile price swings.
 
 
-**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) also joined the breakout ranks Tuesday, jumping past the 900 level with conviction early in the session, Costco closed above an 896.67 entry, but an intraday gain of nearly 3% faded to 1.8% by the close.  
-**Costco** （[COST）](https://research.investors.com/quote.aspx?symbol=COST) 周二也加入了突破行列，在盘中早些时候坚定地跃升至 900 水平，Costco 收于 896.67 点上方，但盘中近 3% 的涨幅在收盘时消退至 1.8%。
+**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) also joined the breakout ranks Tuesday, jumping past the 900 level with conviction early in the session, Costco closed above an 896.67 entry, but an intraday gain of nearly 3% faded to 1.8% by the close.
 
 
-Online travel firms outperformed, helped by a strong earnings report from China-based **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)). Trip.com gapped above its 50-day line on news that second-quarter profit increased 43% year over year. Revenue increased 13% to $1.76 billion. But the stock is still more than 20% off its 52-week high with plenty of [overhead supply](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply) to conquer.  
-在线旅游公司表现优异，这得益于中国 **Trip.com** （[TCOM）](https://research.investors.com/quote.aspx?symbol=TCOM) 的强劲收益报告。Trip.com 跳空突破其 50 天线，因为有消息称第二季度利润同比增长 43%。收入增长 13%，达到 17.6 亿美元。但该股仍较 20 周高点下跌 52% 以上，还有大量的[间接供应](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply)可供征服。
+Online travel firms outperformed, helped by a strong earnings report from China-based **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)). Trip.com gapped above its 50-day line on news that second-quarter profit increased 43% year over year. Revenue increased 13% to $1.76 billion. But the stock is still more than 20% off its 52-week high with plenty of [overhead supply](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply) to conquer.
 
 
-**Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)) also had a good day, up more than 4% in light volume. The cruise line operator is less than 3% off its 52-week high. A six-week cup base could be in place by the end of the week. Group peer **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)) has recovered well after a volatile response to earnings last week. It's forming an IPO base with a 36.90 buy point.  
-**皇家加勒比** （[RCL）](https://research.investors.com/quote.aspx?symbol=RCL) 也表现不错，光价上涨超过 4%。这家邮轮运营商较 3 周高点下跌不到 52%。到本周末，为期六周的杯赛基础可能会到位。集团同行 **Viking** （[VIK](https://research.investors.com/quote.aspx?symbol=VIK)） 在上周对收益的波动反应后恢复良好。它正在形成一个拥有 36.90 买入点的 IPO 基础。
+**Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)) also had a good day, up more than 4% in light volume. The cruise line operator is less than 3% off its 52-week high. A six-week cup base could be in place by the end of the week. Group peer **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)) has recovered well after a volatile response to earnings last week. It's forming an IPO base with a 36.90 buy point.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082724.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082724.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)  
-[为什么这个 IBD 工具简化了](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[顶级股票的](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
+[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
 
 
-[Best Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
-IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Vanguard Just Poured Cold Water On The AI, Nvidia Stock Boom  
-Vanguard 刚刚给 AI 泼了一盆冷水，Nvidia 股票繁荣](https://www.investors.com/etfs-and-funds/sectors/sp500-vanguard-just-poured-cold-water-all-over-the-ai-nvidia-stock-boom/)
+[Vanguard Just Poured Cold Water On The AI, Nvidia Stock Boom](https://www.investors.com/etfs-and-funds/sectors/sp500-vanguard-just-poured-cold-water-all-over-the-ai-nvidia-stock-boom/)
 
 
-[Futures Await Nvidia; Warren Buffett Stock Nears Milestone  
-期货等待着 Nvidia;沃伦·巴菲特股票接近里程碑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-warren-buffett-berkshire-nears-1-trillion/)
+[Futures Await Nvidia; Warren Buffett Stock Nears Milestone](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-warren-buffett-berkshire-nears-1-trillion/)
 
 
 
