--- a/_columns/The_Big_Picture/zh-cn/2024-08-29.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-29.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Today: Nasdaq's Gains Disappear But Dow, Small Caps Win; Why The Magnificent Seven Stocks Might Not Dominate In 2025	今日股市：纳斯达克指数涨幅消失，但道琼斯指数、小盘股获胜;为什么 The Magnificent Seven 股票可能不会在 2025 年占据主导地位
+  Stock Market Today: Nasdaq's Gains Disappear But Dow, Small Caps Win; Why The Magnificent Seven Stocks Might Not Dominate In 2025
 date: 2024-08-29 18:03 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,66 +10,53 @@ author: DAVID SAITO-CHUNG
 
 
 
-The underperforming indexes of 2024 bested their stock market counterparts on Thursday after **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), the [last of the Magnificent Seven to report Q2 results](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/), dominated headlines with its [July-quarter earnings](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/). Despite the negative reversal by some indexes, the bull run still has a good footing with one day left in what was a volatile month.  
-周四，在七[大巨头中最后一个报告第二季度业绩的](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 以其 [7 月季度收益](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/)占据头条新闻后，2024 年表现不佳的指数击败了股市同行。尽管一些指数出现了负面逆转，但在动荡的月份中还剩下一天，牛市仍然有良好的基础。
+The underperforming indexes of 2024 bested their stock market counterparts on Thursday after **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), the [last of the Magnificent Seven to report Q2 results](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/), dominated headlines with its [July-quarter earnings](https://www.investors.com/news/technology/nvidia-stock-nvda-ai-competition-chips/). Despite the negative reversal by some indexes, the bull run still has a good footing with one day left in what was a volatile month.
 
 
 
 
-The Nasdaq squandered a stout early 1.3% gain to end lower Thursday, slightly more than 0.2%. Volume grew 9% on that exchange vs. Wednesday, early data showed. Hence, it marked a [mild distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/). The composite index also finished beneath its flattened-out [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) for the second straight session.  
-纳斯达克指数浪费了早盘 1.3% 的强劲涨幅，周四收盘走低，略高于 0.2%。早期数据显示，与周三相比，该交易所的交易量增长了 9%。因此，它标志着一个[温和的分发日](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/)。该综合指数也连续第二个交易日收于其平坦的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)下方。
+The Nasdaq squandered a stout early 1.3% gain to end lower Thursday, slightly more than 0.2%. Volume grew 9% on that exchange vs. Wednesday, early data showed. Hence, it marked a [mild distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/). The composite index also finished beneath its flattened-out [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) for the second straight session.
 
 
-The S&P 500 also posted a disappointing finish. It wasted a morning advance of almost 1% to close down 22 cents. Yet at 5,591, the S&P 500 stands only a 1.4% gain away from moving into new highs.  
-标准普尔 500 指数也公布了令人失望的收盘。它浪费了近 1% 的早盘涨幅，收盘下跌 22 美分。然而，标准普尔 500 指数在 5,591 点，距离创下新高仅差 1.4%。
+The S&P 500 also posted a disappointing finish. It wasted a morning advance of almost 1% to close down 22 cents. Yet at 5,591, the S&P 500 stands only a 1.4% gain away from moving into new highs.
 
 
-In contrast, small caps did a better job of holding onto early gains.  
-相比之下，小盘股在保持早期涨幅方面做得更好。
+In contrast, small caps did a better job of holding onto early gains.
 
 
-The iShares Russell 2000 ([IWM](https://research.investors.com/quote.aspx?symbol=IWM)) ETF also finished well off session highs, yet still rose 0.7%. The Dow Jones Industrial Average, up 0.6% on Thursday, is up 1.2% in August and has a good shot at rallying for the fourth month in a row.  
-iShares Russell 2000 （[IWM](https://research.investors.com/quote.aspx?symbol=IWM)） ETF 也远低于盘中高点，但仍上涨 0.7%。道琼斯工业平均指数周四上涨 0.6%，8 月份上涨 1.2%，连续第四个月上涨。
+The iShares Russell 2000 ([IWM](https://research.investors.com/quote.aspx?symbol=IWM)) ETF also finished well off session highs, yet still rose 0.7%. The Dow Jones Industrial Average, up 0.6% on Thursday, is up 1.2% in August and has a good shot at rallying for the fourth month in a row.
 
 
-The Dow Jones still lags the Nasdaq and S&P 500 in terms of gains since Jan. 1. Just check out the General Market Indicators page, found at the bottom of every Big Picture column. Yet, what's also notable? Check out a monthly chart of the SPDR Dow Jones Industrial Average ETF ([DIA](https://research.investors.com/quote.aspx?symbol=DIA)). The exchange traded fund dropped 1.3% during the month of Halloween in 2023. Since then, the ETF has rallied every month except for April.  
-自 1 月 1 日以来，道琼斯指数的涨幅仍落后于纳斯达克和标准普尔 500 指数。只需查看 General Market Indicators 页面，该页面位于每个 Big Picture 列的底部。然而，还有什么值得注意的呢？查看 SPDR 道琼斯工业平均指数 ETF （[DIA）](https://research.investors.com/quote.aspx?symbol=DIA) 的月度图表。该交易所交易基金在 2023 年万圣节期间下跌了 1.3%。从那时起，除了 4 月，该 ETF 每个月都上涨。
+The Dow Jones still lags the Nasdaq and S&P 500 in terms of gains since Jan. 1. Just check out the General Market Indicators page, found at the bottom of every Big Picture column. Yet, what's also notable? Check out a monthly chart of the SPDR Dow Jones Industrial Average ETF ([DIA](https://research.investors.com/quote.aspx?symbol=DIA)). The exchange traded fund dropped 1.3% during the month of Halloween in 2023. Since then, the ETF has rallied every month except for April.
 
 
-Stock Market And Economic Data股票市场和经济数据
----------------------------------------
+Stock Market And Economic Data
+------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP082924-227x300.jpg)One reason for Thursday's decent session overall? It's still about the economy.  
-周四整体表现不错的原因之一？这仍然与经济有关。
+![](https://www.investors.com/wp-content/uploads/2024/08/MP082924-227x300.jpg)One reason for Thursday's decent session overall? It's still about the economy.
 
 
-U.S. GDP accelerated to a 3% rise from 2.8% for the second quarter, bolstered by stronger-than-estimated consumer spending. The recession argument weakened. However, the stock market will stay focused on future inflation and jobs data ahead of the Federal Reserve's next meeting on interest rates on Sept. 17-18.  
-美国 GDP 从第二季度的 2.8% 加速至 3%，这得益于强于预期的消费者支出。关于经济衰退的论点有所减弱。然而，在美联储 9 月 17 日至 18 日的下一次利率会议之前，股市将继续关注未来的通胀和就业数据。
+U.S. GDP accelerated to a 3% rise from 2.8% for the second quarter, bolstered by stronger-than-estimated consumer spending. The recession argument weakened. However, the stock market will stay focused on future inflation and jobs data ahead of the Federal Reserve's next meeting on interest rates on Sept. 17-18.
 
 
-While the stock market may see action quiet down Friday afternoon as traders turn off their computers and rush to beat the traffic ahead of the three-day Labor Day Weekend, IBD readers may want to keep a keen eye on the PCE inflation index numbers for July coming out before the open. [Econoday forecasts](https://research.investors.com/economic-calendar/) a 2.5% year-over-year increase in the main personal consumption expenditures gauge, matching the June increase.  
-虽然周五下午股市可能会平静下来，因为交易员关掉电脑并急于在为期三天的劳动节周末之前避开交通，但 IBD 读者可能希望密切关注开盘前公布的 7 月份 PCE 通胀指数数据。[Econoday 预测](https://research.investors.com/economic-calendar/)主要个人消费支出指标将同比增长 2.5%，与 6 月份的增幅持平。
+While the stock market may see action quiet down Friday afternoon as traders turn off their computers and rush to beat the traffic ahead of the three-day Labor Day Weekend, IBD readers may want to keep a keen eye on the PCE inflation index numbers for July coming out before the open. [Econoday forecasts](https://research.investors.com/economic-calendar/) a 2.5% year-over-year increase in the main personal consumption expenditures gauge, matching the June increase.
 
 
-Excluding volatile items such as food and energy, the core PCE is expected to lift 2.7%, a slight acceleration from June's 2.6% increase.  
-不包括食品和能源等波动性项目，核心 PCE 预计将增长 2.7%，比 6 月份的 2.6% 略有加速。
+Excluding volatile items such as food and energy, the core PCE is expected to lift 2.7%, a slight acceleration from June's 2.6% increase.
 
 
-Outside The Stock Market 股票市场之外
--------------------------------
+Outside The Stock Market
+------------------------
 
 
-Some commodities outperformed the stock market on Thursday.  
-周四，一些商品的表现优于股市。
+Some commodities outperformed the stock market on Thursday.
 
 
-Near-term expiring light sweet crude oil futures on the NYMEX gained 1.9% to $75.91 a barrel, according to Dow Jones Market Data. While that marks a fourth gain in six sessions, oil is actually lagging the stock market since Jan. 1. Year to date, crude is up a much milder 6% vs. a 17% rise for the S&P 500.  
-根据道琼斯市场数据，纽约商业交易所近期到期的轻质低硫原油期货上涨 1.9% 至每桶 75.91 美元。虽然这标志着 6 个交易日内的第四次上涨，但自 1 月 1 日以来，油价实际上落后于股市。年初至今，原油上涨 6%，而标准普尔 500 指数上涨 17%。
+Near-term expiring light sweet crude oil futures on the NYMEX gained 1.9% to $75.91 a barrel, according to Dow Jones Market Data. While that marks a fourth gain in six sessions, oil is actually lagging the stock market since Jan. 1. Year to date, crude is up a much milder 6% vs. a 17% rise for the S&P 500.
 
 
-Like in July, interest rates on the long end of the U.S. Treasury curve have fallen hard for the month. On Friday, the yield on the benchmark 10-year bond edged up two basis points to 3.86%. But that's still sharply down from a near-term peak of 4.47% seen on July 1.  
-与 7 月份一样，美国国债曲线长端的利率在本月大幅下降。周五，基准 10 年期国债收益率小幅上涨 2 个基点至 3.86%。但这仍远低于 7 月 1 日创下的 4.47% 的近期峰值。
+Like in July, interest rates on the long end of the U.S. Treasury curve have fallen hard for the month. On Friday, the yield on the benchmark 10-year bond edged up two basis points to 3.86%. But that's still sharply down from a near-term peak of 4.47% seen on July 1.
 
 
 
@@ -77,8 +64,7 @@ Like in July, interest rates on the long end of the U.S. Treasury curve have fal
 ---
 
 
-***[Stock Market Outlook For The Next 6 Months  
-未来 6 个月的股市展望](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)***
+***[Stock Market Outlook For The Next 6 Months](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)***
 
 
 
@@ -86,41 +72,33 @@ Like in July, interest rates on the long end of the U.S. Treasury curve have fal
 ---
 
 
-Breakouts Scorecard 分会场记分卡
---------------------------
+Breakouts Scorecard
+-------------------
 
 
 
-**Best Buy** ([BBY](https://research.investors.com/quote.aspx?symbol=BBY)) staged a [powerful breakaway gap](https://www.investors.com/how-to-invest/investors-corner/breakaway-gap-the-art-of-the-breakout/) on better-than-expected results. Earnings jumped 10% to $1.34 a share, the best result in at least eight quarters. The consumer electronics retailer soared over a [double bottom](https://www.investors.com/how-to-invest/investors-corner/when-buy-growth-stocks-why-double-bottom-base-fuels-strong-breakouts/) with a 90.57 buy point.  
-**百思买** （[BBY](https://research.investors.com/quote.aspx?symbol=BBY)） 凭借好于预期的业绩，实现了[强大的突破差距](https://www.investors.com/how-to-invest/investors-corner/breakaway-gap-the-art-of-the-breakout/)。收益增长 10% 至每股 1.34 美元，这是至少八个季度以来的最佳业绩。这家消费电子产品零售商以 90.57 的买入点飙升至[双底](https://www.investors.com/how-to-invest/investors-corner/when-buy-growth-stocks-why-double-bottom-base-fuels-strong-breakouts/)。
+**Best Buy** ([BBY](https://research.investors.com/quote.aspx?symbol=BBY)) staged a [powerful breakaway gap](https://www.investors.com/how-to-invest/investors-corner/breakaway-gap-the-art-of-the-breakout/) on better-than-expected results. Earnings jumped 10% to $1.34 a share, the best result in at least eight quarters. The consumer electronics retailer soared over a [double bottom](https://www.investors.com/how-to-invest/investors-corner/when-buy-growth-stocks-why-double-bottom-base-fuels-strong-breakouts/) with a 90.57 buy point.
 
 
-Yet others have struggled.  
-然而，其他人则陷入了困境。
+Yet others have struggled.
 
 
-**Shake Shack** ([SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)) pushed past a 105.68 cup-with-handle entry on Aug. 15, 10 days after the wild stock market reversal on Aug. 5. Yet the recent breakout has made no progress. On Thursday, shares sank 3% for a fourth straight decline. Shake Shack also tested buyers at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/).  
-**Shake Shack** （[SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)） 在 8 月 15 日突破了 105.68 的带手柄杯，这是在 8 月 5 日股市剧烈逆转 10 天后。然而，最近的突破没有任何进展。周四，股价下跌 3%，连续第四次下跌。Shake Shack 还在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)上测试了买家。
+**Shake Shack** ([SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)) pushed past a 105.68 cup-with-handle entry on Aug. 15, 10 days after the wild stock market reversal on Aug. 5. Yet the recent breakout has made no progress. On Thursday, shares sank 3% for a fourth straight decline. Shake Shack also tested buyers at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/).
 
 
-In the construction space, **AAON** ([AAON](https://research.investors.com/quote.aspx?symbol=AAON)) is hovering just below a [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) and its 94.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-buy-zone-is-the-sweet-spot/). Fellow ventilation expert **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), featured in Thursday's [IBD 50 Stocks To Watch](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/) column, is aiming at a fresh breakout past 352.45 in a [four-month consolidation](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/). Arguably, 347.73 is an early entry.  
-在建筑领域，**AAON** （[AAON）](https://research.investors.com/quote.aspx?symbol=AAON) 徘徊在[带手柄的杯子](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)及其 94.67 [买入点](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-buy-zone-is-the-sweet-spot/)下方。通风专家 **Comfort Systems** （[FIX](https://research.investors.com/quote.aspx?symbol=FIX)） 在周四的 [IBD 50 只值得关注的股票](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)专栏中出现，其目标是在[为期四个月的综合中](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/)再次突破 352.45。可以说，347.73 是一个早期的入场点。
+In the construction space, **AAON** ([AAON](https://research.investors.com/quote.aspx?symbol=AAON)) is hovering just below a [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) and its 94.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-buy-zone-is-the-sweet-spot/). Fellow ventilation expert **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), featured in Thursday's [IBD 50 Stocks To Watch](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/) column, is aiming at a fresh breakout past 352.45 in a [four-month consolidation](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/). Arguably, 347.73 is an early entry.
 
 
-Utilities are rallying with their heads held high.  
-公用事业公司正在昂首挺胸。
+Utilities are rallying with their heads held high.
 
 
-**Pacific Gas & Electric** ([PCG](https://research.investors.com/quote.aspx?symbol=PCG)), formerly a stock market pariah due to its humongous obligations related to devastating wildfires sweeping through Northern California, marched further past an 18.61 entry in a very shallow [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/). Shares rallied 3.6% in volume that jumped 148% above average levels. Its Relative Strength Rating is 74, which is not fabulous and reflects sideways action over the years. Yet it's rising fast vs. a 47 four weeks ago.  
-**太平洋天然气和电力**公司（[PCG](https://research.investors.com/quote.aspx?symbol=PCG)），由于其与席卷北加利福尼亚的毁灭性野火相关的巨大义务，曾经是股市的贱民，在一个非常浅的[带手柄](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)杯子中进一步超过了18.61的条目。股价成交量上涨 3.6%，比平均水平高出 148%。它的相对强度评级为 74，这并不出色，反映了多年来的横盘走势。然而，与四周前的 47 相比，它正在快速上升。
+**Pacific Gas & Electric** ([PCG](https://research.investors.com/quote.aspx?symbol=PCG)), formerly a stock market pariah due to its humongous obligations related to devastating wildfires sweeping through Northern California, marched further past an 18.61 entry in a very shallow [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/). Shares rallied 3.6% in volume that jumped 148% above average levels. Its Relative Strength Rating is 74, which is not fabulous and reflects sideways action over the years. Yet it's rising fast vs. a 47 four weeks ago.
 
 
-**Ensign** ([ENSG](https://research.investors.com/quote.aspx?symbol=ENSG)), in the long-term care industry group and a half-size position in Leaderboard since July 10, has now rallied 18% from a [correct buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 127.58 in a four-month [cup without handle](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/). Ensign, a midcap growth stock with a market value of $8 billion, also surpassed a [three-weeks-tight follow-on entry](https://www.investors.com/how-to-invest/investors-corner/how-the-3-weeks-tight-pattern-gives-you-an-extra-buy-point/) at 147.93.  
-**Ensign** （[ENSG）](https://research.investors.com/quote.aspx?symbol=ENSG) 在长期护理行业组中，自 7 月 10 日以来在排行榜上排名一半，现在在一个[没有把手的四个月杯](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/)子中从[正确的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) 127.58 上涨了 18%。市值为 80 亿美元的中型成长股 Ensign 也超过了[连续三周的紧随股](https://www.investors.com/how-to-invest/investors-corner/how-the-3-weeks-tight-pattern-gives-you-an-extra-buy-point/) 147.93。
+**Ensign** ([ENSG](https://research.investors.com/quote.aspx?symbol=ENSG)), in the long-term care industry group and a half-size position in Leaderboard since July 10, has now rallied 18% from a [correct buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 127.58 in a four-month [cup without handle](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/). Ensign, a midcap growth stock with a market value of $8 billion, also surpassed a [three-weeks-tight follow-on entry](https://www.investors.com/how-to-invest/investors-corner/how-the-3-weeks-tight-pattern-gives-you-an-extra-buy-point/) at 147.93.
 
 
-[Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) currently holds 16 long positions, the majority of which reside on the ["Leaders Near A Buy Point"](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) list. Interestingly, just three of the 16 actually hail from tech land.  
-[Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) 目前持有 16 个多头头寸，其中大部分位于[“接近买入点的领导者”](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)列表中。有趣的是，这 16 人中只有 3 人实际上来自科技领域。
+[Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) currently holds 16 long positions, the majority of which reside on the ["Leaders Near A Buy Point"](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) list. Interestingly, just three of the 16 actually hail from tech land.
 
 
 
@@ -128,8 +106,7 @@ Utilities are rallying with their heads held high.
 ---
 
 
-[**Why This Is A Critical Sell Rule  
-为什么这是一个关键的卖出规则**](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/)
+[**Why This Is A Critical Sell Rule**](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/)
 
 
 
@@ -137,48 +114,38 @@ Utilities are rallying with their heads held high.
 ---
 
 
-Meanwhile, new setups may also emerge.  
-与此同时，新的设置也可能出现。
+Meanwhile, new setups may also emerge.
 
 
-**Affirm** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)) rocketed more than 30% higher on Thursday, crossing its 200-day moving average in towering volume. CEO Max Levchin told Bloomberg News he's confident the company will achieve GAAP-level earnings in the near future. Wall Street now expects earnings of 34 cents a share in fiscal 2026, which ends in June that year.  
-**Affirm** （[AFRM）](https://research.investors.com/quote.aspx?symbol=AFRM) 周四飙升超过 30%，高耸地突破了 200 天移动平均线。首席执行官 Max Levchin 告诉彭博新闻社，他有信心该公司将在不久的将来实现 GAAP 水平的收益。华尔街现在预计 2026 财年的每股收益为 34 美分，该财年截至当年 6 月。
+**Affirm** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)) rocketed more than 30% higher on Thursday, crossing its 200-day moving average in towering volume. CEO Max Levchin told Bloomberg News he's confident the company will achieve GAAP-level earnings in the near future. Wall Street now expects earnings of 34 cents a share in fiscal 2026, which ends in June that year.
 
 
-At the session high of 42.87, the "buy now, pay later" payments firm traded 18% below a large cup pattern's 52.48 peak. So, Affirm still has work to do. But it's clearly in a much better position to stage a potential winning breakout.  
-在盘中高点 42.87 时，这家“先买后付”支付公司的交易价格比大杯形态的峰值 52.48 低 18%。因此，Affirm 仍有工作要做。但显然，它处于一个更好的位置，可以上演一场潜在的胜利突破。
+At the session high of 42.87, the "buy now, pay later" payments firm traded 18% below a large cup pattern's 52.48 peak. So, Affirm still has work to do. But it's clearly in a much better position to stage a potential winning breakout.
 
 
-Headed into the session, [IBD Stock Checkup](https://research.investors.com/stock-checkup/) showed a mediocre Composite Rating of 51 on a scale of 1 to 99. Watch for improvement in this key score.  
-进入会议时，[IBD 股票检查](https://research.investors.com/stock-checkup/)显示综合评分为 51 分，评分为 1 到 99。请关注此关键分数的改进。
+Headed into the session, [IBD Stock Checkup](https://research.investors.com/stock-checkup/) showed a mediocre Composite Rating of 51 on a scale of 1 to 99. Watch for improvement in this key score.
 
 
-Meanwhile, the new highs list for both the Nasdaq and NYSE continue to make bullish strides.  
-与此同时，纳斯达克和纽约证券交易所的新高名单继续看涨。
+Meanwhile, the new highs list for both the Nasdaq and NYSE continue to make bullish strides.
 
 
-Avoid The Magnificent Seven?避免 The Magnificent Seven？
------------------------------------------------------
+Avoid The Magnificent Seven?
+----------------------------
 
 
-For instance, the Nasdaq shows a 10-day moving average of 148 stocks making new 52-week highs vs. 60 new lows, according to [MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge).  
-例如，根据 [MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的数据，纳斯达克指数显示 10 天移动平均线有 148 只股票创下 52 周新高，而 60 只股票创下新低。
+For instance, the Nasdaq shows a 10-day moving average of 148 stocks making new 52-week highs vs. 60 new lows, according to [MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge).
 
 
-On the NYSE, the gap is even wider. The 10-day moving average of 156 new highs stands way above the 10-day average of 14 new lows.  
-在纽约证券交易所，差距更大。10 天移动平均线为 156 个新高，远高于 10 天平均线的 14 个新低。
+On the NYSE, the gap is even wider. The 10-day moving average of 156 new highs stands way above the 10-day average of 14 new lows.
 
 
-Could this have consequences for investors who prefer to focus on megacap names such as the Magnificent Seven? Indeed, they've had huge runs, in part because they were able to grow sales and earnings impressively even though the Fed raised the fed funds rate from a 0%-0.25% range in early 2022 to the current level of 5.25%-5.5%.  
-这是否会对喜欢关注 Magnificent Seven 等大型股的投资者产生影响？事实上，他们取得了巨大的增长，部分原因是即使美联储在 2022 年初将联邦基金利率从 0%-0.25% 的区间提高到目前的 5.25%-5.5% 的水平，他们仍然能够令人印象深刻地增长销售额和收益。
+Could this have consequences for investors who prefer to focus on megacap names such as the Magnificent Seven? Indeed, they've had huge runs, in part because they were able to grow sales and earnings impressively even though the Fed raised the fed funds rate from a 0%-0.25% range in early 2022 to the current level of 5.25%-5.5%.
 
 
-Yet today, quarterly results indicate the law of large numbers may be catching up with many of the biggest technology leaders.  
-然而，今天，季度结果表明，大数定律可能正在赶上许多最大的技术领导者。
+Yet today, quarterly results indicate the law of large numbers may be catching up with many of the biggest technology leaders.
 
 
-"One major deviation from prior quarters is the weaker earnings results of the Magnificent Seven versus the average company in the S&P 500 Index," Alex Atanasiu, portfolio manager at Glenmede Investment Management in Philadelphia, wrote in comments emailed to IBD. "While six of these companies did beat consensus estimates, their surprises were the smallest since Q4 2022 and below the benchmark in that time frame."  
-“与前几个季度的一个主要偏差是，与标准普尔 500 指数中的普通公司相比，Magnificent Seven 的盈利结果弱于平均水平，”费城 Glenmede Investment Management 的投资组合经理 Alex Atanasiu 在发给 IBD 的电子邮件评论中写道。“虽然其中 6 家公司确实超过了市场预期，但它们的意外是自 2022 年第四季度以来最小的，低于该时间段内的基准。”
+"One major deviation from prior quarters is the weaker earnings results of the Magnificent Seven versus the average company in the S&P 500 Index," Alex Atanasiu, portfolio manager at Glenmede Investment Management in Philadelphia, wrote in comments emailed to IBD. "While six of these companies did beat consensus estimates, their surprises were the smallest since Q4 2022 and below the benchmark in that time frame."
 
 
 
@@ -186,8 +153,7 @@ Yet today, quarterly results indicate the law of large numbers may be catching u
 ---
 
 
-[**Is Microsoft A Buy Now? Or A Sell?  
-Microsoft 是立即购买吗？还是卖出？**](https://www.investors.com/research/microsoft-msft-stock-buy-now/)
+[**Is Microsoft A Buy Now? Or A Sell?**](https://www.investors.com/research/microsoft-msft-stock-buy-now/)
 
 
 
@@ -195,39 +161,32 @@ Microsoft 是立即购买吗？还是卖出？**](https://www.investors.com/rese
 ---
 
 
-World Look At The Stock Market世界看股票市场
--------------------------------------
+World Look At The Stock Market
+------------------------------
 
 
-While one trading day remains in August, it may be worth noting that equities around the globe are rising in synchrony.  
-虽然 8 月还剩下一个交易日，但值得注意的是，全球股市正在同步上涨。
+While one trading day remains in August, it may be worth noting that equities around the globe are rising in synchrony.
 
 
-According to Dow Jones Market Data, the STOXX Europe 600 index finished Thursday at 524.57, up 9.5% since Jan. 1. Japanese equities have cooled off since the Nikkei 225 hit an all-time high of 42,000. That said, the Nikkei has still garnered a 14.6% year-to-date advance through Thursday.  
-根据道琼斯市场数据，斯托克欧洲 600 指数周四收于 524.57，自 1 月 1 日以来上涨了 9.5%。自日经 225 指数创下 42,000 点的历史新高以来，日本股市已经降温。也就是说，截至周四，日经指数年初至今仍上涨了 14.6%。
+According to Dow Jones Market Data, the STOXX Europe 600 index finished Thursday at 524.57, up 9.5% since Jan. 1. Japanese equities have cooled off since the Nikkei 225 hit an all-time high of 42,000. That said, the Nikkei has still garnered a 14.6% year-to-date advance through Thursday.
 
 
-The glaring exception has been China.  
-一个明显的例外是中国。
+The glaring exception has been China.
 
 
-The Hang Seng Index in Hong Kong has enjoyed a solid month, rising more than 2% so far in August. Yet heading into Friday's overnight session, the Hang Seng is down 4.3% year to date. That's only a touch better than a 5.1% dip by the Shanghai Composite index.  
-香港恒生指数本月表现稳健，8 月迄今上涨超过 2%。然而，在周五的隔夜交易中，恒生指数今年迄今下跌了 4.3%。这仅比上证综指下跌 5.1% 好一点。
+The Hang Seng Index in Hong Kong has enjoyed a solid month, rising more than 2% so far in August. Yet heading into Friday's overnight session, the Hang Seng is down 4.3% year to date. That's only a touch better than a 5.1% dip by the Shanghai Composite index.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082924.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082924.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082924.pdf).
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:**
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
-想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
 [Check Out IBD Videos](https://www.investors.com/ibd-videos)
