--- a/_columns/The_Big_Picture/zh-cn/2024-08-30.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-30.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones Rallies To New Highs; 3 Leaders Poised For More Gains	道琼斯指数反弹至新高;3 位领导者准备获得更多收益
+  Dow Jones Rallies To New Highs; 3 Leaders Poised For More Gains
 date: 2024-08-30 17:13 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,26 +10,21 @@ author: SCOTT LEHTONEN
 
 
 
-The Dow Jones Industrial Average hit a new high Friday, as the major stock indexes rallied into the close and investors warmed up to cooler-than-expected inflation data.  
-道琼斯工业平均指数周五创下新高，主要股指收盘时上涨，投资者对低于预期的通胀数据感到热身。
+The Dow Jones Industrial Average hit a new high Friday, as the major stock indexes rallied into the close and investors warmed up to cooler-than-expected inflation data.
 
 
 
 
-The Dow moved up 0.6% to set another record close, its 26th of 2024, according to Dow Jones Market Data. The S&P 500 climbed 1% and the tech-heavy Nasdaq composite advanced 1.1%. The small-cap Russell 2000 index moved up 0.7%.  
-根据道琼斯市场数据，道琼斯指数上涨 0.6%，再次创下收盘纪录，即 2024 年的第 26 天。标准普尔 500 指数上涨 1%，以科技股为主的纳斯达克综合指数上涨 1.1%。小盘股罗素 2000 指数上涨 0.7%。
+The Dow moved up 0.6% to set another record close, its 26th of 2024, according to Dow Jones Market Data. The S&P 500 climbed 1% and the tech-heavy Nasdaq composite advanced 1.1%. The small-cap Russell 2000 index moved up 0.7%.
 
 
-For the week, the Dow industrials rose 0.9% to extend a win streak to three weeks. The S&P 500 rose 0.2% on the week, while the Nasdaq had a weekly loss of 0.9%.  
-本周，道琼斯工业指数上涨 0.9%，将连涨势头延续至三周。标准普尔 500 指数本周上涨 0.2%，而纳斯达克指数每周下跌 0.9%。
+For the week, the Dow industrials rose 0.9% to extend a win streak to three weeks. The S&P 500 rose 0.2% on the week, while the Nasdaq had a weekly loss of 0.9%.
 
 
-All 11 S&P 500 sectors ended higher Friday, with consumer discretionary, industrials and technology the biggest winners. Volume dipped on the Nasdaq and rose substantially on the New York Stock Exchange compared with Thursday's session.  
-标准普尔 500 指数 11 个板块周五全部收高，其中非必需消费品、工业和科技板块是最大的赢家。与周四交易时段相比，纳斯达克的成交量下降，纽约证券交易所的成交量大幅上涨。
+All 11 S&P 500 sectors ended higher Friday, with consumer discretionary, industrials and technology the biggest winners. Volume dipped on the Nasdaq and rose substantially on the New York Stock Exchange compared with Thursday's session.
 
 
-Looking ahead to the coming week, the stock market is closed Monday for Labor Day. And the U.S. Labor Department's employment report will take the spotlight on Friday.  
-展望未来一周，股市周一因劳动节休市。美国劳工部的就业报告将于周五成为焦点。
+Looking ahead to the coming week, the stock market is closed Monday for Labor Day. And the U.S. Labor Department's employment report will take the spotlight on Friday.
 
 
 
@@ -37,8 +32,7 @@ Looking ahead to the coming week, the stock market is closed Monday for Labor Da
 ---
 
 
-[**Forget Amazon And Tesla. This Non-Magnificent Seven Stock Is Soaring.  
-忘掉亚马逊和特斯拉吧。这只平淡无奇的七只股票正在飙升。**](https://www.investors.com/research/breakout-stocks-technical-analysis/costco-stock-nvidia-amazon-tesla-ytd-gains/)
+[**Forget Amazon And Tesla. This Non-Magnificent Seven Stock Is Soaring.**](https://www.investors.com/research/breakout-stocks-technical-analysis/costco-stock-nvidia-amazon-tesla-ytd-gains/)
 
 
 
@@ -46,43 +40,36 @@ Looking ahead to the coming week, the stock market is closed Monday for Labor Da
 ---
 
 
-Dow Jones Winners: Intel, Amazon道琼斯奖得主：英特尔、亚马逊
-----------------------------------------------
+Dow Jones Winners: Intel, Amazon
+--------------------------------
 
 
-Early Friday, the [core personal consumption expenditures price index](https://www.investors.com/news/economy/pce-price-index-july-core-inflation-fed-rate-cuts-sp-500/), the Federal Reserve's primary inflation gauge, showed that price pressures continued to fade in July. Yet solid wage data hinted that next week's jobs report may be stronger than expected.  
-周五早些时候，美联储的主要通胀指标核心[个人消费支出价格指数](https://www.investors.com/news/economy/pce-price-index-july-core-inflation-fed-rate-cuts-sp-500/)显示，7 月份价格压力继续消退。然而，强劲的工资数据暗示，下周的就业报告可能强于预期。
+Early Friday, the [core personal consumption expenditures price index](https://www.investors.com/news/economy/pce-price-index-july-core-inflation-fed-rate-cuts-sp-500/), the Federal Reserve's primary inflation gauge, showed that price pressures continued to fade in July. Yet solid wage data hinted that next week's jobs report may be stronger than expected.
 
 
-Inside the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and [Magnificent Seven stock](https://www.investors.com/research/magnificent-seven-stocks/) **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were among the biggest gainers Friday, with advances of 9.5% and 3.7%, respectively.  
-在道琼斯指数中，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和 [Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks/)**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 是周五涨幅最大的股票之一，分别上涨了 9.5% 和 3.7%。
+Inside the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and [Magnificent Seven stock](https://www.investors.com/research/magnificent-seven-stocks/) **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were among the biggest gainers Friday, with advances of 9.5% and 3.7%, respectively.
 
 
-On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were among the Dow losers on the session.  
-不利的一面是，**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和美国**运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 是道琼斯指数盘中下跌的股票之一。
+On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were among the Dow losers on the session.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/08/MP083024.jpg)
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
-The Nasdaq tentatively regained its 50-day moving average, a key benchmark that the tech-heavy composite has been struggling with since Aug. 22. A decisive breach of that level that takes out Wednesday's lows would likely indicate further weakness, while a continued rebound would be bullish for the market's prospects.  
-纳斯达克指数暂时收复了 50 天移动平均线，这是自 8 月 22 日以来以科技股为主的综合指数一直在努力应对的关键基准。决定性突破该水平并消除周三的低点可能表明市场进一步疲软，而持续反弹将对市场前景有利。
+The Nasdaq tentatively regained its 50-day moving average, a key benchmark that the tech-heavy composite has been struggling with since Aug. 22. A decisive breach of that level that takes out Wednesday's lows would likely indicate further weakness, while a continued rebound would be bullish for the market's prospects.
 
 
-Still, it's normal for the market to pull back and consolidate after a sharp rally since the Aug. 5 market low, so IBD is maintaining its recommended exposure level at 60% to 80%.  
-尽管如此，自 8 月 5 日市场低点以来的大幅反弹后，市场回调和盘整是正常的，因此 IBD 将其建议的风险敞口维持在 60% 至 80% 的水平。
+Still, it's normal for the market to pull back and consolidate after a sharp rally since the Aug. 5 market low, so IBD is maintaining its recommended exposure level at 60% to 80%.
 
 
-This environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means that incrementally raising exposure remains a priority. Investors should see how their existing positions and the latest buys perform before putting more capital to work.  
-这种环境显然使投资者重视[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法论的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步提高曝光率仍然是一个优先事项。投资者应该在投入更多资金之前查看他们现有的头寸和最新的买入情况。
+This environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means that incrementally raising exposure remains a priority. Investors should see how their existing positions and the latest buys perform before putting more capital to work.
 
 
-For those who are making progress, it makes sense to add more exposure. If not, they should then hold off until more opportunities surface.  
-对于那些正在取得进展的人来说，增加更多的曝光率是有意义的。如果没有，他们应该推迟，直到更多机会出现。
+For those who are making progress, it makes sense to add more exposure. If not, they should then hold off until more opportunities surface.
 
 
 
@@ -90,8 +77,7 @@ For those who are making progress, it makes sense to add more exposure. If not, 
 ---
 
 
-**[Join IBD experts as they analyze leading stocks in the current stock market action on IBD Live  
-加入 IBD 专家，他们在 IBD Live 上分析当前股市行动中的领先股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)**
+**[Join IBD experts as they analyze leading stocks in the current stock market action on IBD Live](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)**
 
 
 
@@ -100,57 +86,46 @@ For those who are making progress, it makes sense to add more exposure. If not, 
 
 
 
-Stock Market Leaders: AppLovin, Arista, Netflix股市领导者：AppLovin、Arista、Netflix
-----------------------------------------------------------------------------
+Stock Market Leaders: AppLovin, Arista, Netflix
+-----------------------------------------------
 
 
-Stock market leaders to watch include **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)), **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)) and **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)).  
-值得关注的股市领导者包括 **AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)）、**Arista Networks** （[ANET](https://research.investors.com/quote.aspx?symbol=ANET)） 和 **Netflix** （[NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)）。
+Stock market leaders to watch include **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)), **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)) and **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)).
 
 
-[AppLovin](https://www.investors.com/research/ibd-stock-of-the-day/applovin-stock-hits-buy-point-post-earnings/), an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), is right at a 91.91 buy point in a cup base.  
-[AppLovin](https://www.investors.com/research/ibd-stock-of-the-day/applovin-stock-hits-buy-point-post-earnings/) 是一个 [IBD SwingTrader 的想法](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)，位于杯底的 91.91 买入点。
+[AppLovin](https://www.investors.com/research/ibd-stock-of-the-day/applovin-stock-hits-buy-point-post-earnings/), an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), is right at a 91.91 buy point in a cup base.
 
 
-[Arista shares](https://www.investors.com/research/ibd-stock-of-the-day/anet-stock-arista-networks-ai-spending-wave/) are building a cup with handle that has a 358.68 buy point.  
-[Arista 股票](https://www.investors.com/research/ibd-stock-of-the-day/anet-stock-arista-networks-ai-spending-wave/)正在打造一个带手柄的杯子，买入点为 358.68。
+[Arista shares](https://www.investors.com/research/ibd-stock-of-the-day/anet-stock-arista-networks-ai-spending-wave/) are building a cup with handle that has a 358.68 buy point.
 
 
-And [streaming giant Netflix](https://www.investors.com/research/ibd-stock-of-the-day/netflix-stock-flirts-with-buy-zone/) is flirting with a 697.49 buy point in a late-stage cup base, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 图表，[流媒体巨头 Netflix](https://www.investors.com/research/ibd-stock-of-the-day/netflix-stock-flirts-with-buy-zone/) 正在后期杯赛基础中以 697.49 的买入点调情。
+And [streaming giant Netflix](https://www.investors.com/research/ibd-stock-of-the-day/netflix-stock-flirts-with-buy-zone/) is flirting with a 697.49 buy point in a late-stage cup base, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_083024.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_083024.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_083024.pdf).
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
