--- a/_columns/The_Big_Picture/zh-cn/2024-09-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-05.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  S&P 500 Extends Losing Streak, At Critical Level Ahead Of Pivotal Jobs Report	标准普尔 500 指数延续连跌势头，在关键就业报告发布前处于临界水平
+  S&P 500 Extends Losing Streak, At Critical Level Ahead Of Pivotal Jobs Report
 date: 2024-09-05 17:34 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,38 +10,30 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market ended mixed Thursday after a weaker-than-expected ADP jobs report. The S&P 500 closed at a key level, as Wall Street braced for the Labor Department's August jobs report Friday morning.  
-周四，在 ADP 就业报告弱于预期后，股市收盘涨跌互现。标准普尔 500 指数收于关键水平，华尔街周五上午为美国劳工部 8 月就业报告做准备。
+The stock market ended mixed Thursday after a weaker-than-expected ADP jobs report. The S&P 500 closed at a key level, as Wall Street braced for the Labor Department's August jobs report Friday morning.
 
 
 
 
-The Dow Jones Industrial Average dropped 0.5% and the S&P 500 lost 0.3%, while the tech-heavy Nasdaq composite gained nearly 0.3%. The small-cap Russell 2000 index declined 0.6%.  
-道琼斯工业平均指数下跌 0.5%，标准普尔 500 指数下跌 0.3%，而以科技股为主的纳斯达克综合指数上涨近 0.3%。小盘股罗素 2000 指数下跌 0.6%。
+The Dow Jones Industrial Average dropped 0.5% and the S&P 500 lost 0.3%, while the tech-heavy Nasdaq composite gained nearly 0.3%. The small-cap Russell 2000 index declined 0.6%.
 
 
-Eight of the 11 S&P 500 sectors ended lower, with health care and industrials the biggest losers. On the upside, the consumer discretionary, communication services and technology sectors closed higher.  
-标准普尔 500 指数的 11 个板块中有 8 个板块收低，其中医疗保健和工业板块跌幅最大。上行方面，非必需消费品、通信服务和科技板块收高。
+Eight of the 11 S&P 500 sectors ended lower, with health care and industrials the biggest losers. On the upside, the consumer discretionary, communication services and technology sectors closed higher.
 
 
-Volume fell on the Nasdaq but rose on the New York Stock Exchange from Wednesday's session. That added a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the S&P 500, although its total is now only two.  
-纳斯达克的成交量下降，但纽约证券交易所的成交量从周三的交易时段开始上升。这为标准普尔 500 指数增加了一个新的[发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，尽管它现在的总数只有两个。
+Volume fell on the Nasdaq but rose on the New York Stock Exchange from Wednesday's session. That added a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the S&P 500, although its total is now only two.
 
 
-Early Thursday, the ADP employment report, a gauge of private sector hiring and a precursor to Friday's jobs report, showed 99,000 jobs had been added in August. This was well below views for 140,000 and less than July's downwardly revised 111,000. This was the smallest gain since 2021.  
-周四早些时候，衡量私营部门招聘的指标和周五就业报告的前身 ADP 就业报告显示，8 月份增加了 99,000 个工作岗位。这远低于 140,000 的浏览量，低于 7 月份下调的 111,000 次。这是自 2021 年以来的最小增幅。
+Early Thursday, the ADP employment report, a gauge of private sector hiring and a precursor to Friday's jobs report, showed 99,000 jobs had been added in August. This was well below views for 140,000 and less than July's downwardly revised 111,000. This was the smallest gain since 2021.
 
 
-But claims for jobless benefits fell by 4,000 from the previous week and came in lower than expected.  
-但申请失业救济人数比前一周减少了 4,000 人，低于预期。
+But claims for jobless benefits fell by 4,000 from the previous week and came in lower than expected.
 
 
-The 10-year Treasury yield fell more than three basis points to 3.73% — the lowest since June 28, 2023.  
-10 年期美国国债收益率下跌超过 3 个基点至 3.73%，为 2023 年 6 月 28 日以来的最低水平。
+The 10-year Treasury yield fell more than three basis points to 3.73% — the lowest since June 28, 2023.
 
 
-Early Friday, the August payroll report is expected to show 160,000 new jobs vs. July's much lower-than-expected 114,000 increase. The unemployment rate is expected to inch lower to 4.2%, per Econoday. The report is likely to influence the size of the Fed's rate cut later this month.  
-周五早些时候，预计 8 月就业报告将显示 160,000 个新工作岗位，而 7 月的新增就业人数为 114,000 个，远低于预期。据 Econoday 报道，预计失业率将小幅下降至 4.2%。该报告可能会影响美联储本月晚些时候降息的规模。
+Early Friday, the August payroll report is expected to show 160,000 new jobs vs. July's much lower-than-expected 114,000 increase. The unemployment rate is expected to inch lower to 4.2%, per Econoday. The report is likely to influence the size of the Fed's rate cut later this month.
 
 
 
@@ -49,8 +41,7 @@ Early Friday, the August payroll report is expected to show 160,000 new jobs vs.
 ---
 
 
-[**Nvidia Stumbles, Tesla Skids While This Mag 7 Stock Is Ripe For A Breakout  
-Nvidia 跌跌撞撞，特斯拉打滑，而这只 Mag 7 股票的突破时机已经成熟**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia Stumbles, Tesla Skids While This Mag 7 Stock Is Ripe For A Breakout**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -58,51 +49,42 @@ Nvidia 跌跌撞撞，特斯拉打滑，而这只 Mag 7 股票的突破时机已
 ---
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-Inside the Dow Jones index, **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) and **Coca Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) were among the biggest losersThursday, with declines of 1.9% apiece.  
-在道琼斯指数中，**安进** （[AMGN）](https://research.investors.com/quote.aspx?symbol=AMGN) 和**可口可乐** （[KO）](https://research.investors.com/quote.aspx?symbol=KO) 是周四跌幅最大的股票之一，分别下跌 1.9%。
+Inside the Dow Jones index, **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) and **Coca Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) were among the biggest losersThursday, with declines of 1.9% apiece.
 
 
-On the upside, **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were among the five Dow gainers on the session.  
-从好的方面来看，**默克** （[MRK](https://research.investors.com/quote.aspx?symbol=MRK)） 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 是道琼斯指数的五只上涨股之一。
+On the upside, **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were among the five Dow gainers on the session.
 
 
-[All but one of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) jumped 4.9% to [flash an aggressive buy signal](https://www.investors.com/news/tesla-stock-china-fsd-ai-roadmap/). Microsoft was the sole decliner, down 0.1% to close further below its 200-day line.  
-[除一只外，七大股票均](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收高。值得注意的是，**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 上涨 4.9%，[发出激进的买入信号](https://www.investors.com/news/tesla-stock-china-fsd-ai-roadmap/)。Microsoft是唯一下跌的股票，下跌 0.1%，收于 200 日线下方。
+[All but one of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) jumped 4.9% to [flash an aggressive buy signal](https://www.investors.com/news/tesla-stock-china-fsd-ai-roadmap/). Microsoft was the sole decliner, down 0.1% to close further below its 200-day line.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **MakeMyTrip** ([MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)) is rebounding from support at the 50-day line.  
-Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四下跌 0.6%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 中，**MakeMyTrip** （[MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)） 正在从 50 天线的支撑位反弹。
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **MakeMyTrip** ([MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)) is rebounding from support at the 50-day line.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP090524-250x300.jpg)
 
 
-What To Do Now: S&P 500 At Critical Level现在该怎么做：标准普尔 500 指数处于临界水平
------------------------------------------------------------------
+What To Do Now: S&P 500 At Critical Level
+-----------------------------------------
 
 
-For now, the S&P 500 is critical to the stock market's immediate outlook. It closed three points below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/) as it continues to test that important level of support. A clear drop below the line would surely worsen the outlook for stocks, but so far that hasn't materialized. And Friday's jobs report could be the catalyst in either direction.  
-目前，标准普尔 500 指数对股市的近期前景至关重要。它收于 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)下方 3 个点，因为它继续测试这一重要支撑位。明显跌破该线肯定会使股市前景恶化，但到目前为止，这还没有成为现实。周五的就业报告可能成为任何一个方向的催化剂。
+For now, the S&P 500 is critical to the stock market's immediate outlook. It closed three points below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/) as it continues to test that important level of support. A clear drop below the line would surely worsen the outlook for stocks, but so far that hasn't materialized. And Friday's jobs report could be the catalyst in either direction.
 
 
-The Russell 2000 also closed slightly below its 50-day line.  
-罗素 2000 指数也收于略低于其 50 日线。
+The Russell 2000 also closed slightly below its 50-day line.
 
 
-Amid the recent stock market weakness, IBD is maintaining its recommended exposure level at 40% to 60%.  
-在最近的股市疲软中，IBD 将其建议的风险敞口维持在 40% 至 60%。
+Amid the recent stock market weakness, IBD is maintaining its recommended exposure level at 40% to 60%.
 
 
-The current environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.  
-当前的环境显然使投资者重视[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。
+The current environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured zero stocks, which makes sense after the current weakness. Further, there are only a handful of names appearing on MarketSurge's Near Pivot list, suggesting there is a scarcity of buying opportunities.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单中没有股票，这在当前疲软之后是有道理的。此外，MarketSurge 的 Near Pivot 名单上只有少数几个名字出现，这表明缺乏买入机会。
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured zero stocks, which makes sense after the current weakness. Further, there are only a handful of names appearing on MarketSurge's Near Pivot list, suggesting there is a scarcity of buying opportunities.
 
 
 
@@ -110,8 +92,7 @@ The current environment clearly puts investor emphasis on [risk management](http
 ---
 
 
-[**Forget Amazon And Tesla. This Non-Magnificent Seven Stock Dwarfs Their Gains.  
-忘掉亚马逊和特斯拉吧。这只不宏伟的 7 只股票使他们的收益相形见绌。**](https://www.investors.com/research/breakout-stocks-technical-analysis/costco-stock-nvidia-amazon-tesla-ytd-gains/)
+[**Forget Amazon And Tesla. This Non-Magnificent Seven Stock Dwarfs Their Gains.**](https://www.investors.com/research/breakout-stocks-technical-analysis/costco-stock-nvidia-amazon-tesla-ytd-gains/)
 
 
 
@@ -120,57 +101,46 @@ The current environment clearly puts investor emphasis on [risk management](http
 
 
 
-Stock Market Leaders: TSMC, TransDigm, Tyler股市领导者：TSMC、TransDigm、Tyler
-----------------------------------------------------------------------
+Stock Market Leaders: TSMC, TransDigm, Tyler
+--------------------------------------------
 
 
-Still, stock market leaders to watch include **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), **TransDigm** ([TDG](https://research.investors.com/quote.aspx?symbol=TDG)) and **Tyler Technologies** ([TYL](https://research.investors.com/quote.aspx?symbol=TYL)).  
-尽管如此，值得关注的股市领导者包括**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)）、**TransDigm** （[TDG](https://research.investors.com/quote.aspx?symbol=TDG)） 和 **Tyler Technologies** （[TYL](https://research.investors.com/quote.aspx?symbol=TYL)）。
+Still, stock market leaders to watch include **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), **TransDigm** ([TDG](https://research.investors.com/quote.aspx?symbol=TDG)) and **Tyler Technologies** ([TYL](https://research.investors.com/quote.aspx?symbol=TYL)).
 
 
-Taiwan Semi, better known as TSMC, built a cup with handle that offers a 175.45 buy point. But shares are below their 50-day line, as the relative strength line is starting to lag.  
-Taiwan Semi，更广为人知的名字是 TSMC，制造了一个带手柄的杯子，提供 175.45 的买入点。但股价低于 50 日线，因为相对强弱线开始滞后。
+Taiwan Semi, better known as TSMC, built a cup with handle that offers a 175.45 buy point. But shares are below their 50-day line, as the relative strength line is starting to lag.
 
 
-TransDigm, an aerospace components maker and an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), is back below a 1,369.58 buy point following last week's breakout move.  
-TransDigm 是一家航空航天零部件制造商和 [IBD SwingTrader 理念](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)，在上周的突破后，它回到了 1,369.58 的买入点下方。
+TransDigm, an aerospace components maker and an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), is back below a 1,369.58 buy point following last week's breakout move.
 
 
-[Tyler Technologies](https://www.investors.com/research/ibd-stock-of-the-day/tyler-stock-government-software-upgrades/), which provides IT services to government agencies, is tracing a flat base with a 593.50 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts. Tyler is on the [MarketSurge Growth 250](https://marketsurge.investors.com/resources/webinars/platformFeatures?id=5034&node=p) Near Pivot list.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 图表，为政府机构提供 IT 服务的 [Tyler Technologies](https://www.investors.com/research/ibd-stock-of-the-day/tyler-stock-government-software-upgrades/) 正在以 593.50 的买入点追踪平坦的底部。Tyler 在 [MarketSurge Growth 250](https://marketsurge.investors.com/resources/webinars/platformFeatures?id=5034&node=p) Near Pivot 名单上。
+[Tyler Technologies](https://www.investors.com/research/ibd-stock-of-the-day/tyler-stock-government-software-upgrades/), which provides IT services to government agencies, is tracing a flat base with a 593.50 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts. Tyler is on the [MarketSurge Growth 250](https://marketsurge.investors.com/resources/webinars/platformFeatures?id=5034&node=p) Near Pivot list.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090524.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090524.pdf)
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 了解有关标准普尔 500 指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
