--- a/_columns/The_Big_Picture/zh-cn/2024-09-10.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-10.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Ends Mixed Despite Financial Scare; Goldman, JPMorgan Fall Hard, But Oracle Jumps	尽管金融恐慌，股市收盘涨跌互现;高盛、摩根大通重挫，但甲骨文暴跌
+  Stock Market Ends Mixed Despite Financial Scare; Goldman, JPMorgan Fall Hard, But Oracle Jumps
 date: 2024-09-10 17:37 -0700
 author: KEN SHREVE
 ---
@@ -10,120 +10,95 @@ author: KEN SHREVE
 
 
 
-The stock market ended mixed Tuesday as a strong earnings report from **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) boosted sentiment in the technology sector. But a sell-off in financial stocks weighed on the Dow Jones Industrial Average and Russell 2000 small-cap index, even though both indexes closed well off lows.  
-由于**甲骨文** （[ORCL）](https://research.investors.com/quote.aspx?symbol=ORCL) 强劲的收益报告提振了科技行业的情绪，股市周二收盘涨跌互现。但金融股的抛售令道琼斯工业平均指数和罗素 2000 小盘股指数承压，尽管这两个指数都收于低点。
+The stock market ended mixed Tuesday as a strong earnings report from **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) boosted sentiment in the technology sector. But a sell-off in financial stocks weighed on the Dow Jones Industrial Average and Russell 2000 small-cap index, even though both indexes closed well off lows.
 
 
 
 
-Auto financing specialist **Ally Financial** ([ALLY](https://research.investors.com/quote.aspx?symbol=ALLY)) plunged nearly 18% after Chief Financial Officer Russell Hutchinson [warned of increasing credit challenges](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/) at the Barclays Global Financial Services Conference. "Our borrower is struggling with high inflation and cost of living, and now more recently, a weakening employment picture," he said.  
-在首席财务官 Russell Hutchinson 在巴克莱全球金融服务会议上[警告称信贷挑战日益严峻](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/)后，汽车融资专家 **Ally Financial** （[ALLY）](https://research.investors.com/quote.aspx?symbol=ALLY) 暴跌近 18%。“我们的借款人正在与高通胀和生活成本作斗争，现在又出现了疲软的就业形势，”他说。
+Auto financing specialist **Ally Financial** ([ALLY](https://research.investors.com/quote.aspx?symbol=ALLY)) plunged nearly 18% after Chief Financial Officer Russell Hutchinson [warned of increasing credit challenges](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/) at the Barclays Global Financial Services Conference. "Our borrower is struggling with high inflation and cost of living, and now more recently, a weakening employment picture," he said.
 
 
-In related news, **JPMorgan** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) slumped 5% after Chief Operating Officer Daniel Pinto said net interest income in 2025 will be [lower than expected](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/). **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) on Monday warned that a downturn in the firm's trading business would weigh on Q3 results. Both Dow Jones stocks plunged through their 50-day moving averages. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) fell 2% but held support at its 50-day line.  
-在相关新闻中，**摩根大通** （[JPM）](https://research.investors.com/quote.aspx?symbol=JPM) 暴跌 5%，此前首席运营官 Daniel Pinto 表示 2025 年的净利息收入将[低于预期](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/)。**高盛** （[GS）](https://research.investors.com/quote.aspx?symbol=GS) 周一警告称，该公司贸易业务的低迷将对第三季度的业绩造成压力。道琼斯股票均跌破 50 天移动平均线。**美国运通** （[AXP）](https://research.investors.com/quote.aspx?symbol=AXP) 下跌 2%，但守住了 50 日线的支撑位。
+In related news, **JPMorgan** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) slumped 5% after Chief Operating Officer Daniel Pinto said net interest income in 2025 will be [lower than expected](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/). **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) on Monday warned that a downturn in the firm's trading business would weigh on Q3 results. Both Dow Jones stocks plunged through their 50-day moving averages. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) fell 2% but held support at its 50-day line.
 
 
-Banks did get some good news after a [Federal Reserve official](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/) said big banks would be required to increase reserves for loan losses by 9%, much lower than an earlier proposal of nearly 20%.  
-在[一位美联储官员](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/)表示，大银行将被要求将贷款损失准备金增加 9%，远低于早先近 20% 的提议后，银行确实得到了一些好消息。
+Banks did get some good news after a [Federal Reserve official](https://www.investors.com/news/bank-stocks-rise-jpmorgan-in-buy-zone-with-feds-barr-to-speak/) said big banks would be required to increase reserves for loan losses by 9%, much lower than an earlier proposal of nearly 20%.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-Weakness in JPMorgan, Goldman Sachs and American Express weighed on the Dow Jones, which fell as much as 1% but closed with a loss of just 0.2%.  
-摩根大通、高盛和美国运通的疲软令道琼斯指数承压，该指数下跌近 1%，但收盘仅下跌 0.2%。
+Weakness in JPMorgan, Goldman Sachs and American Express weighed on the Dow Jones, which fell as much as 1% but closed with a loss of just 0.2%.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP091024.jpg)
 
 
-There were several bright spots in the blue-chip index, including **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)), which rallied 2.4%. After a 25% July-early August decline, Amazon is trying to break out of a downtrend, but the stock's 50-day line is still a potential resistance level. **Verizon** ([VZ](https://research.investors.com/quote.aspx?symbol=VZ)) cleared a long flat base, rallying 2% in strong volume, while **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) added 1.5% as the home improvement chain eyes a 378.58 entry.  
-蓝筹股指数有几个亮点，包括 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)），上涨 2.4%。在 7 月至 8 月初下跌 25% 之后，亚马逊正试图突破下跌趋势，但该股的 50 天线仍是潜在的阻力位。**Verizon** （[VZ](https://research.investors.com/quote.aspx?symbol=VZ)） 清除了一个长而平坦的底部，强劲地上涨了 2%，而 **Home Depot** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） 上涨了 1.5%，因为这家家装连锁店的目标是 378.58 的入场点。
+There were several bright spots in the blue-chip index, including **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)), which rallied 2.4%. After a 25% July-early August decline, Amazon is trying to break out of a downtrend, but the stock's 50-day line is still a potential resistance level. **Verizon** ([VZ](https://research.investors.com/quote.aspx?symbol=VZ)) cleared a long flat base, rallying 2% in strong volume, while **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) added 1.5% as the home improvement chain eyes a 378.58 entry.
 
 
-The S&P 500 and Nasdaq composite ended near session highs, up 0.4% and 0.8%, respectively. Volume fell slightly on the Nasdaq and rose slightly on the NYSE.  
-标准普尔 500 指数和纳斯达克综合指数收于盘中高点附近，分别上涨 0.4% 和 0.8%。纳斯达克的成交量略有下降，纽约证券交易所的成交量略有上升。
+The S&P 500 and Nasdaq composite ended near session highs, up 0.4% and 0.8%, respectively. Volume fell slightly on the Nasdaq and rose slightly on the NYSE.
 
 
-Oil and gas stocks lagged. West Texas intermediate crude oil futures settled at $65.75 a barrel, down 4.3%. According to Dow Jones Market Data, that's the lowest close since December 2021. Inside the S&P 500, **Diamondback Energy** ([FANG](https://research.investors.com/quote.aspx?symbol=FANG)), **Apa** ([APA](https://research.investors.com/quote.aspx?symbol=APA)) and **Exxon Mobil** ([XOM](https://research.investors.com/quote.aspx?symbol=XOM)) closed with losses ranging from 3.6% to 4.3%.  
-石油和天然气库存落后。西德克萨斯中质原油期货收于每桶 65.75 美元，下跌 4.3%。根据道琼斯市场数据，这是自 2021 年 12 月以来的最低收盘价。在标准普尔 500 指数中，**Diamondback Energy** （[FANG](https://research.investors.com/quote.aspx?symbol=FANG)）、**Apa** （[APA](https://research.investors.com/quote.aspx?symbol=APA)） 和**埃克森美孚** （[XOM）](https://research.investors.com/quote.aspx?symbol=XOM) 收盘下跌 3.6% 至 4.3%。
+Oil and gas stocks lagged. West Texas intermediate crude oil futures settled at $65.75 a barrel, down 4.3%. According to Dow Jones Market Data, that's the lowest close since December 2021. Inside the S&P 500, **Diamondback Energy** ([FANG](https://research.investors.com/quote.aspx?symbol=FANG)), **Apa** ([APA](https://research.investors.com/quote.aspx?symbol=APA)) and **Exxon Mobil** ([XOM](https://research.investors.com/quote.aspx?symbol=XOM)) closed with losses ranging from 3.6% to 4.3%.
 
 
-Winners beat losers on the Nasdaq and NYSE by a small margin.  
-纳斯达克和纽约证券交易所的赢家以微弱优势击败了输家。
+Winners beat losers on the Nasdaq and NYSE by a small margin.
 
 
-Large-cap technology stocks generally performed well, helped by a strong [earnings report](https://www.investors.com/news/technology/oracle-stock-orcl-q1-report-cloudworld-ai-cloud/) from Oracle. Late Monday, the software giant said total revenue increased 7% to $13.3 billion. But investors focused on revenue at Oracle's cloud infrastructure unit, which rose 45% to $2.2 billion.  
-大型科技股普遍表现良好，这得益于甲骨文强劲的[收益报告](https://www.investors.com/news/technology/oracle-stock-orcl-q1-report-cloudworld-ai-cloud/)。周一晚些时候，这家软件巨头表示，总收入增长 7% 至 133 亿美元。但投资者关注的是甲骨文云基础设施部门的收入，该部门的收入增长了 45%，达到 22 亿美元。
+Large-cap technology stocks generally performed well, helped by a strong [earnings report](https://www.investors.com/news/technology/oracle-stock-orcl-q1-report-cloudworld-ai-cloud/) from Oracle. Late Monday, the software giant said total revenue increased 7% to $13.3 billion. But investors focused on revenue at Oracle's cloud infrastructure unit, which rose 45% to $2.2 billion.
 
 
-**Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) was the top gainer in the Nasdaq 100, up more than 5%. But the chip giant is still on a downtrend even after another bounce off its 200-day moving average.  
-**博通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 是纳斯达克 100 指数中涨幅最大的股票，上涨超过 5%。但这家芯片巨头即使在从 200 天移动平均线再次反弹后仍处于下跌趋势中。
+**Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) was the top gainer in the Nasdaq 100, up more than 5%. But the chip giant is still on a downtrend even after another bounce off its 200-day moving average.
 
 
-The Russell 2000 pared a 1.2% intraday loss to close nearly flat. It was a resilient performance, but the index is still down 5.4% over the past six sessions.  
-罗素 2000 指数盘中下跌 1.2%，收盘几乎持平。这是一次有弹性的表现，但该指数在过去六个交易日中仍下跌了 5.4%。
+The Russell 2000 pared a 1.2% intraday loss to close nearly flat. It was a resilient performance, but the index is still down 5.4% over the past six sessions.
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
-The sudden sell-off in financial stocks cast an early pall on the stock market, which had already been dealing with increasing signs of distribution. The Nasdaq composite shows five [distribution days](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/) since Aug. 22. Four of those higher-volume declines showed losses of at least 1.1%. Selling has been less pronounced in the S&P 500. Headed into Tuesday, the benchmark index showed three distribution days.  
-金融股的突然抛售给股市蒙上了一层早期的阴影，该市场已经在应对越来越多的分配迹象。纳斯达克综合指数显示自 8 月 22 日以来的 5 [个派息日](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/)。其中 4 个成交量较大的下降幅度至少为 1.1%。在标准普尔 500 指数中，抛售不那么明显。进入周二，基准指数显示三个分发日。
+The sudden sell-off in financial stocks cast an early pall on the stock market, which had already been dealing with increasing signs of distribution. The Nasdaq composite shows five [distribution days](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/) since Aug. 22. Four of those higher-volume declines showed losses of at least 1.1%. Selling has been less pronounced in the S&P 500. Headed into Tuesday, the benchmark index showed three distribution days.
 
 
-Tuesday's recovery off lows for the major stock indexes was a welcome development for the bulls. But the Nasdaq and S&P 500 are still on downtrends and below their 50-day lines.  
-周二主要股指从低点反弹，对多头来说是一个可喜的发展。但纳斯达克和标准普尔 500 指数仍处于下跌趋势中，并低于 50 日线。
+Tuesday's recovery off lows for the major stock indexes was a welcome development for the bulls. But the Nasdaq and S&P 500 are still on downtrends and below their 50-day lines.
 
 
-With the market tide still flowing negative, it's a good idea to raise some cash and wait for more signs of strength in the broad market. That would come in the form of higher-volume gains for the indexes followed up by lower-volume declines.  
-由于市场潮水仍然呈负面波动，最好筹集一些现金并等待大盘的更多走强迹象。这将以指数成交量增加的形式出现，随后成交量下降。
+With the market tide still flowing negative, it's a good idea to raise some cash and wait for more signs of strength in the broad market. That would come in the form of higher-volume gains for the indexes followed up by lower-volume declines.
 
 
-For now, stock-buy prospects remain scarce. But there are some exceptions. Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), **Rollins** ([ROL](https://research.investors.com/quote.aspx?symbol=ROL)), a provider of pest and wildlife control services, jumped 3% in lower volume and closed just below a 51.28 alternative entry. **Tyler Technologies** ([TYL](https://research.investors.com/quote.aspx?symbol=TYL)) rose 1%, also in light turnover, and closed just above a 593.50 buy point.  
-目前，买股前景仍然很渺茫。但也有一些例外。在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中，害虫和野生动物控制服务提供商 **Rollins** （[ROL](https://research.investors.com/quote.aspx?symbol=ROL)） 的成交量下跌 3%，收盘价略低于 51.28 的替代入场点。**Tyler Technologies** （[TYL](https://research.investors.com/quote.aspx?symbol=TYL)） 上涨 1%，同样成交量较少，收盘价略高于 593.50 买入点。
+For now, stock-buy prospects remain scarce. But there are some exceptions. Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), **Rollins** ([ROL](https://research.investors.com/quote.aspx?symbol=ROL)), a provider of pest and wildlife control services, jumped 3% in lower volume and closed just below a 51.28 alternative entry. **Tyler Technologies** ([TYL](https://research.investors.com/quote.aspx?symbol=TYL)) rose 1%, also in light turnover, and closed just above a 593.50 buy point.
 
 
-Meanwhile, a key piece of economic data looms large Wednesday with the release of the consumer price index at 8:30 a.m. ET. On a year-over-year basis, core prices are expected to be up 3.2% in August, unchanged from July.  
-与此同时，随着美国东部时间周三上午 8：30 公布的消费者价格指数，一项关键经济数据迫在眉睫。与去年同期相比，预计 8 月份核心价格将上涨 3.2%，与 7 月份持平。
+Meanwhile, a key piece of economic data looms large Wednesday with the release of the consumer price index at 8:30 a.m. ET. On a year-over-year basis, core prices are expected to be up 3.2% in August, unchanged from July.
 
 
-Inflation data isn't as big a deal as it once was as the Federal Reserve gets set to start cutting rates at next week's meeting. Federal funds futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are still expecting 100 basis points in rate cuts by the end of the year.  
-通胀数据不像以前那么重要，因为美联储将在下周的会议上开始降息。[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的联邦基金期货交易员仍预计到今年年底将降息 100 个基点。
+Inflation data isn't as big a deal as it once was as the Federal Reserve gets set to start cutting rates at next week's meeting. Federal funds futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are still expecting 100 basis points in rate cuts by the end of the year.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091024.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091024.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Gauge Market Health  
-查看 IBD 的新风险敞口水平以衡量市场健康状况](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Gauge Market Health](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Futures: Debate Due With S&P 500 Near Key Level; Tesla Jumps  
-期货：与标准普尔 500 指数接近关键水平的辩论即将结束;特斯拉跳跃](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-trump-harris-debate-inflation-report-tesla-jumps-jpmorgan-tumbles/)
+[Futures: Debate Due With S&P 500 Near Key Level; Tesla Jumps](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-trump-harris-debate-inflation-report-tesla-jumps-jpmorgan-tumbles/)
 
 
 
