--- a/_columns/The_Big_Picture/zh-cn/2024-09-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-12.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Extends Rebound As Nasdaq Retakes Critical Level; What To Do Now	纳斯达克指数重回临界水平，股市延续反弹;现在该做什么
+  Stock Market Extends Rebound As Nasdaq Retakes Critical Level; What To Do Now
 date: 2024-09-12 17:38 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,38 +10,30 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market ended solidly higher Thursday, as Wall Street reacted to more inflation data ahead of next week's Federal Reserve policy meeting. The tech-heavy Nasdaq composite regained its critical 50-day moving average, another bullish sign in the wake of last week's heavy losses.  
-股市周四收盘走高，因为华尔街在下周美联储政策会议之前对更多通胀数据做出了反应。以科技股为主的纳斯达克综合指数收复了关键的 50 天移动均线，这是继上周大幅下跌之后的另一个看涨信号。
+The stock market ended solidly higher Thursday, as Wall Street reacted to more inflation data ahead of next week's Federal Reserve policy meeting. The tech-heavy Nasdaq composite regained its critical 50-day moving average, another bullish sign in the wake of last week's heavy losses.
 
 
 
 
-The Dow Jones Industrial Average rose 0.6% and the S&P 500 gained nearly 0.8%, while the tech-heavy Nasdaq composite advanced 1%. The small-cap Russell 2000 index rallied 1.2%.  
-道琼斯工业平均指数上涨 0.6%，标准普尔 500 指数上涨近 0.8%，而以科技股为主的纳斯达克综合指数上涨 1%。小盘股罗素 2000 指数上涨 1.2%。
+The Dow Jones Industrial Average rose 0.6% and the S&P 500 gained nearly 0.8%, while the tech-heavy Nasdaq composite advanced 1%. The small-cap Russell 2000 index rallied 1.2%.
 
 
-All 11 S&P 500 sectors ended higher, with communication services and consumer discretionary each up more than 1%. The financials and real estate sectors were the biggest laggards, both up a fraction.  
-标准普尔 500 指数的 11 个板块全部收高，通信服务和非必需消费品均上涨超过 1%。金融和房地产板块表现最落后，均上涨了一小部分。
+All 11 S&P 500 sectors ended higher, with communication services and consumer discretionary each up more than 1%. The financials and real estate sectors were the biggest laggards, both up a fraction.
 
 
-Breadth was positive, as advancers topped decliners by more than 3-to-1 on the NYSE and by nearly 2-to-1- on the Nasdaq.  
-广度是积极的，因为纽约证券交易所的上涨股超过下跌的股 3 比 1，纳斯达克的涨幅接近 2 比 1。
+Breadth was positive, as advancers topped decliners by more than 3-to-1 on the NYSE and by nearly 2-to-1- on the Nasdaq.
 
 
-Volume fell on the Nasdaq and the New York Stock Exchange from Wednesday's session.  
-纳斯达克和纽约证券交易所的成交量从周三开始下降。
+Volume fell on the Nasdaq and the New York Stock Exchange from Wednesday's session.
 
 
-Early Thursday, the producer price index, or PPI, for August came in mostly in line with economist expectations. Headline PPI was up 1.7% year over year, its lowest reading in six months, and rose 0.2% compared to July. Core PPI, which strips out volatile food, energy and trade services costs, rose 3.3% on an annualized basis and was up 0.3% on the prior month.  
-周四早些时候，8 月份生产者价格指数 （PPI） 基本符合经济学家的预期。整体 PPI 同比上涨 1.7%，为六个月来的最低水平，与 7 月份相比上涨 0.2%。剔除波动较大的食品、能源和贸易服务成本的核心 PPI 年化上涨 3.3%，环比上涨 0.3%。
+Early Thursday, the producer price index, or PPI, for August came in mostly in line with economist expectations. Headline PPI was up 1.7% year over year, its lowest reading in six months, and rose 0.2% compared to July. Core PPI, which strips out volatile food, energy and trade services costs, rose 3.3% on an annualized basis and was up 0.3% on the prior month.
 
 
-"The PPI report doesn't change interest rate expectations," said Bill Adams, chief economist for Comerica Bank in an email to IBD. "Comerica forecasts for the Fed to cut the fed funds target a quarter percent at next Wednesday's decision, and signal that further rate cuts are coming in following decisions."  
-“PPI 报告不会改变利率预期，”联信银行首席经济学家比尔·亚当斯 （Bill Adams） 在给 IBD 的一封电子邮件中表示。“Comerica 预测美联储将在下周三的决定中将联邦基金削减目标 25%，并暗示将在决定后进一步降息。”
+"The PPI report doesn't change interest rate expectations," said Bill Adams, chief economist for Comerica Bank in an email to IBD. "Comerica forecasts for the Fed to cut the fed funds target a quarter percent at next Wednesday's decision, and signal that further rate cuts are coming in following decisions."
 
 
-The 10-year Treasury yield rose nearly 3 basis points to 3.68%.  
-10 年期美国国债收益率上涨近 3 个基点至 3.68%。
+The 10-year Treasury yield rose nearly 3 basis points to 3.68%.
 
 
 
@@ -49,8 +41,7 @@ The 10-year Treasury yield rose nearly 3 basis points to 3.68%.
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
-英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -58,55 +49,45 @@ The 10-year Treasury yield rose nearly 3 basis points to 3.68%.
 ---
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The Nasdaq's Sept. 6 distribution day fell off the overall count. When an index moves up 5% from the closing price of the distribution day, then it is considered no longer relevant to the current count.  
-纳斯达克 9 月 6 日的发行日从总体计数中下降。当指数从分配日的收盘价上涨 5% 时，则认为它不再与当前计数相关。
+The Nasdaq's Sept. 6 distribution day fell off the overall count. When an index moves up 5% from the closing price of the distribution day, then it is considered no longer relevant to the current count.
 
 
-Inside the Dow Jones index, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) were among the biggest winners Thursday, with gains of 1.5% and 1.4%, respectively.  
-在道琼斯指数中，**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **3M** （[MMM](https://research.investors.com/quote.aspx?symbol=MMM)） 是周四最大的赢家之一，分别上涨 1.5% 和 1.4%。
+Inside the Dow Jones index, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) were among the biggest winners Thursday, with gains of 1.5% and 1.4%, respectively.
 
 
-On the downside, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) was among the six Dow losers on the session. The chipmaker remains near a 52-week low.  
-不利的一面是，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 是该时段道琼斯指数的六只下跌者之一。这家芯片制造商仍接近 52 周低点。
+On the downside, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) was among the six Dow losers on the session. The chipmaker remains near a 52-week low.
 
 
-[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher. Notably, **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) rallied 1.9% to extend a win streak to four sessions and move above the 50-day line.  
-[Magnificent Seven 所有股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)均收高。值得注意的是，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 上涨 1.9%，将连胜纪录延长至四个交易日，并突破 50 天线。
+[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher. Notably, **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) rallied 1.9% to extend a win streak to four sessions and move above the 50-day line.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) gained 1.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), Taser maker **Axon Enterprise** ([AXON](https://research.investors.com/quote.aspx?symbol=AXON)) rallied more than 6% to hit a new high. Axon is a new [IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) after breaking out with conviction over Monday's high of 369.44.  
-Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四上涨 1.6%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 指数中，泰瑟枪制造商 **Axon Enterprise** （[AXON）](https://research.investors.com/quote.aspx?symbol=AXON) 上涨超过 6%，创下新高。Axon 是一只新的 [IBD 排行榜股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)，在突破周一的高点 369.44 后坚定不移。
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) gained 1.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), Taser maker **Axon Enterprise** ([AXON](https://research.investors.com/quote.aspx?symbol=AXON)) rallied more than 6% to hit a new high. Axon is a new [IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) after breaking out with conviction over Monday's high of 369.44.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP091224-240x300.jpg)
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
-On Wednesday, IBD's [recommended market exposure level](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) was lifted from 20%-40% to 40%-60%. And Thursday's action was more evidence of stock market strength, as the Nasdaq reclaimed its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/) for the first time since Aug. 30. That essentially breaks the composite's downtrend.  
-周三，IBD [建议的市场敞口水平](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)从 20%-40% 上调至 40%-60%。周四的行动更证明了股市走强，因为纳斯达克指数自 8 月 30 日以来首次收复了 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)。这基本上打破了综合指数的下跌趋势。
+On Wednesday, IBD's [recommended market exposure level](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) was lifted from 20%-40% to 40%-60%. And Thursday's action was more evidence of stock market strength, as the Nasdaq reclaimed its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/) for the first time since Aug. 30. That essentially breaks the composite's downtrend.
 
 
-As such, IBD is raising the exposure level further, to 60%-80%. That means that investors can add more stocks as stock market leaders offer new entries. For example, decisive rebounds from 50-day lines and breakouts past correct entries are good opportunities to put some capital to work.  
-因此，IBD 将暴露水平进一步提高到 60%-80%。这意味着投资者可以在股市领导者提供新入场时添加更多股票。例如，从 50 天线的决定性反弹和突破正确入场后是投入一些资金的好机会。
+As such, IBD is raising the exposure level further, to 60%-80%. That means that investors can add more stocks as stock market leaders offer new entries. For example, decisive rebounds from 50-day lines and breakouts past correct entries are good opportunities to put some capital to work.
 
 
-But don't be too aggressive with buying stocks. The current environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.  
-但不要太激进地购买股票。当前的环境显然使投资者重视[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。
+But don't be too aggressive with buying stocks. The current environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.
 
 
-If those latest purchases start to gain some traction, then you can feel confident in the health of the market rebound. But if those buys turn negative, then the market isn't quite following through as intended and you can back away with little lost.  
-如果这些最新的购买开始获得一些牵引力，那么您可以对市场反弹的健康状况充满信心。但是，如果这些购买变为负值，那么市场并没有完全按照预期进行，您可以退缩而损失很小。
+If those latest purchases start to gain some traction, then you can feel confident in the health of the market rebound. But if those buys turn negative, then the market isn't quite following through as intended and you can back away with little lost.
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured just two stocks, which may be normal given the nascent market rebound. On the upside, there are more ideas appearing on MarketSurge's Near Pivot list, suggesting there are buying opportunities ready to emerge.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单仅包含两只股票，考虑到新生的市场反弹，这可能是正常的。从好的方面来看，MarketSurge 的 Near Pivot 列表中出现了更多想法，这表明有买入机会即将出现。
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured just two stocks, which may be normal given the nascent market rebound. On the upside, there are more ideas appearing on MarketSurge's Near Pivot list, suggesting there are buying opportunities ready to emerge.
 
 
 
@@ -114,8 +95,7 @@ If those latest purchases start to gain some traction, then you can feel confide
 ---
 
 
-[**Keep Trying, Nvidia, But These 21 Stocks Are Already 'Perfect'  
-继续尝试，英伟达，但这 21 只股票已经是“完美”的**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**Keep Trying, Nvidia, But These 21 Stocks Are Already 'Perfect'**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -124,61 +104,49 @@ If those latest purchases start to gain some traction, then you can feel confide
 
 
 
-Stock Market Leaders: Flutter, On Holding, Sea, Uber股市领导者：Flutter、On Holding、Sea、Uber
--------------------------------------------------------------------------------------
+Stock Market Leaders: Flutter, On Holding, Sea, Uber
+----------------------------------------------------
 
 
-Amid the stock market rebound, leaders to watch include **Flutter** ([FLUT](https://research.investors.com/quote.aspx?symbol=FLUT)), **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), **Sea Limited** ([SE](https://research.investors.com/quote.aspx?symbol=SE)) and **Uber Technologies** ([UBER](https://research.investors.com/quote.aspx?symbol=UBER)).  
-在股市反弹中，值得关注的领导者包括 **Flutter** （[FLUT](https://research.investors.com/quote.aspx?symbol=FLUT)）、**On Holding** （[ONON](https://research.investors.com/quote.aspx?symbol=ONON)）、**Sea Limited** （[SE）](https://research.investors.com/quote.aspx?symbol=SE) 和 **Uber Technologies** （[UBER](https://research.investors.com/quote.aspx?symbol=UBER)）。
+Amid the stock market rebound, leaders to watch include **Flutter** ([FLUT](https://research.investors.com/quote.aspx?symbol=FLUT)), **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), **Sea Limited** ([SE](https://research.investors.com/quote.aspx?symbol=SE)) and **Uber Technologies** ([UBER](https://research.investors.com/quote.aspx?symbol=UBER)).
 
 
-Flutter, the [parent company of FanDuel](https://www.investors.com/research/ibd-stock-of-the-day/fanduel-parent-flut-stock-nfl-season/), is building a cup base that offers a 226.40 entry. Meanwhile, a 216.38 entry has formed due to a three-weeks-tight within the base.  
-[FanDuel 的母公司](https://www.investors.com/research/ibd-stock-of-the-day/fanduel-parent-flut-stock-nfl-season/) Flutter 正在构建一个提供 226.40 入场券的杯底。与此同时，由于基地内三周的紧张，已经形成了 216.38 的入场口。
+Flutter, the [parent company of FanDuel](https://www.investors.com/research/ibd-stock-of-the-day/fanduel-parent-flut-stock-nfl-season/), is building a cup base that offers a 226.40 entry. Meanwhile, a 216.38 entry has formed due to a three-weeks-tight within the base.
 
 
-[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-running-on-holding-onon-stock-buy-point/), an athletic apparel company and an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), hit new highs Thursday, extended above a 44.30 buy point.  
-[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-running-on-holding-onon-stock-buy-point/) 是一家运动服装公司和 [IBD SwingTrader 理念](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)，周四创下新高，延伸至 44.30 买入点上方。
+[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-running-on-holding-onon-stock-buy-point/), an athletic apparel company and an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), hit new highs Thursday, extended above a 44.30 buy point.
 
 
-[Sea Limited](https://www.investors.com/research/ibd-stock-of-the-day/sea-stock-temu-tiktok-se-stock/) is in the 5% buy area above a 76.60 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 图表，[Sea Limited](https://www.investors.com/research/ibd-stock-of-the-day/sea-stock-temu-tiktok-se-stock/) 位于 76.60 买入点上方的 5% 买入区域。
+[Sea Limited](https://www.investors.com/research/ibd-stock-of-the-day/sea-stock-temu-tiktok-se-stock/) is in the 5% buy area above a 76.60 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts.
 
 
-[Uber shares](https://www.investors.com/research/ibd-stock-of-the-day/uber-stock-self-driving-car-ambitions/) are trying to find support around their 50-day line, as they fade from a double-bottom entry at 75.40. An early entry at 74.48 is also in play.  
-[优步股](https://www.investors.com/research/ibd-stock-of-the-day/uber-stock-self-driving-car-ambitions/)价正试图在其 50 日线附近找到支撑，因为它们从 75.40 的双底入口消失。74.48 的早盘入场也在起作用。
+[Uber shares](https://www.investors.com/research/ibd-stock-of-the-day/uber-stock-self-driving-car-ambitions/) are trying to find support around their 50-day line, as they fade from a double-bottom entry at 75.40. An early entry at 74.48 is also in play.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091224.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091224.pdf)
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 了解有关标准普尔 500 指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
