--- a/_columns/The_Big_Picture/zh-cn/2024-08-22.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-22.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Tech Stocks Lead Stock Market Lower As Wall Street Braces For Powell Speech	科技股引领股市走低，华尔街为鲍威尔演讲做准备
+  Tech Stocks Lead Stock Market Lower As Wall Street Braces For Powell Speech
 date: 2024-08-22 17:23 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,34 +10,27 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market rally took a step backward on Thursday as Wall Street braces for Fed Chairman Jerome Powell's pivotal speech from Jackson Hole, Wyo., Friday morning.  
-周四股市反弹倒退一步，因为华尔街为美联储主席杰罗姆鲍威尔周五上午在怀俄明州杰克逊霍尔的关键讲话做准备。
+The stock market rally took a step backward on Thursday as Wall Street braces for Fed Chairman Jerome Powell's pivotal speech from Jackson Hole, Wyo., Friday morning.
 
 
 
 
-The Dow Jones Industrial Average dropped 0.4%, while the S&P 500 lost 0.9% and the tech-heavy Nasdaq composite slid 1.7%. For the Nasdaq, it was the largest one-day percentage loss since Aug. 5, per Dow Jones market data. The small-cap Russell 2000 index fell nearly 1%.  
-道琼斯工业平均指数下跌 0.4%，而标准普尔 500 指数下跌 0.9%，以科技股为主的纳斯达克综合指数下跌 1.7%。根据道琼斯市场数据，纳斯达克指数创下自 8 月 5 日以来的最大单日百分比跌幅。小盘股罗素 2000 指数下跌近 1%。
+The Dow Jones Industrial Average dropped 0.4%, while the S&P 500 lost 0.9% and the tech-heavy Nasdaq composite slid 1.7%. For the Nasdaq, it was the largest one-day percentage loss since Aug. 5, per Dow Jones market data. The small-cap Russell 2000 index fell nearly 1%.
 
 
-Eight of the 11 S&P 500 sectors ended lower, with technology and consumer discretionary the biggest losers. The technology sector index fell 2.3%, its worst day since Aug. 5. On the upside, the real estate, financial and energy sectors held modest gains.  
-标准普尔 500 指数的 11 个板块中有 8 个收低，其中科技和非必需消费品板块跌幅最大。科技板块指数下跌 2.3%，为 8 月 5 日以来最糟糕的一天。从好的方面来看，房地产、金融和能源板块小幅上涨。
+Eight of the 11 S&P 500 sectors ended lower, with technology and consumer discretionary the biggest losers. The technology sector index fell 2.3%, its worst day since Aug. 5. On the upside, the real estate, financial and energy sectors held modest gains.
 
 
-Volume rose on the Nasdaq but fell on the New York Stock Exchange from Wednesday's session. That resulted in the first [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq since the follow-through day on Aug. 13.  
-纳斯达克的成交量从周三开始上升，但纽约证券交易所的成交量下降。这导致纳斯达克自 8 月 13 日后续日以来的第一个[派发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。
+Volume rose on the Nasdaq but fell on the New York Stock Exchange from Wednesday's session. That resulted in the first [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq since the follow-through day on Aug. 13.
 
 
-Losses were broad, with decliners outnumbering advancers by a nearly 2-1 ratio on the NYSE and by more than 2-to-1 on the Nasdaq, according to [MarketWatch](https://www.marketwatch.com/market-data/us). The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) only fell 0.3%, a mild loss compared with the Nasdaq and S&P 500, indicating that heavier losses occurred in the higher-weighted stocks.  
-根据 [MarketWatch](https://www.marketwatch.com/market-data/us) 的数据，损失范围很广，纽约证券交易所的下跌者数量与上涨者的数量之比接近 2：1，纳斯达克的跌幅超过 2：1。景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 仅下跌 0.3%，与纳斯达克和标准普尔 500 指数相比略有损失，表明权重较高的股票损失更大。
+Losses were broad, with decliners outnumbering advancers by a nearly 2-1 ratio on the NYSE and by more than 2-to-1 on the Nasdaq, according to [MarketWatch](https://www.marketwatch.com/market-data/us). The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) only fell 0.3%, a mild loss compared with the Nasdaq and S&P 500, indicating that heavier losses occurred in the higher-weighted stocks.
 
 
-The 10-year Treasury yield rose eight basis points to 3.86%.  
-10 年期美国国债收益率上涨 8 个基点至 3.86%。
+The 10-year Treasury yield rose eight basis points to 3.86%.
 
 
-Early Friday, [Powell will likely say](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/) at his Jackson Hole speech that inflation has eased to the point where the risks are now tilted toward waiting too long to cut rates. Although the effects of Hurricane Beryl contributed to a soft July jobs report, hiring momentum has clearly slowed.  
-周五早些时候，[鲍威尔可能会](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/)在杰克逊霍尔演讲中表示，通胀已经缓解到现在风险倾向于等待太久才降息的程度。尽管飓风 Beryl 的影响导致 7 月就业报告疲软，但招聘势头明显放缓。
+Early Friday, [Powell will likely say](https://www.investors.com/news/economy/federal-reserve-chairman-jerome-powell-jackson-hole-bls-job-revisions-sp-500/) at his Jackson Hole speech that inflation has eased to the point where the risks are now tilted toward waiting too long to cut rates. Although the effects of Hurricane Beryl contributed to a soft July jobs report, hiring momentum has clearly slowed.
 
 
 
@@ -45,8 +38,7 @@ Early Friday, [Powell will likely say](https://www.investors.com/news/economy/fe
 ---
 
 
-[**Want To Get Quick Profits And Avoid Big Losses? Try IBD SwingTrader  
-想快速获利并避免巨额亏损？尝试 IBD SwingTrader**](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)
+[**Want To Get Quick Profits And Avoid Big Losses? Try IBD SwingTrader**](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)
 
 
 
@@ -54,53 +46,43 @@ Early Friday, [Powell will likely say](https://www.investors.com/news/economy/fe
 ---
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-Inside the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)), **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) were among the biggest losersThursday, with declines of 6.1%, 2.2% and 2%, respectively.  
-在道琼斯指数中，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)）、**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 是周四跌幅最大的股票之一，分别下跌 6.1%、2.2% 和 2%。
+Inside the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)), **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) were among the biggest losersThursday, with declines of 6.1%, 2.2% and 2%, respectively.
 
 
-On the upside, financials **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were among the handful of Dow gainers on the session.  
-从好的方面来看，金融股**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 和美国**运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 是道琼斯指数中为数不多的上涨股之一。
+On the upside, financials **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) were among the handful of Dow gainers on the session.
 
 
-[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply lower. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) tumbled 3.7% and 5.7%, respectively. Notably, Nvidia stock held above its 50-day line, while Tesla fell below that key level.  
-[所有 Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)均收盘大幅走低。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 和**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 分别下跌 3.7% 和 5.7%。值得注意的是，英伟达股价保持在 50 日线上方，而特斯拉跌破该关键水平。
+[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply lower. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) tumbled 3.7% and 5.7%, respectively. Notably, Nvidia stock held above its 50-day line, while Tesla fell below that key level.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Powell Industries** ([POWL](https://research.investors.com/quote.aspx?symbol=POWL)) advanced more than 2%, closing within striking distance of a 188.45 buy trigger.  
-Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四下跌 0.6%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 中，**鲍威尔工业** （[POWL）](https://research.investors.com/quote.aspx?symbol=POWL) 上涨超过 2%，收于 188.45 买入触发点的打击距离内。
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.6% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Powell Industries** ([POWL](https://research.investors.com/quote.aspx?symbol=POWL)) advanced more than 2%, closing within striking distance of a 188.45 buy trigger.
 
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
-The Nasdaq is right back at its 50-day moving average following Thursday's sharp loss. A sharp breach of that level would likely indicate further weakness, while a rebound would be bullish for the market's short-term prospects. And Friday's Powell speech could be the catalyst in either direction.  
-纳斯达克指数在周四大幅下跌后回到了 50 天移动平均线。大幅突破该水平可能预示着市场进一步疲软，而反弹则对市场的短期前景有利。周五的鲍威尔讲话可能成为任何一个方向的催化剂。
+The Nasdaq is right back at its 50-day moving average following Thursday's sharp loss. A sharp breach of that level would likely indicate further weakness, while a rebound would be bullish for the market's short-term prospects. And Friday's Powell speech could be the catalyst in either direction.
 
 
-Still, it's normal for the market to pull back after a sharp rally since the Aug. 5 market low, so IBD is maintaining its recommended exposure level at 60% to 80%.  
-尽管如此，自 8 月 5 日市场低点以来，市场在大幅反弹后回落是正常的，因此 IBD 将其建议的风险敞口维持在 60% 至 80%。
+Still, it's normal for the market to pull back after a sharp rally since the Aug. 5 market low, so IBD is maintaining its recommended exposure level at 60% to 80%.
 
 
-This environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means that incrementally raising exposure remains a priority. See how your existing positions and the latest buys perform before putting more capital to work.  
-这种环境显然使投资者重视[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法论的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步提高曝光率仍然是一个优先事项。在投入更多资金之前，先了解您现有的头寸和最新的买入情况。
+This environment clearly puts investor emphasis on [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means that incrementally raising exposure remains a priority. See how your existing positions and the latest buys perform before putting more capital to work.
 
 
-If you're making progress, then it makes sense to add more exposure. If not, then hold off until you can find more opportunities.  
-如果你正在取得进展，那么增加更多的曝光是有意义的。如果没有，那就等到你能找到更多的机会。
+If you're making progress, then it makes sense to add more exposure. If not, then hold off until you can find more opportunities.
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured four stocks, but none moved in heavy volume. That indicates a lack of strong institutional demand at these levels. Notably, **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) and **Intuit** ([INTU](https://research.investors.com/quote.aspx?symbol=INTU)) topped their entries. But Intuit shares jumped in extended trading after the company's earnings were announced.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单中有四只股票，但没有一只股票的交易量很大。这表明在这些层面上缺乏强劲的制度需求。值得注意的是，**AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)） 和 **Intuit** （[INTU）](https://research.investors.com/quote.aspx?symbol=INTU) 在他们的参赛作品中名列前茅。但在公司财报公布后，Intuit 股价在延长交易中上涨。
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured four stocks, but none moved in heavy volume. That indicates a lack of strong institutional demand at these levels. Notably, **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) and **Intuit** ([INTU](https://research.investors.com/quote.aspx?symbol=INTU)) topped their entries. But Intuit shares jumped in extended trading after the company's earnings were announced.
 
 
-Further, more names are appearing on MarketSurge's Near Pivot list, suggesting that buying opportunities are on the near horizon.  
-此外，更多名字出现在 MarketSurge 的 Near Pivot 列表中，这表明买入机会即将到来。
+Further, more names are appearing on MarketSurge's Near Pivot list, suggesting that buying opportunities are on the near horizon.
 
 
 
@@ -108,8 +90,7 @@ Further, more names are appearing on MarketSurge's Near Pivot list, suggesting t
 ---
 
 
-**[Join IBD experts as they analyze leading stocks in the current stock market action on IBD Live  
-加入 IBD 专家，他们在 IBD Live 上分析当前股市行动中的领先股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)**
+**[Join IBD experts as they analyze leading stocks in the current stock market action on IBD Live](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)**
 
 
 
@@ -118,61 +99,49 @@ Further, more names are appearing on MarketSurge's Near Pivot list, suggesting t
 
 
 
-Stock Market Leaders: Meta, Netflix, On, TJX股市领导者：Meta、Netflix、On、TJX
----------------------------------------------------------------------
+Stock Market Leaders: Meta, Netflix, On, TJX
+--------------------------------------------
 
 
-Stock market leaders to watch include **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)), **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)), **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and **TJX Cos.** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)).  
-值得关注的股市领导者包括 **Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)）、**Netflix** （[NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)）、**On Holding** （[ONON](https://research.investors.com/quote.aspx?symbol=ONON)）、**Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)） 和 **TJX Cos.** （[TJX](https://research.investors.com/quote.aspx?symbol=TJX)）。
+Stock market leaders to watch include **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)), **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)), **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)), **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) and **TJX Cos.** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)).
 
 
-Meta stock, an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), briefly topped a 542.81 buy point before closing below it. Volume was below average on the breakout attempt.  
-Meta 股票是 [IBD SwingTrader 的一个想法](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)，在收于低于 542.81 的买入点之前一度突破。突破尝试的交易量低于平均水平。
+Meta stock, an [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader), briefly topped a 542.81 buy point before closing below it. Volume was below average on the breakout attempt.
 
 
-Netflix shares are trying to break out past a late-stage cup base's 697.49 buy point, but closed further below it during the session's 1.2% drop.  
-Netflix 股价正试图突破后期杯底的 697.49 买入点，但在盘中下跌 1.2% 期间收盘进一步低于该点。
+Netflix shares are trying to break out past a late-stage cup base's 697.49 buy point, but closed further below it during the session's 1.2% drop.
 
 
-[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-holding-stock-buy-point-birkenstock-birk/) closed back below a cup-with-handle entry at 43.20. Meanwhile, [Palo Alto Networks](https://www.investors.com/research/ibd-stock-of-the-day/palo-alto-stock-panw-earnings-report/) continues to pull back after this week's earnings-fueled surge. The cybersecurity leader is still above a 345.90 entry.  
-[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-holding-stock-buy-point-birkenstock-birk/)收于43.20的带手柄杯门口下方。与此同时，[Palo Alto Networks](https://www.investors.com/research/ibd-stock-of-the-day/palo-alto-stock-panw-earnings-report/) 在本周财报飙升后继续回落。这家网络安全领导者仍高于 345.90 的门槛。
+[On Holding](https://www.investors.com/research/ibd-stock-of-the-day/on-holding-stock-buy-point-birkenstock-birk/) closed back below a cup-with-handle entry at 43.20. Meanwhile, [Palo Alto Networks](https://www.investors.com/research/ibd-stock-of-the-day/palo-alto-stock-panw-earnings-report/) continues to pull back after this week's earnings-fueled surge. The cybersecurity leader is still above a 345.90 entry.
 
 
-This week, TJX gapped above a 115.34 flat-base entry. The stock triggered a [blue dot](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-use-these-marketsmith-features-to-catch-stock-market-leaders/) signal in its [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts during Wednesday's breakout.  
-本周，TJX 跳空突破 115.34 平底入场点。该股在周三的突破期间在其 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 图表中触发了蓝[点](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-use-these-marketsmith-features-to-catch-stock-market-leaders/)信号。
+This week, TJX gapped above a 115.34 flat-base entry. The stock triggered a [blue dot](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-use-these-marketsmith-features-to-catch-stock-market-leaders/) signal in its [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) charts during Wednesday's breakout.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082224.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082224.pdf)
 
 
-*Be sure to follow Scott Lehtonen on X/Twitter at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.  
-请务必在 X/Twitter 上关注 Scott Lehtonen，网址为 [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen)了解有关标准普尔 500 指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X/Twitter at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the S&P 500 and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
